--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/about.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/about">
     <title>Tentang Maroon Souvenir - Vendor Corporate Gift No.1 Malang & Malang Raya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Lebih dari sekadar vendor, kami adalah partner strategis Anda dalam menciptakan corporate gift yang berkesan.">
     <meta property="og:image" content="assets/about-team.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/about.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/about">
     <meta property="og:type" content="website">
 
     <!-- Schema Markup -->
@@ -36,7 +36,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Tentang Kami",
-        "item": "https://hampersmalang.web.id/about.html"
+        "item": "https://hampersmalang.web.id/about"
       }]
     }
     </script>
@@ -72,16 +72,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html" class="text-accent" style="font-weight: 700;">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about" class="text-accent" style="font-weight: 700;">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -96,7 +96,7 @@
     <header class="hero" style="padding-top: 80px; padding-bottom: 4rem; background: var(--muted);">
         <div class="container text-center">
             <ul class="breadcrumb">
-                <li><a href="index.html">Beranda</a></li>
+                <li><a href="./">Beranda</a></li>
                 <li>Tentang Kami</li>
             </ul>
             <h1 style="font-size: 2.5rem; margin-top: 1rem;">Partner Terpercaya <span class="text-accent">Pengadaan
@@ -374,22 +374,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -429,3 +429,4 @@
 </body>
 
 </html>
+
