--- a/beda-bahan-tumbler-stainless.html
+++ b/beda-bahan-tumbler-stainless.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/beda-bahan-tumbler-stainless.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/beda-bahan-tumbler-stainless">
     <title>Beda Bahan Tumbler Stainless SUS 304 vs 316: Mana yang Aman? | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -29,16 +29,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -56,7 +56,7 @@
             <h1 class="heading-lg" style="margin-bottom: 1rem;">Kupas Tuntas: Beda Bahan Tumbler Stainless SUS 304 vs
                 316</h1>
             <p style="color: var(--muted-foreground); margin-bottom: 2rem;">Ditulis oleh <strong>Tim Redaksi
-                    Maroon</strong> • 4 menit baca</p>
+                    Maroon</strong> â€¢ 4 menit baca</p>
 
             <img src="assets/cat-drinkware.png" alt="Stainless Steel Tumbler"
                 style="width: 100%; border-radius: 1rem; margin-bottom: 3rem;">
@@ -110,7 +110,7 @@
 
                 <div style="background: #F0FDF4; padding: 1.5rem; border-radius: 8px; margin-top: 2rem;">
                     <strong>Cari Tumbler SUS 304 Berkualitas?</strong>
-                    <br>Lihat koleksi lengkap kami di <a href="category-drinkware.html"
+                    <br>Lihat koleksi lengkap kami di <a href="category-drinkware"
                         style="color: var(--accent); font-weight: 700; text-decoration: underline;">Katalog Drinkware &
                         Tumbler</a>.
                 </div>
@@ -130,9 +130,9 @@
             <!-- Navigation -->
             <div
                 style="margin-top: 2rem; padding-top: 2rem; border-top: 1px solid var(--border); display: flex; justify-content: space-between;">
-                <a href="rekomendasi-souvenir-kantor-2026.html" class="btn btn-secondary"><i
+                <a href="rekomendasi-souvenir-kantor-2026" class="btn btn-secondary"><i
                         class="fa-solid fa-arrow-left"></i> Artikel Sebelumnya</a>
-                <a href="tips-memilih-paket-seminar.html" class="btn btn-secondary">Artikel Selanjutnya <i
+                <a href="tips-memilih-paket-seminar" class="btn btn-secondary">Artikel Selanjutnya <i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
 
