--- a/blog-3.html
+++ b/blog-3.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog-3.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-3">
     <title>Blog & Wawasan Souvenir Kantor - Page 3 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/blog-3.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/blog-3">
     <meta property="og:type" content="blog">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -71,7 +71,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog - Page 3</span>
@@ -95,11 +95,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFFBEB; color: #B45309;">OUTERWEAR</span>
-                            <h3 class="article-title"><a href="jaket-hoodie-kantor.html">Jaket Bomber & Hoodie Kantor:
+                            <h3 class="article-title"><a href="jaket-hoodie-kantor">Jaket Bomber & Hoodie Kantor:
                                     Seragam Hits Gen Z</a></h3>
                             <p class="article-excerpt">Tinggalkan blazer kaku! Saatnya beralih ke Bomber Jacket yang
                                 stylish dan Hoodie yang nyaman untuk tim startup Anda.</p>
-                            <a href="jaket-hoodie-kantor.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="jaket-hoodie-kantor" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -111,11 +111,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #EFF6FF; color: #1E40AF;">SERAGAM KANTOR</span>
-                            <h3 class="article-title"><a href="kaos-polo-bordir.html">Polo Shirt Custom Bordir: Seragam
+                            <h3 class="article-title"><a href="kaos-polo-bordir">Polo Shirt Custom Bordir: Seragam
                                     Gathering yang Elegan</a></h3>
                             <p class="article-excerpt">Bingung bedanya bahan Lacoste PE dengan Lacoste CVC? Simak
                                 panduan memilih kain polo shirt yang adem dan awet disini.</p>
-                            <a href="kaos-polo-bordir.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="kaos-polo-bordir" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -127,11 +127,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFFBEB; color: #B45309;">CATALOG</span>
-                            <h3 class="article-title"><a href="tas-goodie-bag.html">Katalog Goodie Bag Promosi:
+                            <h3 class="article-title"><a href="tas-goodie-bag">Katalog Goodie Bag Promosi:
                                     Spunbond, Blacu & Kanvas</a></h3>
                             <p class="article-excerpt">Cari pengganti kantong plastik? Bandingkan kekuatan Tas Spunbond
                                 Press vs Jahit dan kemewahan Tote Bag Blacu di sini.</p>
-                            <a href="tas-goodie-bag.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="tas-goodie-bag" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -143,11 +143,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFF7ED; color: #C2410C;">APPAREL PILLAR</span>
-                            <h3 class="article-title"><a href="konveksi-seragam-kaos.html">Vendor Kaos Promosi, Polo
+                            <h3 class="article-title"><a href="konveksi-seragam-kaos">Vendor Kaos Promosi, Polo
                                     Shirt & Seragam Kantor Terpercaya</a></h3>
                             <p class="article-excerpt">Panduan lengkap produksi seragam: Pilih bahan Cotton Combed atau
                                 Lacoste? Bordir atau Sablon? Temukan jawabannya di sini.</p>
-                            <a href="konveksi-seragam-kaos.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="konveksi-seragam-kaos" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -159,11 +159,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">OFFICE SETUP</span>
-                            <h3 class="article-title"><a href="desk-accessories-custom.html">Desk Accessories Custom:
+                            <h3 class="article-title"><a href="desk-accessories-custom">Desk Accessories Custom:
                                     Mousepad, Phone Holder & Humidifier</a></h3>
                             <p class="article-excerpt">Jadikan meja kerja klien lebih estetik dan produktif dengan
                                 Deskmat Full Print, Stand HP Ergonomis, dan Humidifier Logo.</p>
-                            <a href="desk-accessories-custom.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="desk-accessories-custom" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -176,11 +176,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E0E7FF; color: #3730A3;">SOUVENIR
                                 GADGET</span>
-                            <h3 class="article-title"><a href="souvenir-gadget-elektronik.html">Souvenir Gadget Kantor &
+                            <h3 class="article-title"><a href="souvenir-gadget-elektronik">Souvenir Gadget Kantor &
                                     Elektronik Premium (Garansi Resmi)</a></h3>
                             <p class="article-excerpt">Panduan lengkap memilih Powerbank, Flashdisk, dan Speaker
                                 Bluetooth yang aman. Jangan pertaruhkan nama baik perusahaan dengan barang palsu.</p>
-                            <a href="souvenir-gadget-elektronik.html" class="article-read-more">Baca Panduan Lengkap <i
+                            <a href="souvenir-gadget-elektronik" class="article-read-more">Baca Panduan Lengkap <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -192,11 +192,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">EVENT ESSENTIALS</span>
-                            <h3 class="article-title"><a href="id-card-lanyard.html">Cetak ID Card & Tali Lanyard
+                            <h3 class="article-title"><a href="id-card-lanyard">Cetak ID Card & Tali Lanyard
                                     Custom: Identitas Event Profesional</a></h3>
                             <p class="article-excerpt">Lanyard bukan sekadar gantungan. Pelajari beda bahan Tissue vs
                                 Polyester dan tips desain ID Card yang efektif.</p>
-                            <a href="id-card-lanyard.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="id-card-lanyard" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -208,11 +208,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">OFFICE STATIONERY</span>
-                            <h3 class="article-title"><a href="pulpen-promosi-custom.html">Pulpen Promosi Custom:
+                            <h3 class="article-title"><a href="pulpen-promosi-custom">Pulpen Promosi Custom:
                                     Strategi Branding Murah & Efektif</a></h3>
                             <p class="article-excerpt">Mengulik jenis pulpen untuk souvenir: dari pulpen plastik untuk
                                 massal hingga pen metal grafir untuk hadiah VIP.</p>
-                            <a href="pulpen-promosi-custom.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="pulpen-promosi-custom" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -224,25 +224,25 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">OFFICE STATIONERY</span>
-                            <h3 class="article-title"><a href="buku-agenda-notebook.html">Cetak Buku Agenda Custom:
+                            <h3 class="article-title"><a href="buku-agenda-notebook">Cetak Buku Agenda Custom:
                                     Pilihan Notebook Kulit & Hardcover</a></h3>
                             <p class="article-excerpt">Pilihan tepat untuk souvenir akhir tahun. Agenda kerja
                                 profesional dengan logo emboss yang elegan.</p>
-                            <a href="buku-agenda-notebook.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="buku-agenda-notebook" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog-2.html" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
-                        <a href="blog.html" class="page-link">1</a>
-                        <a href="blog-2.html" class="page-link">2</a>
-                        <a href="blog-3.html" class="page-link active">3</a>
-                        <a href="blog-4.html" class="page-link">4</a>
-                        <a href="blog-5.html" class="page-link">5</a>
-                        <a href="blog-6.html" class="page-link">6</a>
-                        <a href="blog-4.html" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        <a href="blog-2" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
+                        <a href="blog" class="page-link">1</a>
+                        <a href="blog-2" class="page-link">2</a>
+                        <a href="blog-3" class="page-link active">3</a>
+                        <a href="blog-4" class="page-link">4</a>
+                        <a href="blog-5" class="page-link">5</a>
+                        <a href="blog-6" class="page-link">6</a>
+                        <a href="blog-4" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
                     </div>
                 </div>
 
@@ -265,13 +265,13 @@
                         <div class="widget-card" style="margin-top: 2rem;">
                             <h3 class="widget-title">Kategori Populer</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Drinkware & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Seminar Kits</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Premium Gifts</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Eco-Friendly</a></li>
                             </ul>
                         </div>
@@ -307,22 +307,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -362,3 +362,4 @@
 </body>
 
 </html>
+
