--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/category-lifestyle.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-lifestyle">
     <title>Souvenir Lifestyle & Apparel Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan brand awareness dengan souvenir yang dipakai sehari-hari. Tas, Payung, Apparel, Pouch. Kualitas Premium.">
     <meta property="og:image" content="assets/cat-lifestyle.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/category-lifestyle.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-lifestyle">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html" class="text-accent" style="font-weight: 700;">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products" class="text-accent" style="font-weight: 700;">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -57,8 +57,8 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <ul class="breadcrumb" style="justify-content: start; margin-bottom: 2rem;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="products.html">Katalog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="products">Katalog</a></li>
                     <li>Lifestyle & Daily</li>
                 </ul>
                 <span class="badge badge-pink" style="margin-bottom: 1rem;">Daily Use</span>
@@ -101,7 +101,7 @@
                     <div class="flex items-center gap-4" style="margin-bottom: 1rem;">
                         <span class="card-icon" style="margin: 0; width: 50px; height: 50px; font-size: 1.2rem;"><i
                                 class="fa-solid fa-bag-shopping text-accent"></i></span>
-                        <h3 style="margin: 0;"><a href="tas-goodie-bag.html"
+                        <h3 style="margin: 0;"><a href="tas-goodie-bag"
                                 style="color: inherit; text-decoration: none;">Bags, Totebag & Backpack</a></h3>
                     </div>
                     <p style="margin-bottom: 1.5rem; color: var(--muted-foreground);">
@@ -158,12 +158,12 @@
                     <div class="flex items-center gap-4" style="margin-bottom: 1rem;">
                         <span class="card-icon" style="margin: 0; width: 50px; height: 50px; font-size: 1.2rem;"><i
                                 class="fa-solid fa-shirt text-accent"></i></span>
-                        <h3 style="margin: 0;"><a href="konveksi-seragam-kaos.html"
+                        <h3 style="margin: 0;"><a href="konveksi-seragam-kaos"
                                 style="color: inherit; text-decoration: none;">Apparel & Seragam</a></h3>
                     </div>
                     <p style="margin-bottom: 1.5rem; color: var(--muted-foreground);">
                         Tingkatkan kekompakan tim dengan seragam berkualitas. Kami memproduksi Kaos Polo (Lacoste),
-                        Kemeja PDH, Jaket Bomber/Varsity, dan <a href="topi-promosi-custom.html"
+                        Kemeja PDH, Jaket Bomber/Varsity, dan <a href="topi-promosi-custom"
                             style="color: var(--accent); text-decoration: none; font-weight: 600;">Topi</a> dengan
                         detail bordir komputer presisi.
                     </p>
@@ -215,7 +215,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Souvenir Lifestyle & Apparel",
       "description": "Koleksi souvenir daily use custom logo. Tas, Payung, Kaos Polo, dan Pouch Organizer.",
-      "url": "https://hampersmalang.web.id/category-lifestyle.html",
+      "url": "https://hampersmalang.web.id/category-lifestyle",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -330,7 +330,7 @@
 
             <div class="grid grid-cols-1 md-grid-cols-3 gap-6">
                 <!-- Related 1: Gadget -->
-                <a href="category-gadget.html" class="card hover-zoom"
+                <a href="category-gadget" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-tech.png" alt="Gadget & Tech Souvenir"
@@ -344,7 +344,7 @@
                 </a>
 
                 <!-- Related 2: Drinkware -->
-                <a href="category-drinkware.html" class="card hover-zoom"
+                <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
@@ -358,7 +358,7 @@
                 </a>
 
                 <!-- Related 3: Eco Green -->
-                <a href="category-eco.html" class="card hover-zoom"
+                <a href="category-eco" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-eco.png" alt="Eco Friendly Souvenir"
@@ -412,22 +412,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -467,3 +467,4 @@
 </body>
 
 </html>
+
