--- a/etika-memberi-cinderamata-sidang-disertasi.html
+++ b/etika-memberi-cinderamata-sidang-disertasi.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi">
     <title>Etika Memberi Cinderamata pada Sidang Terbuka / Tertutup Disertasi | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Menghindari gratifikasi sambil tetap menunjukkan apresiasi. Simak panduan budget dan packaging yang tepat untuk momen doktoral Anda.">
     <meta property="og:image" content="assets/etika-cinderamata-sidang.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -267,16 +267,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -291,11 +291,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-promosi-doktor-guru-besar.html" style="text-decoration: none; color: #64748B;">Promosi
+                <a href="souvenir-promosi-doktor-guru-besar" style="text-decoration: none; color: #64748B;">Promosi
                     Doktor</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #b45309; font-weight: 700;">Etika Souvenir</span>
@@ -372,7 +372,7 @@
                         <strong>Sweet Spot Budget:</strong> Rp 300.000 hingga Rp 750.000 per paket.
                     </p>
                     <p>
-                        Di rentang harga ini, Anda bisa mendapatkan <a href="souvenir-promosi-doktor-guru-besar.html"
+                        Di rentang harga ini, Anda bisa mendapatkan <a href="souvenir-promosi-doktor-guru-besar"
                             style="color: #b45309; font-weight: 600;">Gift Set Eksklusif</a> seperti Powerbank kulit,
                         Tumbler suhu grafir, atau Agenda dengan kertas premium. Nilainya terletak pada <em>kegunaan</em>
                         dan <em>personalisasi</em>, bukan pada harga bandrolnya.
@@ -429,7 +429,7 @@
                             <img src="assets/gift-set-cum-laude.png" alt="Paket Souvenir Cum Laude"
                                 style="width: 100%; border-radius: 8px;">
                         </figure>
-                        <a href="souvenir-promosi-doktor-guru-besar.html" class="btn"
+                        <a href="souvenir-promosi-doktor-guru-besar" class="btn"
                             style="background: #b45309; color: white; display: inline-block; text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; font-weight: bold;">
                             Lihat Detail Paket Cum Laude <i class="fa-solid fa-arrow-right"></i>
                         </a>
@@ -532,11 +532,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Etika%20Souvenir%20Sidang%20Disertasi%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi.html"
+                        <a href="https://wa.me/?text=Etika%20Souvenir%20Sidang%20Disertasi%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fetika-memberi-cinderamata-sidang-disertasi"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -577,11 +577,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-gift"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Executive Sets</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook.html"><i
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i
                                             class="fa-solid fa-book"></i> Hardcover Agenda</a></li>
-                                <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar.html"><i
+                                <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar"><i
                                             class="fa-solid fa-user-graduate"></i> Souvenir Doktor</a></li>
                             </ul>
                         </div>
@@ -597,14 +597,14 @@
                                     alt="Ide Souvenir Doktor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">7
                                             Ide Souvenir Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi hadiah penguji.
                                     </p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -615,13 +615,13 @@
                                     alt="Cinderamata Eksklusif">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-kantor-eksklusif.html"
+                                            href="merchandise-kantor-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Merchandise
                                             Eksklusif</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk momen spesial.</p>
-                                    <a href="merchandise-kantor-eksklusif.html"
+                                    <a href="merchandise-kantor-eksklusif"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -632,13 +632,13 @@
                                     alt="Teknis Grafir">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="cetak-logo-custom-satuan-grosir.html"
+                                            href="cetak-logo-custom-satuan-grosir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Teknis
                                             Grafir Nama</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Supaya nama tidak salah.</p>
-                                    <a href="cetak-logo-custom-satuan-grosir.html"
+                                    <a href="cetak-logo-custom-satuan-grosir"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -672,21 +672,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -777,3 +777,5 @@
 </body>
 
 </html>
+
+
