--- a/id-card-lanyard.html
+++ b/id-card-lanyard.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/id-card-lanyard.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/id-card-lanyard">
     <title>Cetak ID Card & Tali Lanyard Custom: Identitas Event Profesional | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Lanyard bukan sekadar gantungan, tapi simbol identitas. Temukan perbedaan bahan Lanyard Tissue vs Polyester dan cara memilih ID Card Holder yang awet.">
     <meta property="og:image" content="assets/seminar-basic.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/id-card-lanyard.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/id-card-lanyard">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">ID Card & Lanyard</span>
             </nav>
@@ -391,7 +391,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Cari Lanyard Murah?</h4>
                         <p style="margin-bottom: 0;">
                             Jika Anda mencari opsi lanyard ekonomis untuk acara kampus atau sekolah dalam jumlah banyak,
-                            cek <a href="paket-seminar-kit-basic.html"
+                            cek <a href="paket-seminar-kit-basic"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Paket Seminar Kit
                                 Basic</a> yang ramah kantong.
                         </p>
@@ -465,7 +465,7 @@
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Integrasi Event:</h4>
                         <p style="margin-bottom: 0;">
                             Pelajari bagaimana ID Card yang profesional menjadi bagian tak terpisahkan dari strategi
-                            merchandise event Anda di <a href="panduan-lengkap-seminar-kit.html"
+                            merchandise event Anda di <a href="panduan-lengkap-seminar-kit"
                                 style="text-decoration: underline; color: #16A34A; font-weight: 700;">Panduan Lengkap
                                 Memilih Seminar Kit</a>.
                         </p>
@@ -552,7 +552,7 @@
                                         style="color: white; font-size: 1.25rem; margin-bottom: 0.5rem; font-weight: 800;">
                                         <i class="fa-brands fa-whatsapp"></i> ORDER LANYARD KILAT
                                     </h3>
-                                    <p style="margin:0; font-size: 0.95rem; opacity: 0.9;">Bisa Ditunggu (S&K Berlaku) •
+                                    <p style="margin:0; font-size: 0.95rem; opacity: 0.9;">Bisa Ditunggu (S&K Berlaku) â€¢
                                         Kualitas HD Printing</p>
                                 </div>
                             </div>
@@ -561,11 +561,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Cetak%20Lanyard%20Custom%20Satuan%20Grosir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard.html"
+                        <a href="https://wa.me/?text=Cetak%20Lanyard%20Custom%20Satuan%20Grosir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fid-card-lanyard"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -606,11 +606,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-user-tie"></i> Souvenir Kantor</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom.html"><i
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
                                             class="fa-solid fa-pen"></i> Pulpen Promosi</a></li>
                             </ul>
                         </div>
@@ -626,14 +626,14 @@
                                     alt="Paket Seminar Basic">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Isi
                                             Seminar Kit Basic</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Paket hemat termasuk
                                         nametag.</p>
-                                    <a href="paket-seminar-kit-basic.html"
+                                    <a href="paket-seminar-kit-basic"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -644,14 +644,14 @@
                                     alt="Panduan Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Lengkap Seminar Kit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Kenali item wajib selain
                                         lanyard.</p>
-                                    <a href="panduan-lengkap-seminar-kit.html"
+                                    <a href="panduan-lengkap-seminar-kit"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -662,14 +662,14 @@
                                     alt="Pulpen Custom">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="pulpen-promosi-custom.html"
+                                            href="pulpen-promosi-custom"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Cetak
                                             Pulpen Promosi</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Souvenir kecil pelengkap ID
                                         Card.</p>
-                                    <a href="pulpen-promosi-custom.html"
+                                    <a href="pulpen-promosi-custom"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -703,21 +703,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -808,3 +808,5 @@
 </body>
 
 </html>
+
+
