--- a/kelebihan-mug-keramik.html
+++ b/kelebihan-mug-keramik.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/kelebihan-mug-keramik.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/kelebihan-mug-keramik">
     <title>Mug Keramik Custom: Souvenir Klasik & Elegan untuk Branding Abadi | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan alasan mengapa mug keramik memiliki 'Lifetime Value' tertinggi dibanding merchandise lainnya untuk branding perusahaan.">
     <meta property="og:image" content="assets/drinkware-mug.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/kelebihan-mug-keramik.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/kelebihan-mug-keramik">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (FAQ & Article) -->
@@ -262,16 +262,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -286,9 +286,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Kelebihan Mug Keramik</span>
             </nav>
@@ -351,7 +351,7 @@
                         Sebuah studi psikologi perilaku menunjukkan bahwa <strong>60% orang dewasa memiliki ikatan
                             emosional dengan mug tertentu</strong> yang mereka gunakan sehari-hari. Fenomena ini disebut
                         sebagai <em>"Endowment Effect"</em>, di mana seseorang merasa memiliki nilai lebih pada benda
-                        yang mereka gunakan secara rutin untuk ritual pribadi—dalam hal ini, minum kopi atau teh.
+                        yang mereka gunakan secara rutin untuk ritual pribadiâ€”dalam hal ini, minum kopi atau teh.
                     </p>
 
                     <p>
@@ -393,7 +393,7 @@
                     <p>
                         Mug keramik memiliki massa jenis yang padat, memungkinkannya menyerap dan menyimpan panas dengan
                         baik. Meskipun tidak setahan lama tumbler vacuum (yang bisa 12 jam), mug keramik memberikan
-                        sensasi hangat yang nyaman di genggaman tangan—sebuah fitur "comfort" yang dicari saat cuaca
+                        sensasi hangat yang nyaman di genggaman tanganâ€”sebuah fitur "comfort" yang dicari saat cuaca
                         dingin atau ruangan ber-AC kencang.
                     </p>
 
@@ -410,7 +410,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Ingin opsi yang lebih modern dan tahan pecah? Simak perbandingan
-                        kami tentang <a href="tumbler-stainless-vacuum.html"
+                        kami tentang <a href="tumbler-stainless-vacuum"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Mengenal Teknologi
                             Tumbler Stainless Vacuum</a> untuk karyawan lapangan.
                     </div>
@@ -426,7 +426,7 @@
                     <h3>Decal Bakar (Kiln Fired) - The Premium Choice</h3>
                     <p>
                         Ini adalah teknik "Old School" yang paling awet. Logo Anda dicetak pada kertas transfer khusus,
-                        ditempel ke mug, lalu <strong>dibakar dalam oven raksasa pada suhu 700°C - 800°C</strong>.
+                        ditempel ke mug, lalu <strong>dibakar dalam oven raksasa pada suhu 700Â°C - 800Â°C</strong>.
                     </p>
                     <ul>
                         <li><strong>Kelebihan:</strong> Logo menyatu dengan pori-pori keramik. Tahan gores, tahan cuci
@@ -609,7 +609,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Melengkapi mug dengan perlengkapan rapat lainnya? Baca panduan kami
-                        tentang <a href="paket-seminar-kit-basic.html"
+                        tentang <a href="paket-seminar-kit-basic"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Ide Isi Paket Seminar
                             Kit Basic di Bawah 50 Ribu</a>.
                     </div>
@@ -677,12 +677,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Baca%20artikel%20tentang%20Mug%20Keramik%20Custom%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik.html"
+                        <a href="https://wa.me/?text=Baca%20artikel%20tentang%20Mug%20Keramik%20Custom%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkelebihan-mug-keramik"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -725,11 +725,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Sering Dibeli Bersama</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Aneka Tumbler Stainless</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Souvenir Eco-Friendly</a></li>
                             </ul>
                         </div>
@@ -745,7 +745,7 @@
                                     alt="Tumbler Custom">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-tumbler-botol.html"
+                                            href="souvenir-tumbler-botol"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Tumbler (Lengkap)</a></h4>
                                     <span
@@ -760,7 +760,7 @@
                                     alt="Botol Sport">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="botol-sport-aluminium.html"
+                                            href="botol-sport-aluminium"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Botol
                                             Sport Aluminium Outdoor</a></h4>
                                 </div>
@@ -773,7 +773,7 @@
                                     alt="Vacuum Tech">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-stainless-vacuum.html"
+                                            href="tumbler-stainless-vacuum"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Teknologi
                                             Tumbler Vacuum</a></h4>
                                 </div>
@@ -811,22 +811,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -921,3 +921,5 @@
 </body>
 
 </html>
+
+
