--- a/merchandise-perusahaan-bisnis.html
+++ b/merchandise-perusahaan-bisnis.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-perusahaan-bisnis.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-perusahaan-bisnis">
     <title>Jasa Pembuatan Merchandise Perusahaan & Logo Bisnis Custom | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Strategi branding efektif lewat merchandise kantor custom. Temukan ide barang promosi yang elegan dan fungsional untuk klien.">
     <meta property="og:image" content="assets/merchandise-perusahaan-bisnis.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-perusahaan-bisnis.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-perusahaan-bisnis">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,9 +298,9 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #0f172a; font-weight: 700;">Merchandise Perusahaan</span>
             </nav>
@@ -335,7 +335,7 @@
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Dalam dunia bisnis yang kompetitif, <em>Brand Awareness</em> adalah mata uang yang paling
                         berharga. Salah satu cara paling efektif dan elegan untuk menanamkan citra perusahaan di benak
-                        klien adalah melalui <a href="merchandise-perusahaan-bisnis.html"
+                        klien adalah melalui <a href="merchandise-perusahaan-bisnis"
                             style="text-decoration: underline; color: #0f172a; font-weight: 700;">Merchandise Perusahaan
                             & Bisnis</a> yang berkualitas.
                     </p>
@@ -370,7 +370,7 @@
                     <ul>
                         <li><strong>Tangible Connection:</strong> Berbeda dengan iklan digital yang hilang dalam
                             hitungan detik, merchandise fisik bisa disentuh dan digunakan bertahun-tahun.</li>
-                        <li><strong>Employee Pride:</strong> Memberikan <a href="merchandise-kantor-eksklusif.html"
+                        <li><strong>Employee Pride:</strong> Memberikan <a href="merchandise-kantor-eksklusif"
                                 style="color: #0f172a; font-weight: 600;">Merchandise Kantor Eksklusif</a> kepada
                             karyawan (Onboarding Kit) akan meningkatkan rasa bangga dan loyalitas mereka terhadap
                             perusahaan.</li>
@@ -395,7 +395,7 @@
                         jika logo perusahaan Anda mudah terkelupas atau pudar dalam sebulan.
                     </p>
                     <p>
-                        Maroon Souvenir mengutamakan presisi dalam <a href="cetak-logo-custom-satuan-grosir.html"
+                        Maroon Souvenir mengutamakan presisi dalam <a href="cetak-logo-custom-satuan-grosir"
                             style="color: #0f172a; font-weight: 600;">Cetak Logo Custom Satuan & Grosir</a>. Kami
                         menyesuaikan teknik branding dengan material produk:
                     </p>
@@ -458,7 +458,7 @@
                     </ul>
                     <p>
                         Maroon Souvenir telah dipercaya oleh ratusan perusahaan BUMN dan Swasta Nasional untuk menangani
-                        kebutuhan <a href="merchandise-promosi-branding.html"
+                        kebutuhan <a href="merchandise-promosi-branding"
                             style="color: #0f172a; font-weight: 600;">Merchandise Promosi & Branding</a> mereka sejak
                         2012.
                     </p>
@@ -467,13 +467,13 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #f1f5f9; border-left: 4px solid #334155; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #0f172a; margin-bottom: 1rem;">Eksplorasi Lebih Lanjut:</h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="merchandise-promosi-branding.html"
+                            <li><a href="merchandise-promosi-branding"
                                     style="color: #334155; font-weight: 600;">Strategi Merchandise Promosi & Branding
                                     Efektif</a></li>
-                            <li><a href="merchandise-kantor-eksklusif.html"
+                            <li><a href="merchandise-kantor-eksklusif"
                                     style="color: #334155; font-weight: 600;">Katalog Merchandise Kantor Eksklusif</a>
                             </li>
-                            <li><a href="cetak-logo-custom-satuan-grosir.html"
+                            <li><a href="cetak-logo-custom-satuan-grosir"
                                     style="color: #334155; font-weight: 600;">Info Jasa Cetak Logo Custom</a></li>
                         </ul>
                     </div>
@@ -583,11 +583,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Jasa%20Pembuatan%20Merchandise%20Perusahaan%20Profesional%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://wa.me/?text=Jasa%20Pembuatan%20Merchandise%20Perusahaan%20Profesional%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -628,13 +628,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Solusi Bisnis</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set VIP</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-file-powerpoint"></i> Seminar Supplies</a></li>
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Agenda Kerja</a></li>
-                                <li class="cat-item"><a href="souvenir-tumbler-botol.html"><i
+                                <li class="cat-item"><a href="souvenir-tumbler-botol"><i
                                             class="fa-solid fa-flask"></i> Drinkware Branding</a></li>
                             </ul>
                         </div>
@@ -650,13 +650,13 @@
                                     alt="Vendor Profesional">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="vendor-souvenir-kantor-profesional.html"
+                                            href="vendor-souvenir-kantor-profesional"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ciri
                                             Vendor Pro</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tips memilih mitra.</p>
-                                    <a href="vendor-souvenir-kantor-profesional.html"
+                                    <a href="vendor-souvenir-kantor-profesional"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -668,13 +668,13 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-nasional-internasional.html"
+                                            href="paket-seminar-nasional-internasional"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Solusi event kantor.</p>
-                                    <a href="paket-seminar-nasional-internasional.html"
+                                    <a href="paket-seminar-nasional-internasional"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -686,13 +686,13 @@
                                     alt="Premium Gift">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Hadiah
                                             Eksklusif</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Klien VIP.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -726,21 +726,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -831,3 +831,5 @@
 </body>
 
 </html>
+
+
