--- a/onboarding-kit-karyawan.html
+++ b/onboarding-kit-karyawan.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/onboarding-kit-karyawan.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/onboarding-kit-karyawan">
     <title>Onboarding Kit Karyawan Perusahaan: Sambut Tim Baru dengan Berkesan | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Mengapa memberikan merchandise di hari pertama kerja itu penting? Temukan ide isi Welcome Kit yang efektif di sini.">
     <meta property="og:image" content="assets/onboarding-kit-karyawan.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/onboarding-kit-karyawan.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/onboarding-kit-karyawan">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -271,16 +271,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -295,11 +295,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="katalog-souvenir-event-perusahaan.html" style="text-decoration: none; color: #64748B;">Event
+                <a href="katalog-souvenir-event-perusahaan" style="text-decoration: none; color: #64748B;">Event
                     Guide</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #0f172a; font-weight: 700;">Onboarding Kit</span>
@@ -344,7 +344,7 @@
                     </p>
 
                     <p>
-                        Sebagai bagian dari seri <a href="katalog-souvenir-event-perusahaan.html"
+                        Sebagai bagian dari seri <a href="katalog-souvenir-event-perusahaan"
                             style="text-decoration: underline; color: #3b82f6; font-weight: 700;">Panduan Event
                             Perusahaan</a>, artikel ini akan mengupas tuntas apa saja yang harus ada di dalam kotak
                         tersebut.
@@ -388,9 +388,9 @@
 
                     <h3>a. The Essentials (Wajib Ada)</h3>
                     <ul>
-                        <li><a href="id-card-lanyard.html" style="font-weight:700; color:#3b82f6;">Lanyard & ID Card
+                        <li><a href="id-card-lanyard" style="font-weight:700; color:#3b82f6;">Lanyard & ID Card
                                 Holder:</a> Identitas utama akses kantor.</li>
-                        <li><a href="buku-agenda-kerja.html" style="font-weight:700; color:#3b82f6;">Notebook
+                        <li><a href="buku-agenda-kerja" style="font-weight:700; color:#3b82f6;">Notebook
                                 Hardcover:</a> Untuk mencatat hal-hal penting selama masa training.</li>
                         <li><strong>Pulpen Metal/Stylus:</strong> Jangan berikan pulpen plastik murah yang macet.
                             Berikan pulpen yang enak dipakai mencatat.</li>
@@ -417,9 +417,9 @@
 
                     <h3>b. The Lifestyle (Peningkat Kualitas Kerja)</h3>
                     <ul>
-                        <li><a href="tumbler-stainless-vacuum.html" style="font-weight:700; color:#3b82f6;">Tumbler
+                        <li><a href="tumbler-stainless-vacuum" style="font-weight:700; color:#3b82f6;">Tumbler
                                 Vacuum:</a> Menjaga hidrasi dengan air dingin/panas di meja kerja.</li>
-                        <li><a href="kaos-polo-bordir.html" style="font-weight:700; color:#3b82f6;">Kaos Polo
+                        <li><a href="kaos-polo-bordir" style="font-weight:700; color:#3b82f6;">Kaos Polo
                                 Bordir:</a> Seragam semi-formal yang nyaman untuk dipakai di hari Jumat atau acara
                             gathering.</li>
                         <li><strong>Stiker Laptop:</strong> Item kecil namun sangat disukai anak muda untuk menghias
@@ -451,7 +451,7 @@
                         Jangan lupa menyertakan kartu ucapan selamat datang. "Welcome to the Team, [Nama Karyawan]!".
                         Sentuhan personalisasi nama pada Tumbler atau Agenda juga sangat kami sarankan. Di Maroon
                         Souvenir, kami bisa melakukan custom nama per pcs untuk pesanan <a
-                            href="category-executive.html" style="text-decoration:underline;">Executive Gift Set</a>.
+                            href="category-executive" style="text-decoration:underline;">Executive Gift Set</a>.
                     </p>
 
                     <div
@@ -460,11 +460,11 @@
                         <p style="margin-bottom: 0.5rem;">Selain karyawan baru, jangan lupa persiapkan souvenir untuk
                             event penting lainnya:</p>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="hampers-lebaran-perusahaan.html"
+                            <li><a href="hampers-lebaran-perusahaan"
                                     style="color: #0284c7; font-weight: 600;">Hampers Lebaran & Hari Raya</a></li>
-                            <li><a href="souvenir-akhir-tahun-kalender.html"
+                            <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #0284c7; font-weight: 600;">Souvenir Akhir Tahun (Kalender)</a></li>
-                            <li><a href="souvenir-promosi-doktor-guru-besar.html"
+                            <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #0284c7; font-weight: 600;">Souvenir Promosi Doktor</a></li>
                         </ul>
                     </div>
@@ -569,11 +569,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20Onboarding%20Kit%20Karyawan%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan.html"
+                        <a href="https://wa.me/?text=Ide%20Onboarding%20Kit%20Karyawan%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fonboarding-kit-karyawan"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -614,13 +614,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Isi Paket Populer</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Notebook / Agenda</a></li>
-                                <li class="cat-item"><a href="tumbler-stainless-vacuum.html"><i
+                                <li class="cat-item"><a href="tumbler-stainless-vacuum"><i
                                             class="fa-solid fa-mug-hot"></i> Tumbler Vacuum</a></li>
-                                <li class="cat-item"><a href="id-card-lanyard.html"><i class="fa-solid fa-id-card"></i>
+                                <li class="cat-item"><a href="id-card-lanyard"><i class="fa-solid fa-id-card"></i>
                                         Lanyard Card</a></li>
-                                <li class="cat-item"><a href="kaos-polo-bordir.html"><i class="fa-solid fa-tshirt"></i>
+                                <li class="cat-item"><a href="kaos-polo-bordir"><i class="fa-solid fa-tshirt"></i>
                                         Kaos Polo</a></li>
                             </ul>
                         </div>
@@ -636,13 +636,13 @@
                                     alt="Event Guide">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="katalog-souvenir-event-perusahaan.html"
+                                            href="katalog-souvenir-event-perusahaan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Event Kantor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Lihat Semua Event.</p>
-                                    <a href="katalog-souvenir-event-perusahaan.html"
+                                    <a href="katalog-souvenir-event-perusahaan"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -653,13 +653,13 @@
                                     alt="Executive">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="category-executive.html"
+                                            href="category-executive"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Katalog
                                             Eksklusif</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pilihan Premium.</p>
-                                    <a href="category-executive.html"
+                                    <a href="category-executive"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -671,13 +671,13 @@
                                     alt="RUPS">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-rups-saham.html"
+                                            href="souvenir-rups-saham"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             RUPS</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Shareholder.</p>
-                                    <a href="souvenir-rups-saham.html"
+                                    <a href="souvenir-rups-saham"
                                         style="font-size: 0.8rem; color: #0f172a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -711,21 +711,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -816,3 +816,5 @@
 </body>
 
 </html>
+
+
