--- a/rekomendasi-souvenir-kantor-2026.html
+++ b/rekomendasi-souvenir-kantor-2026.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026">
     <title>Rekomendasi Souvenir Kantor 2026: Tren & Ide Produk Paling Dicari | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan ketinggalan zaman! Simak 7 tren utama merchandise perusahaan yang akan mendominasi tahun 2026.">
     <meta property="og:image" content="assets/cat-executive.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -402,7 +402,7 @@
 
     <!-- Sticky Share for Desktop -->
     <div class="sticky-share">
-        <a href="https://wa.me/?text=Tren%20Souvenir%20Kantor%202026%3A%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+        <a href="https://wa.me/?text=Tren%20Souvenir%20Kantor%202026%3A%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026"
             class="share-icon bg-wa" title="Share ke WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
         <a href="#" class="share-icon bg-fb" title="Share ke Facebook"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="#" class="share-icon bg-li" title="Share ke LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -411,16 +411,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -435,9 +435,9 @@
     <div style="background: #F8FAFC; padding: 2.5rem 0 1.5rem; margin-top: 60px; border-bottom: 1px solid #e2e8f0;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748b; margin-bottom: 0.75rem;">
-                <a href="index.html" style="text-decoration: none; color: inherit;">Home</a>
+                <a href="./" style="text-decoration: none; color: inherit;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: inherit;">Blog & Wawasan</a>
+                <a href="blog" style="text-decoration: none; color: inherit;">Blog & Wawasan</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Tren 2026</span>
             </nav>
@@ -535,7 +535,7 @@
                     <!-- Contextual Link -->
                     <div style="background: #f0fdf4; border-left: 4px solid #22c55e; padding: 1.5rem; margin: 2rem 0;">
                         <strong>Ingin beralih ke Sustainable Gift?</strong> Lihat koleksi lengkap ramah lingkungan kami
-                        di halaman <a href="souvenir-ramah-lingkungan.html"
+                        di halaman <a href="souvenir-ramah-lingkungan"
                             style="color: #15803d; font-weight: 700; text-decoration: underline;">Katalog
                             Eco-Friendly</a>.
                     </div>
@@ -579,13 +579,13 @@
 
                     <h3>C. Ergonomic Desk Accessories</h3>
                     <p>
-                        Mendukung kesehatan postur saat WFA sangat penting. <a href="desk-accessories-custom.html"
+                        Mendukung kesehatan postur saat WFA sangat penting. <a href="desk-accessories-custom"
                             style="text-decoration: underline; color: var(--accent); font-weight: 700;">Laptop Stand &
                             Mousepad Custom</a> membantu menciptakan ruang kerja yang nyaman di mana saja.
                     </p>
 
                     <!-- Contextual Link Gadget -->
-                    <p>Cari inspirasi gadget lainnya? Kunjungi <a href="category-gadget.html"
+                    <p>Cari inspirasi gadget lainnya? Kunjungi <a href="category-gadget"
                             style="color: var(--accent); font-weight: 700;">Halaman Kategori Tech & Electronics</a>.</p>
 
                     <!-- Promo Banner -->
@@ -599,14 +599,14 @@
                     <p>Isu kesehatan mental menjadi prioritas HRD. Souvenir yang menenangkan (calming) dan mendukung
                         kesehatan fisik akan sangat dihargai.</p>
                     <ul>
-                        <li><a href="desk-accessories-custom.html"
+                        <li><a href="desk-accessories-custom"
                                 style="font-weight: 700; text-decoration: underline; color: #475569;">Humidifier
                                 Portable:</a> Menjaga kelembapan udara di ruang AC, bisa dicustom
                             logo.</li>
                         <li><strong>Diffuser Aromaterapi:</strong> Gift set berisi diffuser dan essential oil
                             (lavender/peppermint) untuk relaksasi.</li>
                         <li><strong>Botol Sport Ukuran Besar (1-2 Liter):</strong> Mendorong karyawan untuk minum air 2
-                            liter sehari. Cek opsi ini di <a href="botol-minum-aluminium.html">Koleksi Botol Sport</a>.
+                            liter sehari. Cek opsi ini di <a href="botol-minum-aluminium">Koleksi Botol Sport</a>.
                         </li>
                     </ul>
 
@@ -615,7 +615,7 @@
                         memberikan sentuhan emosional yang kuat.</p>
                     <p>Teknologi Laser Grafir memungkinkan kami mencetak nama berbeda-beda pada setiap tumbler atau
                         pulpen dalam satu pesanan produksi massal (Variable Data Printing). Bayangkan karyawan Anda
-                        menerima tumbler dengan nama mereka sendiri—mereka akan merasa sangat dihargai sebagai individu,
+                        menerima tumbler dengan nama mereka sendiriâ€”mereka akan merasa sangat dihargai sebagai individu,
                         bukan sekadar angka.</p>
 
                     <h2>Kesimpulan Strategis</h2>
@@ -669,12 +669,12 @@
 
                     <!-- Share Mobile -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%202026%3A%20Tren%20%26%20Ide%20Produk%20Paling%20Dicari%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%202026%3A%20Tren%20%26%20Ide%20Produk%20Paling%20Dicari%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share WA</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin"></i> Share
                             LinkedIn</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook"></i> Share FB</a>
                     </div>
 
@@ -719,7 +719,7 @@
                                     alt="Tumbler" loading="lazy">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.4; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-stainless-vacuum.html"
+                                            href="tumbler-stainless-vacuum"
                                             style="text-decoration: none; color: #1e293b;">Review Tumbler Vacuum: Raja
                                             Souvenir</a></h4>
                                     <span style="font-size: 0.8rem; color: #94A3B8;">Best Seller</span>
@@ -733,7 +733,7 @@
                                     alt="Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.4; margin-bottom: 0.25rem;"><a
-                                            href="tips-memilih-paket-seminar.html"
+                                            href="tips-memilih-paket-seminar"
                                             style="text-decoration: none; color: #1e293b;">Tips Hemat Paket Seminar
                                             Kit</a></h4>
                                     <span style="font-size: 0.8rem; color: #94A3B8;">Budgeting</span>
@@ -770,20 +770,20 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html" style="color: #FBBF24;">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html" style="color: #A5B4FC;">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
+                    <li><a href="category-seminar" style="color: #FBBF24;">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive" style="color: #A5B4FC;">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
                 </ul>
             </div>
             <div>
@@ -872,3 +872,5 @@
 </body>
 
 </html>
+
+
