--- a/souvenir-akhir-tahun-kalender.html
+++ b/souvenir-akhir-tahun-kalender.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender">
     <title>Souvenir Akhir Tahun Kantor: Kalender 2026 & Agenda Eksklusif | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Mengapa kalender dan agenda masih menjadi souvenir paling powerful? Temukan strateginya di sini.">
     <meta property="og:image" content="assets/souvenir-kalender-agenda-tahun-baru.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,11 +297,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="katalog-souvenir-event-perusahaan.html" style="text-decoration: none; color: #64748B;">Event
+                <a href="katalog-souvenir-event-perusahaan" style="text-decoration: none; color: #64748B;">Event
                     Guide</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #dc2626; font-weight: 700;">Souvenir Akhir Tahun</span>
@@ -340,14 +340,14 @@
 
                     <p>
                         Inilah alasan mengapa <strong>Kalender dan Buku Agenda</strong> tetap menjadi raja dari segala
-                        jenis <a href="souvenir-akhir-tahun-kalender.html"
+                        jenis <a href="souvenir-akhir-tahun-kalender"
                             style="text-decoration: underline; color: #ef4444; font-weight: 700;">Souvenir Akhir
                             Tahun</a>. Meskipun era digital mendominasi, fungsi fisik untuk mencoret tanggal atau
                         mencatat ide saat meeting belum tergantikan.
                     </p>
 
                     <p>
-                        Sebagai lanjutan dari <a href="katalog-souvenir-event-perusahaan.html"
+                        Sebagai lanjutan dari <a href="katalog-souvenir-event-perusahaan"
                             style="text-decoration: underline; color: #991b1b; font-weight: 700;">Panduan Event Tahunan
                             Maroon Souvenir</a>, artikel ini akan membahas strategi agar kalender Anda tidak berakhir di
                         tempat sampah, melainkan dipajang dengan bangga.
@@ -458,11 +458,11 @@
                         </h4>
                         <p style="margin-bottom: 0.5rem;">Selain akhir tahun, pastikan Anda juga siap untuk:</p>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="hampers-lebaran-perusahaan.html"
+                            <li><a href="hampers-lebaran-perusahaan"
                                     style="color: #e11d48; font-weight: 600;">Hampers Lebaran & Idul Fitri</a></li>
-                            <li><a href="onboarding-kit-karyawan.html" style="color: #e11d48; font-weight: 600;">Welcome
+                            <li><a href="onboarding-kit-karyawan" style="color: #e11d48; font-weight: 600;">Welcome
                                     Kit Karyawan Baru</a></li>
-                            <li><a href="souvenir-promosi-doktor-guru-besar.html"
+                            <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #e11d48; font-weight: 600;">Souvenir Promosi Doktor</a></li>
                         </ul>
                     </div>
@@ -563,11 +563,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Cetak%20Kalender%20dan%20Agenda%202026%20Premium%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://wa.me/?text=Cetak%20Kalender%20dan%20Agenda%202026%20Premium%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -608,13 +608,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Gift Akhir Tahun</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Agenda Kulit</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-print"></i>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-print"></i>
                                         Kalender Meja</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-gift"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Executive Gift Set</a></li>
-                                <li class="cat-item"><a href="tumbler-stainless-vacuum.html"><i
+                                <li class="cat-item"><a href="tumbler-stainless-vacuum"><i
                                             class="fa-solid fa-mug-hot"></i> Tumbler Custom</a></li>
                             </ul>
                         </div>
@@ -630,13 +630,13 @@
                                     alt="Event Guide">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="katalog-souvenir-event-perusahaan.html"
+                                            href="katalog-souvenir-event-perusahaan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Event</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Strategi Tahunan.</p>
-                                    <a href="katalog-souvenir-event-perusahaan.html"
+                                    <a href="katalog-souvenir-event-perusahaan"
                                         style="font-size: 0.8rem; color: #b91c1c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -647,13 +647,13 @@
                                     alt="Hampers Lebaran">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="hampers-lebaran-perusahaan.html"
+                                            href="hampers-lebaran-perusahaan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Hampers
                                             Lebaran</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Momen Hari Raya.</p>
-                                    <a href="hampers-lebaran-perusahaan.html"
+                                    <a href="hampers-lebaran-perusahaan"
                                         style="font-size: 0.8rem; color: #b91c1c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -665,13 +665,13 @@
                                     alt="RUPS">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-rups-saham.html"
+                                            href="souvenir-rups-saham"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             RUPS</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Level Korporat.</p>
-                                    <a href="souvenir-rups-saham.html"
+                                    <a href="souvenir-rups-saham"
                                         style="font-size: 0.8rem; color: #b91c1c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -705,21 +705,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -810,3 +810,5 @@
 </body>
 
 </html>
+
+
