--- a/souvenir-gadget-elektronik.html
+++ b/souvenir-gadget-elektronik.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-gadget-elektronik.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-gadget-elektronik">
     <title>Pusat Souvenir Gadget Kantor & Elektronik Premium (Garansi Resmi) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Mengapa Gadget menjadi raja souvenir di tahun 2026? Simak panduan lengkap memilih elektronik yang aman, awet, dan berkesan untuk klien VVIP.">
     <meta property="og:image" content="assets/category-gadget.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-gadget-elektronik.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-gadget-elektronik">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -270,16 +270,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -294,9 +294,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Souvenir Elektronik (Pillar Page)</span>
             </nav>
@@ -376,7 +376,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Tren Masa Depan:</h4>
                         <p style="margin-bottom: 0;">
                             Ingin tahu bagaimana teknologi mendominasi prediksi tren tahun depan? Baca analisis lengkap
-                            kami di <a href="rekomendasi-souvenir-kantor-2026.html"
+                            kami di <a href="rekomendasi-souvenir-kantor-2026"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Rekomendasi
                                 Souvenir Kantor 2026</a>.
                         </p>
@@ -414,7 +414,7 @@
                         <h4 style="margin-top: 0; color: #312E81; margin-bottom: 1rem;">Deep Dive Powerbank:</h4>
                         <p style="margin-bottom: 0;">
                             Pelajari cara membedakan Powerbank asli dan palsu serta rekomendasi kapasitas yang pas di
-                            artikel khusus: <a href="powerbank-custom-souvenir.html"
+                            artikel khusus: <a href="powerbank-custom-souvenir"
                                 style="text-decoration: underline; color: #4338CA; font-weight: 700;">Tips Memilih
                                 Powerbank Custom yang Aman</a>.
                         </p>
@@ -441,7 +441,7 @@
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Inovasi Flashdisk:</h4>
                         <p style="margin-bottom: 0;">
                             Lihat bagaimana Flashdisk Kartu bisa menjadi media promosi paling efektif dengan area cetak
-                            terluas di: <a href="flashdisk-kartu-promosi.html"
+                            terluas di: <a href="flashdisk-kartu-promosi"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Flashdisk Kartu:
                                 Kartu Nama Digital Multifungsi</a>.
                         </p>
@@ -475,7 +475,7 @@
                         <h4 style="margin-top: 0; color: #064E3B; margin-bottom: 1rem;">Lengkapi Dengan Desk Set:</h4>
                         <p style="margin-bottom: 0;">
                             Speaker bluetooth akan terlihat lebih sempurna di meja kerja jika dipandingkan dengan <a
-                                href="desk-accessories-custom.html"
+                                href="desk-accessories-custom"
                                 style="text-decoration: underline; color: #059669; font-weight: 700;">Deskmat, Phone
                                 Holder, & Humidifier</a> yang senada.
                         </p>
@@ -487,7 +487,7 @@
                         <h4 style="margin-top: 0; color: #7F1D1D; margin-bottom: 1rem;">Pilihan Musik:</h4>
                         <p style="margin-bottom: 0;">
                             Cek detail tentang speaker yang logonya bisa menyala di sini: <a
-                                href="speaker-bluetooth-custom-logo.html"
+                                href="speaker-bluetooth-custom-logo"
                                 style="text-decoration: underline; color: #B91C1C; font-weight: 700;">Speaker Bluetooth
                                 Mini: Souvenir Unik Milenial</a>.
                         </p>
@@ -596,11 +596,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Pusat%20Souvenir%20Gadget%20Kantor%20Premium%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik.html"
+                        <a href="https://wa.me/?text=Pusat%20Souvenir%20Gadget%20Kantor%20Premium%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-gadget-elektronik"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -641,11 +641,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Gadget</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="powerbank-custom-souvenir.html"><i
+                                <li class="cat-item"><a href="powerbank-custom-souvenir"><i
                                             class="fa-solid fa-battery-full"></i> Powerbank Custom</a></li>
-                                <li class="cat-item"><a href="flashdisk-kartu-promosi.html"><i
+                                <li class="cat-item"><a href="flashdisk-kartu-promosi"><i
                                             class="fa-solid fa-sd-card"></i> Flashdisk Kartu</a></li>
-                                <li class="cat-item"><a href="speaker-bluetooth-custom-logo.html"><i
+                                <li class="cat-item"><a href="speaker-bluetooth-custom-logo"><i
                                             class="fa-solid fa-music"></i> Speaker Bluetooth</a></li>
                             </ul>
                         </div>
@@ -661,14 +661,14 @@
                                     alt="Powerbank Aman">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="powerbank-custom-souvenir.html"
+                                            href="powerbank-custom-souvenir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tips
                                             Powerbank Aman</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hindari baterai palsu /
                                         suntikan.</p>
-                                    <a href="powerbank-custom-souvenir.html"
+                                    <a href="powerbank-custom-souvenir"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -679,14 +679,14 @@
                                     alt="Flashdisk Kartu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Manfaat
                                             Flashdisk Kartu</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Area cetak luas & praktis.
                                     </p>
-                                    <a href="flashdisk-kartu-promosi.html"
+                                    <a href="flashdisk-kartu-promosi"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -697,14 +697,14 @@
                                     alt="Tren Souvenir 2026">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir 2026</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Gadget & Eco mendominasi.
                                     </p>
-                                    <a href="rekomendasi-souvenir-kantor-2026.html"
+                                    <a href="rekomendasi-souvenir-kantor-2026"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -738,21 +738,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -843,3 +843,5 @@
 </body>
 
 </html>
+
+
