--- a/souvenir-perusahaan-eksklusif.html
+++ b/souvenir-perusahaan-eksklusif.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif">
     <title>Souvenir Perusahaan Eksklusif & Premium Gift Set (Katalog 2026) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan pertaruhkan reputasi brand Anda dengan souvenir murahan. Simak panduan lengkap memilih corporate gift set yang mewah dan berkelas.">
     <meta property="og:image" content="assets/executive-hardbox.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Souvenir Eksklusif</span>
             </nav>
@@ -373,13 +373,13 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Baca Juga:</h4>
                         <ul style="margin-bottom: 0; padding-left: 1.5rem;">
                             <li style="margin-bottom: 0.5rem;">
-                                <a href="tumbler-stainless-vacuum.html"
+                                <a href="tumbler-stainless-vacuum"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Rekomendasi Tumbler Stainless Vacuum untuk Gift Set
                                 </a>
                             </li>
                             <li>
-                                <a href="powerbank-custom-souvenir.html"
+                                <a href="powerbank-custom-souvenir"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Powerbank Custom: Pilihan Merchandise Gadget Paling Favorit
                                 </a>
@@ -594,11 +594,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Eksklusif%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif.html"
+                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Eksklusif%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-perusahaan-eksklusif"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -639,11 +639,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Exclusive Gifts</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-mobile-screen"></i> Gadget & Tech</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Premium Tumbler</a></li>
                             </ul>
                         </div>
@@ -659,14 +659,14 @@
                                     alt="Powerbank Custom">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="powerbank-custom-souvenir.html"
+                                            href="powerbank-custom-souvenir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tips
                                             Memilih Powerbank Aman</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Jangan salah pilih powerbank
                                         untuk klien.</p>
-                                    <a href="powerbank-custom-souvenir.html"
+                                    <a href="powerbank-custom-souvenir"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -677,14 +677,14 @@
                                     alt="Tumbler Stainless">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-stainless-vacuum.html"
+                                            href="tumbler-stainless-vacuum"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Stainless: Raja Souvenir</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Kenapa tumbler stainless
                                         jadi favorit B2B.</p>
-                                    <a href="tumbler-stainless-vacuum.html"
+                                    <a href="tumbler-stainless-vacuum"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -695,14 +695,14 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Seminar Kit Lengkap</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tips memilih souvenir untuk
                                         event massal.</p>
-                                    <a href="panduan-lengkap-seminar-kit.html"
+                                    <a href="panduan-lengkap-seminar-kit"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -736,21 +736,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -841,3 +841,5 @@
 </body>
 
 </html>
+
+
