--- a/souvenir-rups-saham.html
+++ b/souvenir-rups-saham.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-rups-saham.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-rups-saham">
     <title>Souvenir RUPS Saham & IPO: Merchandise Eksklusif untuk Investor | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk pemegang saham. Temukan standar merchandise korporat level tinggi di sini.">
     <meta property="og:image" content="assets/souvenir-rups-saham.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-rups-saham.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-rups-saham">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,11 +297,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="katalog-souvenir-event-perusahaan.html" style="text-decoration: none; color: #64748B;">Event
+                <a href="katalog-souvenir-event-perusahaan" style="text-decoration: none; color: #64748B;">Event
                     Guide</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #1e1b4b; font-weight: 700;">Souvenir RUPS</span>
@@ -340,7 +340,7 @@
                     </p>
 
                     <p>
-                        Setiap detail dalam acara ini diperhatikan, termasuk <a href="souvenir-rups-saham.html"
+                        Setiap detail dalam acara ini diperhatikan, termasuk <a href="souvenir-rups-saham"
                             style="text-decoration: underline; color: #4338ca; font-weight: 700;">Souvenir RUPS</a> yang
                         dibagikan. Memberikan totebag kanvas tipis di acara sepenting ini bisa menjadi blunder
                         komunikasi yang fatal.
@@ -348,7 +348,7 @@
 
                     <p>
                         Artikel ini akan memandu Anda memilih merchandise yang sesuai dengan bobot acara, sebagai bagian
-                        dari seri <a href="katalog-souvenir-event-perusahaan.html"
+                        dari seri <a href="katalog-souvenir-event-perusahaan"
                             style="text-decoration: underline; color: #1e1b4b; font-weight: 700;">Panduan Event
                             Korporat</a> kami.
                     </p>
@@ -451,12 +451,12 @@
                         <h4 style="margin-top: 0; color: #312e81; margin-bottom: 1rem;">Lihat Juga: Solusi Souvenir Lain
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-promosi-doktor-guru-besar.html"
+                            <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #4338ca; font-weight: 600;">Souvenir Promosi Doktor (Akademik)</a>
                             </li>
-                            <li><a href="onboarding-kit-karyawan.html"
+                            <li><a href="onboarding-kit-karyawan"
                                     style="color: #4338ca; font-weight: 600;">Onboarding Kit Karyawan</a></li>
-                            <li><a href="souvenir-akhir-tahun-kalender.html"
+                            <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #4338ca; font-weight: 600;">Souvenir Kalender Akhir Tahun</a></li>
                         </ul>
                     </div>
@@ -558,11 +558,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20Souvenir%20RUPS%20Premium%20untuk%20Investor%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham.html"
+                        <a href="https://wa.me/?text=Ide%20Souvenir%20RUPS%20Premium%20untuk%20Investor%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-rups-saham"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -603,13 +603,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan VIP & VVIP</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-gem"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gem"></i>
                                         Premium Gift Set</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-laptop-medical"></i> Corporate Gadget</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Seminar Kit VIP</a></li>
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i
                                             class="fa-solid fa-book-open"></i> Agenda Hardcover</a></li>
                             </ul>
                         </div>
@@ -625,13 +625,13 @@
                                     alt="Event Guide">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="katalog-souvenir-event-perusahaan.html"
+                                            href="katalog-souvenir-event-perusahaan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Event</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Solusi Lengkap.</p>
-                                    <a href="katalog-souvenir-event-perusahaan.html"
+                                    <a href="katalog-souvenir-event-perusahaan"
                                         style="font-size: 0.8rem; color: #312e81; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -643,13 +643,13 @@
                                     alt="Promosi Doktor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Akademik Prestige.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #312e81; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -660,13 +660,13 @@
                                     alt="Akhir Tahun">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-akhir-tahun-kalender.html"
+                                            href="souvenir-akhir-tahun-kalender"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Kalender
                                             & Agenda</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Akhir Tahun.</p>
-                                    <a href="souvenir-akhir-tahun-kalender.html"
+                                    <a href="souvenir-akhir-tahun-kalender"
                                         style="font-size: 0.8rem; color: #312e81; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -700,21 +700,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -805,3 +805,5 @@
 </body>
 
 </html>
+
+
