--- a/tas-goodie-bag.html
+++ b/tas-goodie-bag.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tas-goodie-bag.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tas-goodie-bag">
     <title>Katalog Goodie Bag Promosi: Spunbond, Blacu & Kanvas | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tinggalkan kantong plastik! Beralihlah ke Tas Spunbond dan Tote Bag Kanvas yang awet dan efektif sebagai media branding berjalan.">
     <meta property="og:image" content="assets/katalog-goodie-bag.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tas-goodie-bag.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tas-goodie-bag">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Katalog Goodie Bag</span>
             </nav>
@@ -376,7 +376,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Butuh Tas yang Mewah?</h4>
                         <p style="margin-bottom: 0;">
                             Jika Spunbond terasa terlalu "biasa", upgrade paket seminar Anda dengan Tas Laptop Ransel
-                            yang lebih prestisius. Baca perbandingannya di <a href="tas-seminar-laptop-vs-ransel.html"
+                            yang lebih prestisius. Baca perbandingannya di <a href="tas-seminar-laptop-vs-ransel"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Tas Laptop vs
                                 Ransel Seminar</a>.
                         </p>
@@ -422,7 +422,7 @@
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Go Digital:</h4>
                         <p style="margin-bottom: 0;">
                             Lengkapi goodie bag seminar Anda dengan souvenir teknologi. Selipkan <a
-                                href="flashdisk-kartu-promosi.html"
+                                href="flashdisk-kartu-promosi"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Flashdisk
                                 Kartu</a> berisi materi acara ke dalam saku tas.
                         </p>
@@ -533,11 +533,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Pusat%20Grosir%20Goodie%20Bag%20Murah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag.html"
+                        <a href="https://wa.me/?text=Pusat%20Grosir%20Goodie%20Bag%20Murah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-goodie-bag"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -568,7 +568,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Tas Seminar?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Lihat koleksi tas ransel
                                 dan laptop case kami yang lebih formal.</p>
-                            <a href="tas-seminar-laptop-vs-ransel.html" class="btn"
+                            <a href="tas-seminar-laptop-vs-ransel" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-briefcase"></i> Tas Seminar
                             </a>
@@ -578,11 +578,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Tas</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Tas
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Tas
                                         Eco Friendly</a></li>
-                                <li class="cat-item"><a href="tas-seminar-laptop-vs-ransel.html"><i
+                                <li class="cat-item"><a href="tas-seminar-laptop-vs-ransel"><i
                                             class="fa-solid fa-laptop"></i> Tas Laptop</a></li>
-                                <li class="cat-item"><a href="konveksi-seragam-kaos.html"><i
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
                                             class="fa-solid fa-shirt"></i> Konveksi Apparel</a></li>
                             </ul>
                         </div>
@@ -598,14 +598,14 @@
                                     alt="Tas Ramah Lingkungan">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Katalog
                                             Souvenir Ramah Lingkungan</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Alternative Plastic Free.
                                     </p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -616,13 +616,13 @@
                                     alt="Konveksi">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="konveksi-seragam-kaos.html"
+                                            href="konveksi-seragam-kaos"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Vendor
                                             Konveksi Seragam</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Produksi massal.</p>
-                                    <a href="konveksi-seragam-kaos.html"
+                                    <a href="konveksi-seragam-kaos"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -633,14 +633,14 @@
                                     alt="Flashdisk">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Flashdisk
                                             Kartu Digital</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pasangan tepat seminar kit.
                                     </p>
-                                    <a href="flashdisk-kartu-promosi.html"
+                                    <a href="flashdisk-kartu-promosi"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -674,21 +674,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -779,3 +779,5 @@
 </body>
 
 </html>
+
+
