--- a/topi-promosi-custom.html
+++ b/topi-promosi-custom.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/topi-promosi-custom.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/topi-promosi-custom">
     <title>Topi Promosi Custom: Trucker & Baseball Caps Bordir 3D | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Lengkapi seragam lapangan Anda dengan Topi Custom. Simak perbedaan bahan Rafel vs Drill dan jenis bordir yang awet disini.">
     <meta property="og:image" content="assets/topi-promosi.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/topi-promosi-custom.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/topi-promosi-custom">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Topi Promosi Custom</span>
             </nav>
@@ -372,7 +372,7 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #FFFBEB; border-left: 4px solid #F59E0B; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Outfit Match:</h4>
                         <p style="margin-bottom: 0;">
-                            Topi Baseball paling pas dipadukan dengan <a href="kaos-polo-bordir.html"
+                            Topi Baseball paling pas dipadukan dengan <a href="kaos-polo-bordir"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Polo Shirt
                                 Bordir</a>. Kombinasi ini menciptakan tampilan "Sporty Executive" yang digemari banyak
                             CEO.
@@ -430,7 +430,7 @@
                     <p>
                         Jika tujuan Anda adalah <strong>Brand Awareness</strong>, topi adalah investasinya. Harganya
                         relatif murah
-                        dibanding <a href="jaket-hoodie-kantor.html"
+                        dibanding <a href="jaket-hoodie-kantor"
                             style="text-decoration: underline; color: #E11D48; font-weight: 700;">Jaket Bomber</a>,
                         namun "Iklan Berjalan"-nya sangat efektif.
                     </p>
@@ -441,7 +441,7 @@
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Lengkapi Dengan Tas:</h4>
                         <p style="margin-bottom: 0;">
                             Topi seringkali dibagikan bersamaan dengan kaos dalam satu paket. Gunakan <a
-                                href="tas-goodie-bag.html"
+                                href="tas-goodie-bag"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Goodie Bag Serut
                                 (Drawstring)</a> yang sporty untuk membungkus merchandise event olahraga Anda.
                         </p>
@@ -533,11 +533,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Topi%20Custom%20Surabaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Topi%20Custom%20Surabaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftopi-promosi-custom"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -579,11 +579,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pelengkap Event</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="konveksi-seragam-kaos.html"><i
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
                                             class="fa-solid fa-shirt"></i> Konveksi Kaos</a></li>
-                                <li class="cat-item"><a href="jaket-hoodie-kantor.html"><i class="fa-solid fa-vest"></i>
+                                <li class="cat-item"><a href="jaket-hoodie-kantor"><i class="fa-solid fa-vest"></i>
                                         Jaket Komunitas</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag.html"><i
+                                <li class="cat-item"><a href="tas-goodie-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Tas Goodie Bag</a></li>
                             </ul>
                         </div>
@@ -599,13 +599,13 @@
                                     alt="Jaket Kantor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="jaket-hoodie-kantor.html"
+                                            href="jaket-hoodie-kantor"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Jaket
                                             Bomber & Hoodie</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pasangan setia topi.</p>
-                                    <a href="jaket-hoodie-kantor.html"
+                                    <a href="jaket-hoodie-kantor"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -616,13 +616,13 @@
                                     alt="Polo Shirt">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="kaos-polo-bordir.html"
+                                            href="kaos-polo-bordir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Polo
                                             Shirt Bordir</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Paduan outfit sporty.</p>
-                                    <a href="kaos-polo-bordir.html"
+                                    <a href="kaos-polo-bordir"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -633,13 +633,13 @@
                                     alt="Konveksi">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="konveksi-seragam-kaos.html"
+                                            href="konveksi-seragam-kaos"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Konveksi</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Info bahan terlengkap.</p>
-                                    <a href="konveksi-seragam-kaos.html"
+                                    <a href="konveksi-seragam-kaos"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -673,21 +673,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -778,3 +778,5 @@
 </body>
 
 </html>
+
+
