--- a/tumbler-bambu-grafir.html
+++ b/tumbler-bambu-grafir.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-bambu-grafir.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-bambu-grafir">
     <title>Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tunjukkan kepedulian lingkungan Anda dengan souvenir Tumbler Bambu. Desain natural, jeroan stainless tahan panas, dan grafir logo yang abadi.">
     <meta property="og:image" content="assets/eco-bamboo.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-bambu-grafir.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-bambu-grafir">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -263,16 +263,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -287,9 +287,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Tumbler Bambu</span>
             </nav>
@@ -393,7 +393,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Cari solusi tumbler yang lebih tahan banting untuk outdoor? Cek <a
-                            href="botol-sport-aluminium.html"
+                            href="botol-sport-aluminium"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Botol Sport
                             Aluminium</a>.
                     </div>
@@ -452,7 +452,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Ingin tahu opsi souvenir murah meriah lainnya? Simak <a
-                            href="tumbler-insert-paper.html"
+                            href="tumbler-insert-paper"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Tumbler Insert
                             Paper</a> yang bisa diproduksi kilat.
                     </div>
@@ -544,12 +544,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Tumbler%20Bambu%20estetik%20dan%20unik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://wa.me/?text=Tumbler%20Bambu%20estetik%20dan%20unik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -580,7 +580,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Go Green Sekarang!</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Lihat koleksi lengkap
                                 souvenir ramah lingkungan kami.</p>
-                            <a href="category-eco.html" class="btn"
+                            <a href="category-eco" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-leaf"></i> Katalog Eco-Green
                             </a>
@@ -590,11 +590,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-tree"></i> Eco
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-tree"></i> Eco
                                         Souvenir</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Drinkware</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-star"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-star"></i>
                                         Premium Gifts</a></li>
                             </ul>
                         </div>
@@ -610,7 +610,7 @@
                                     alt="Tumbler Murah">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-insert-paper.html"
+                                            href="tumbler-insert-paper"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Insert Paper: Pilihan Hemat</a></h4>
                                     <span style="font-size: 0.75rem; color: var(--accent); font-weight: 600;">Budget
@@ -625,7 +625,7 @@
                                     alt="Botol Sport">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="botol-sport-aluminium.html"
+                                            href="botol-sport-aluminium"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Botol
                                             Sport Aluminium untuk Outdoor</a></h4>
                                 </div>
@@ -638,7 +638,7 @@
                                     alt="Speaker">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="speaker-bluetooth-custom-logo.html"
+                                            href="speaker-bluetooth-custom-logo"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Speaker
                                             Bluetooth Logo Menyala</a></h4>
                                 </div>
@@ -673,21 +673,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -778,3 +778,5 @@
 </body>
 
 </html>
+
+
