--- a/vendor-souvenir-kantor-profesional.html
+++ b/vendor-souvenir-kantor-profesional.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional">
     <title>Vendor Souvenir Kantor Profesional: Mitra Branding Terpercaya | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan pertaruhkan citra perusahaan Anda dengan souvenir murahan. Simak ciri-ciri vendor souvenir profesional yang wajib Anda tahu sebelum deal.">
     <meta property="og:image" content="assets/vendor-souvenir-kantor.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -272,16 +272,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -296,9 +296,9 @@
     <div style="background: #F8FAFC; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #0F172A; font-weight: 700;">Vendor Souvenir</span>
             </nav>
@@ -364,7 +364,7 @@
                         Reputasi perusahaan Anda yang dipertaruhkan.
                     </p>
                     <p>
-                        Vendor profesional <a href="vendor-souvenir-perusahaan.html"
+                        Vendor profesional <a href="vendor-souvenir-perusahaan"
                             style="text-decoration: underline; color: #0F172A; font-weight: 700;">Mitra Perusahaan</a>
                         memahami risiko ini. Mereka memiliki sistem *Quality Control* (QC) berlapis untuk memastikan
                         setiap item yang keluar dari gudang dalam kondisi prima.
@@ -397,14 +397,14 @@
                         seluruh kota besar di Indonesia dengan standar kualitas yang seragam.
                     </p>
 
-                    <h3>A. <a href="vendor-souvenir-kantor-jakarta.html"
+                    <h3>A. <a href="vendor-souvenir-kantor-jakarta"
                             style="text-decoration: none; color: #0F172A;">Vendor Souvenir Kantor Jakarta</a></h3>
                     <p>
                         Sebagai pusat bisnis, kebutuhan di Jakarta sangat dinamis. Kami melayani kebutuhan *rush order*
                         (pesanan kilat) untuk event-event mendesak di kawasan Sudirman, Kuningan, dan sekitarnya.
                     </p>
 
-                    <h3>B. <a href="vendor-souvenir-kantor-surabaya.html"
+                    <h3>B. <a href="vendor-souvenir-kantor-surabaya"
                             style="text-decoration: none; color: #0F172A;">Vendor Souvenir Kantor Surabaya</a></h3>
                     <p>
                         Berbasis di Jawa Timur, kami memiliki akses langsung ke pabrik dan pengrajin lokal, memungkinkan
@@ -413,9 +413,9 @@
 
                     <h3>C. Kota Lainnya (Malang, Jogja, Bali)</h3>
                     <p>
-                        Kami juga melayani klien di <a href="vendor-souvenir-kantor-malang.html"
+                        Kami juga melayani klien di <a href="vendor-souvenir-kantor-malang"
                             style="text-decoration: underline;">Malang</a> yang membutuhkan souvenir kreatif, serta <a
-                            href="vendor-souvenir-kantor-jogja.html" style="text-decoration: underline;">Yogyakarta</a>
+                            href="vendor-souvenir-kantor-jogja" style="text-decoration: underline;">Yogyakarta</a>
                         yang identik dengan kerajinan tangan. Jaringan logistik kami memastikan barang sampai dengan
                         aman.
                     </p>
@@ -434,7 +434,7 @@
                     </p>
                     <ul>
                         <li><strong>Eco-Friendly Gifts:</strong> Tumbler bambu, notes daur ulang. Lihat <a
-                                href="souvenir-ramah-lingkungan.html" style="font-weight: 700;">Koleksi Ramah
+                                href="souvenir-ramah-lingkungan" style="font-weight: 700;">Koleksi Ramah
                                 Lingkungan</a>.</li>
                         <li><strong>Gadget & Tech:</strong> Powerbank, Flashdisk, Speaker Bluetooth. Favorit untuk
                             perusahaan teknologi dan startup.</li>
@@ -541,11 +541,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Kantor%20Profesional%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Kantor%20Profesional%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-profesional"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -586,11 +586,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Layanan Kami</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta"><i
                                             class="fa-solid fa-city"></i> Vendor Jakarta</a></li>
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-surabaya.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-surabaya"><i
                                             class="fa-solid fa-building"></i> Vendor Surabaya</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-box-open"></i> Seminar Kit</a></li>
                             </ul>
                         </div>
@@ -606,13 +606,13 @@
                                     alt="Sustainable Gifts">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Sustainable Gifts</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tren masa depan.</p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: #0F172A; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -623,13 +623,13 @@
                                     alt="Paket Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Murah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Solusi budget ketat.</p>
-                                    <a href="paket-seminar-kit-basic.html"
+                                    <a href="paket-seminar-kit-basic"
                                         style="font-size: 0.8rem; color: #0F172A; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -640,13 +640,13 @@
                                     alt="Tas Goni">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-belacu-goni.html"
+                                            href="tas-belacu-goni"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Goni Custom</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Unik & Berkarakter.</p>
-                                    <a href="tas-belacu-goni.html"
+                                    <a href="tas-belacu-goni"
                                         style="font-size: 0.8rem; color: #0F172A; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -680,21 +680,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -785,3 +785,5 @@
 </body>
 
 </html>
+
+
