--- a/alat-makan-kayu.html
+++ b/alat-makan-kayu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/alat-makan-kayu.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/alat-makan-kayu">
     <title>Set Alat Makan Kayu & Sedotan Stainless: Souvenir Zero Waste | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Bantu karyawan dan klien Anda mengurangi sampah plastik saat makan siang. Berikan Set Alat Makan Kayu Travel yang estetis.">
     <meta property="og:image" content="assets/alat-makan-kayu.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/alat-makan-kayu.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/alat-makan-kayu">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,9 +297,9 @@
     <div style="background: #FFF7ED; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #9A3412;">
-                <a href="index.html" style="text-decoration: none; color: #9A3412;">Home</a>
+                <a href="./" style="text-decoration: none; color: #9A3412;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #9A3412;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #9A3412;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #C2410C; font-weight: 700;">Alat Makan Kayu</span>
             </nav>
@@ -339,7 +339,7 @@
                     <p>
                         Gerakan <strong>#BringYourOwn (BYO) Cutlery</strong> bukan sekadar tren Instagram, tapi sebuah
                         aksi nyata mengurangi <em>single-use plastic</em>. Sebagai perusahaan, Anda bisa memfasilitasi
-                        gaya hidup positif ini dengan memberikan <a href="alat-makan-kayu.html"
+                        gaya hidup positif ini dengan memberikan <a href="alat-makan-kayu"
                             style="text-decoration: underline; color: #C2410C; font-weight: 700;">Souvenir Alat Makan
                             Kayu</a>.
                     </p>
@@ -393,10 +393,10 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Lengkapi Koleksi Eco-Friendly:
                         </h4>
                         <p style="margin-bottom: 0;">
-                            Alat makan kayu paling pas dibawa menggunakan <a href="tas-belacu-goni.html"
+                            Alat makan kayu paling pas dibawa menggunakan <a href="tas-belacu-goni"
                                 style="text-decoration: underline; color: #C2410C; font-weight: 700;">Tas Belacu
                                 Serut</a> atau dipadukan dengan Tumbler Bambu dari koleksi <a
-                                href="souvenir-ramah-lingkungan.html"
+                                href="souvenir-ramah-lingkungan"
                                 style="text-decoration: underline; color: #C2410C; font-weight: 700;">Sustainable
                                 Souvenir</a> kami.
                         </p>
@@ -529,11 +529,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Souvenir%20Alat%20Makan%20Kayu%20Unik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu.html"
+                        <a href="https://wa.me/?text=Souvenir%20Alat%20Makan%20Kayu%20Unik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Falat-makan-kayu"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -574,11 +574,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Eco
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa- mug-hot"></i> Food & Drinkware</a></li>
-                                <li class="cat-item"><a href="category-lifestyle.html"><i class="fa-solid fa-heart"></i>
+                                <li class="cat-item"><a href="category-lifestyle"><i class="fa-solid fa-heart"></i>
                                         Lifestyle</a></li>
                             </ul>
                         </div>
@@ -594,14 +594,14 @@
                                     alt="Sustainable Gifts">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Sustainable Gifts</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi souvenir hijau.
                                     </p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: #C2410C; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -612,13 +612,13 @@
                                     alt="Seminar Kit Eco">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-daur-ulang.html"
+                                            href="buku-daur-ulang"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Notebook
                                             Daur Ulang</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tulis ide, jaga bumi.</p>
-                                    <a href="buku-daur-ulang.html"
+                                    <a href="buku-daur-ulang"
                                         style="font-size: 0.8rem; color: #C2410C; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -629,14 +629,14 @@
                                     alt="Tumbler">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-tumbler-botol.html"
+                                            href="souvenir-tumbler-botol"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Custom Logo</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pasangan pas untuk sedotan.
                                     </p>
-                                    <a href="souvenir-tumbler-botol.html"
+                                    <a href="souvenir-tumbler-botol"
                                         style="font-size: 0.8rem; color: #C2410C; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -670,21 +670,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -775,3 +775,5 @@
 </body>
 
 </html>
+
+
