--- a/blog-2.html
+++ b/blog-2.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog-2.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-2">
     <title>Blog & Wawasan Souvenir Kantor - Page 2 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/blog-2.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/blog-2">
     <meta property="og:type" content="blog">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -71,7 +71,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog - Page 2</span>
@@ -95,11 +95,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">SEMINAR KIT</span>
-                            <h3 class="article-title"><a href="paket-seminar-eksklusif.html">Paket Seminar Kit Eksklusif
+                            <h3 class="article-title"><a href="paket-seminar-eksklusif">Paket Seminar Kit Eksklusif
                                     Hardbox & Souvenir VIP</a></h3>
                             <p class="article-excerpt">Tingkatkan prestise acara Anda dengan seminar kit kelas atas.
                                 Paket hardbox dengan isi premium untuk pembicara dan tamu VVIP.</p>
-                            <a href="paket-seminar-eksklusif.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="paket-seminar-eksklusif" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -111,11 +111,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">EXCLUSIVE GIFT</span>
-                            <h3 class="article-title"><a href="souvenir-perusahaan-eksklusif.html">Souvenir Perusahaan
+                            <h3 class="article-title"><a href="souvenir-perusahaan-eksklusif">Souvenir Perusahaan
                                     Eksklusif & Premium Gift Set 2026</a></h3>
                             <p class="article-excerpt">Panduan memilih corporate gift mewah untuk klien VVIP. Ide
                                 merchandise kulit, gadget premium, dan teknik branding elegan.</p>
-                            <a href="souvenir-perusahaan-eksklusif.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-perusahaan-eksklusif" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -127,11 +127,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">DRINKWARE</span>
-                            <h3 class="article-title"><a href="botol-minum-aluminium.html">Botol Minum Aluminium Custom:
+                            <h3 class="article-title"><a href="botol-minum-aluminium">Botol Minum Aluminium Custom:
                                     Souvenir Sporty & Awet</a></h3>
                             <p class="article-excerpt">Pilihan tepat untuk event lari, komunitas sepeda, dan kegiatan
                                 outdoor. Ringan, anti-pecah, dan full color printing.</p>
-                            <a href="botol-minum-aluminium.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="botol-minum-aluminium" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -143,11 +143,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">SEMINAR KIT</span>
-                            <h3 class="article-title"><a href="paket-seminar-kit-basic.html">Ide Isi Paket Seminar
+                            <h3 class="article-title"><a href="paket-seminar-kit-basic">Ide Isi Paket Seminar
                                     Kit Basic di Bawah 50 Ribu</a></h3>
                             <p class="article-excerpt">Siapa bilang budget mepet tidak bisa dapat souvenir bagus?
                                 Pelajari kombinasi item Totebag dan Pulpen yang ekonomis.</p>
-                            <a href="paket-seminar-kit-basic.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="paket-seminar-kit-basic" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -159,11 +159,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">TECH & GADGET</span>
-                            <h3 class="article-title"><a href="powerbank-custom-souvenir.html">Tips Memilih
+                            <h3 class="article-title"><a href="powerbank-custom-souvenir">Tips Memilih
                                     Powerbank Custom yang Aman untuk Souvenir</a></h3>
                             <p class="article-excerpt">Hindari powerbank abal-abal! Pelajari tentang Real Capacity dan
                                 fitur keamanan baterai agar tidak merusak reputasi Anda.</p>
-                            <a href="powerbank-custom-souvenir.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="powerbank-custom-souvenir" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -175,11 +175,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">DIGITAL PROMOTION</span>
-                            <h3 class="article-title"><a href="flashdisk-kartu-promosi.html">Flashdisk Kartu: Kartu
+                            <h3 class="article-title"><a href="flashdisk-kartu-promosi">Flashdisk Kartu: Kartu
                                     Nama Digital yang Multifungsi</a></h3>
                             <p class="article-excerpt">Inovasi kartu nama yang bisa menyimpan Company Profile digital.
                                 Area cetak luas untuk branding maksimal.</p>
-                            <a href="flashdisk-kartu-promosi.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="flashdisk-kartu-promosi" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -191,12 +191,12 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">LIFESTYLE GADGET</span>
-                            <h3 class="article-title"><a href="speaker-bluetooth-custom-logo.html">Speaker Bluetooth
+                            <h3 class="article-title"><a href="speaker-bluetooth-custom-logo">Speaker Bluetooth
                                     Mini:
                                     Souvenir Unik untuk Klien Milenial</a></h3>
                             <p class="article-excerpt">Hadiah yang menyenangkan dan pasti dipakai. Suara jernih dengan
                                 logo perusahaan Anda yang menyala (Light up logo).</p>
-                            <a href="speaker-bluetooth-custom-logo.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="speaker-bluetooth-custom-logo" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -208,12 +208,12 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">ECO GREEN</span>
-                            <h3 class="article-title"><a href="tumbler-bambu-grafir.html">Tumbler Bambu Estetik & Unik:
+                            <h3 class="article-title"><a href="tumbler-bambu-grafir">Tumbler Bambu Estetik & Unik:
                                     Simbol Keren Kepedulian Lingkungan</a></h3>
                             <p class="article-excerpt">Tunjukkan kepedulian lingkungan Anda dengan souvenir Tumbler
                                 Bambu.
                                 Desain natural dengan jeroan stainless tahan panas.</p>
-                            <a href="tumbler-bambu-grafir.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="tumbler-bambu-grafir" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -225,25 +225,25 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">GUIDE & TIPS</span>
-                            <h3 class="article-title"><a href="panduan-lengkap-seminar-kit.html">Panduan Lengkap Memilih
+                            <h3 class="article-title"><a href="panduan-lengkap-seminar-kit">Panduan Lengkap Memilih
                                     Seminar Kit: Strategi & Budgeting 2026</a></h3>
                             <p class="article-excerpt">Kupas tuntas cara memilih souvenir seminar yang tepat sasaran
                                 berdasarkan audiens (Mahasiswa vs Eksekutif) dan alokasi budget.</p>
-                            <a href="panduan-lengkap-seminar-kit.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="panduan-lengkap-seminar-kit" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog.html" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
-                        <a href="blog.html" class="page-link">1</a>
-                        <a href="blog-2.html" class="page-link active">2</a>
-                        <a href="blog-3.html" class="page-link">3</a>
-                        <a href="blog-4.html" class="page-link">4</a>
-                        <a href="blog-5.html" class="page-link">5</a>
-                        <a href="blog-6.html" class="page-link">6</a>
-                        <a href="blog-3.html" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        <a href="blog" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
+                        <a href="blog" class="page-link">1</a>
+                        <a href="blog-2" class="page-link active">2</a>
+                        <a href="blog-3" class="page-link">3</a>
+                        <a href="blog-4" class="page-link">4</a>
+                        <a href="blog-5" class="page-link">5</a>
+                        <a href="blog-6" class="page-link">6</a>
+                        <a href="blog-3" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
                     </div>
                 </div>
 
@@ -266,13 +266,13 @@
                         <div class="widget-card" style="margin-top: 2rem;">
                             <h3 class="widget-title">Kategori Populer</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Drinkware & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Seminar Kits</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Premium Gifts</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Eco-Friendly</a></li>
                             </ul>
                         </div>
@@ -308,22 +308,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -363,3 +363,4 @@
 </body>
 
 </html>
+
