--- a/blog-4.html
+++ b/blog-4.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog-3.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-3">
     <title>Blog & Wawasan Souvenir Kantor - Page 3 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/blog-3.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/blog-3">
     <meta property="og:type" content="blog">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -71,7 +71,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog - Page 4</span>
@@ -95,11 +95,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E0E7FF; color: #3730A3;">CORPORATE EVT</span>
-                            <h3 class="article-title"><a href="souvenir-rups-saham.html">Souvenir RUPS Saham & IPO:
+                            <h3 class="article-title"><a href="souvenir-rups-saham">Souvenir RUPS Saham & IPO:
                                     Cerminan Kredibilitas Emiten</a></h3>
                             <p class="article-excerpt">Pilihan merchandise level C-Suite untuk investor dan pemegang
                                 saham.</p>
-                            <a href="souvenir-rups-saham.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-rups-saham" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -112,11 +112,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FEE2E2; color: #991B1B;">END OF YEAR</span>
-                            <h3 class="article-title"><a href="souvenir-akhir-tahun-kalender.html">Souvenir Akhir Tahun:
+                            <h3 class="article-title"><a href="souvenir-akhir-tahun-kalender">Souvenir Akhir Tahun:
                                     Kalender 2026 & Agenda Eksklusif</a></h3>
                             <p class="article-excerpt">Mengapa kalender masih menjadi raja promosi? Temukan strategi
                                 branding 365 hari di sini.</p>
-                            <a href="souvenir-akhir-tahun-kalender.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-akhir-tahun-kalender" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -128,11 +128,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #ECFDF5; color: #047857;">SEASONAL</span>
-                            <h3 class="article-title"><a href="hampers-lebaran-perusahaan.html">Hampers Lebaran
+                            <h3 class="article-title"><a href="hampers-lebaran-perusahaan">Hampers Lebaran
                                     Perusahaan: Tips Memilih Bingkisan Berkesan</a></h3>
                             <p class="article-excerpt">Inspirasi paket lebaran elegan untuk klien dan karyawan. Lengkap
                                 dengan etika pengirimannya.</p>
-                            <a href="hampers-lebaran-perusahaan.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="hampers-lebaran-perusahaan" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -144,11 +144,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #F1F5F9; color: #334155;">HR & CAREER</span>
-                            <h3 class="article-title"><a href="onboarding-kit-karyawan.html">Onboarding Kit Karyawan:
+                            <h3 class="article-title"><a href="onboarding-kit-karyawan">Onboarding Kit Karyawan:
                                     Sambut Tim Baru dengan Berkesan</a></h3>
                             <p class="article-excerpt">Mengapa Welcome Kit penting untuk retensi karyawan? Simak ide
                                 isian paket yang efektif.</p>
-                            <a href="onboarding-kit-karyawan.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="onboarding-kit-karyawan" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -160,11 +160,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #DBEAFE; color: #1E40AF;">EVENT GUIDE</span>
-                            <h3 class="article-title"><a href="katalog-souvenir-event-perusahaan.html">Solusi Souvenir
+                            <h3 class="article-title"><a href="katalog-souvenir-event-perusahaan">Solusi Souvenir
                                     untuk Setiap Momen Perusahaan Anda</a></h3>
                             <p class="article-excerpt">Panduan lengkap memilih merchandise untuk Onboarding, Lebaran,
                                 Akhir Tahun, hingga RUPS.</p>
-                            <a href="katalog-souvenir-event-perusahaan.html" class="article-read-more">Baca Selengkapnya
+                            <a href="katalog-souvenir-event-perusahaan" class="article-read-more">Baca Selengkapnya
                                 <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -177,11 +177,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #DCFCE7; color: #15803D;">ECO &
                                 SUSTAINABILITY</span>
-                            <h3 class="article-title"><a href="souvenir-ramah-lingkungan.html">Koleksi Souvenir Kantor
+                            <h3 class="article-title"><a href="souvenir-ramah-lingkungan">Koleksi Souvenir Kantor
                                     Ramah Lingkungan: Solusi Branding Berkelanjutan</a></h3>
                             <p class="article-excerpt">Saatnya beralih ke souvenir yang berdampak positif untuk bumi dan
                                 citra perusahaan. Temukan opsi Tumbler Bambu dan Daur Ulang terbaik.</p>
-                            <a href="souvenir-ramah-lingkungan.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-ramah-lingkungan" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -193,11 +193,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FEF3C7; color: #B45309;">ECO STATIONERY</span>
-                            <h3 class="article-title"><a href="buku-daur-ulang.html">Buku Daur Ulang & Eco Pen: Souvenir
+                            <h3 class="article-title"><a href="buku-daur-ulang">Buku Daur Ulang & Eco Pen: Souvenir
                                     Seminar yang Bercerita Tentang Alam</a></h3>
                             <p class="article-excerpt">Kertas berwarna coklat natural kini jadi simbol kemewahan baru.
                                 Simak keunggulan Recycled Notebook dibanding Blocknote biasa.</p>
-                            <a href="buku-daur-ulang.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="buku-daur-ulang" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -209,11 +209,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFF7ED; color: #C2410C;">ZERO WASTE KIT</span>
-                            <h3 class="article-title"><a href="alat-makan-kayu.html">Set Alat Makan Kayu & Sedotan
+                            <h3 class="article-title"><a href="alat-makan-kayu">Set Alat Makan Kayu & Sedotan
                                     Stainless: Solusi Makan Siang Tanpa Sampah</a></h3>
                             <p class="article-excerpt">Tinggalkan sendok plastik sekali pakai! Upgrade bekal makan siang
                                 tim kantor Anda dengan cutlery set kayu custom yang higienis.</p>
-                            <a href="alat-makan-kayu.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="alat-makan-kayu" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -226,11 +226,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FAEBD7; color: #8B4513;">RUSTIC
                                 PACKAGING</span>
-                            <h3 class="article-title"><a href="tas-belacu-goni.html">Tas Belacu & Karung Goni Custom:
+                            <h3 class="article-title"><a href="tas-belacu-goni">Tas Belacu & Karung Goni Custom:
                                     Packaging Souvenir yang "Artsy"</a></h3>
                             <p class="article-excerpt">Bungkus souvenir Anda dengan kemasan yang bernilai. Simak bedanya
                                 Tas Belacu yang vintage dan Tas Goni yang eksotis di sini.</p>
-                            <a href="tas-belacu-goni.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="tas-belacu-goni" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -242,25 +242,25 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFFBEB; color: #B45309;">MERCHANDISE</span>
-                            <h3 class="article-title"><a href="topi-promosi-custom.html">Topi Promosi Custom: Trucker &
+                            <h3 class="article-title"><a href="topi-promosi-custom">Topi Promosi Custom: Trucker &
                                     Baseball Caps</a></h3>
                             <p class="article-excerpt">Baseball Cap bahan Rafel yang eksklusif atau Topi Trucker Jaring
                                 yang adem? Temukan jawabannya di panduan topi custom ini.</p>
-                            <a href="topi-promosi-custom.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="topi-promosi-custom" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog-3.html" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
-                        <a href="blog.html" class="page-link">1</a>
-                        <a href="blog-2.html" class="page-link">2</a>
-                        <a href="blog-3.html" class="page-link">3</a>
-                        <a href="blog-4.html" class="page-link active">4</a>
-                        <a href="blog-5.html" class="page-link">5</a>
-                        <a href="blog-6.html" class="page-link">6</a>
-                        <a href="blog-5.html" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        <a href="blog-3" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
+                        <a href="blog" class="page-link">1</a>
+                        <a href="blog-2" class="page-link">2</a>
+                        <a href="blog-3" class="page-link">3</a>
+                        <a href="blog-4" class="page-link active">4</a>
+                        <a href="blog-5" class="page-link">5</a>
+                        <a href="blog-6" class="page-link">6</a>
+                        <a href="blog-5" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
                     </div>
                 </div>
 
@@ -282,15 +282,15 @@
                     <div class="widget-card" style="margin-top: 2rem;">
                         <h3 class="widget-title">Kategori Populer</h3>
                         <ul class="cat-list">
-                            <li class="cat-item"><a href="category-drinkware.html"><i class="fa-solid fa-mug-hot"></i>
+                            <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
                                     Drinkware
                                     & Tumbler</a></li>
-                            <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-briefcase"></i>
+                            <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
                                     Seminar
                                     Kits</a></li>
-                            <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                            <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                     Premium Gifts</a></li>
-                            <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                            <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                     Eco-Friendly</a></li>
                         </ul>
                     </div>
@@ -324,22 +324,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -379,3 +379,4 @@
 </body>
 
 </html>
+
