--- a/blog-5.html
+++ b/blog-5.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog-5.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-5">
     <title>Blog & Wawasan Souvenir Kantor - Page 5 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -22,16 +22,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -61,7 +61,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog - Page 5</span>
@@ -87,11 +87,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFF7ED; color: #C2410C;">ACADEMIC
                                 PRESTIGE</span>
-                            <h3 class="article-title"><a href="souvenir-promosi-doktor-guru-besar.html">Souvenir Promosi
+                            <h3 class="article-title"><a href="souvenir-promosi-doktor-guru-besar">Souvenir Promosi
                                     Doktor: Gift Set Premium untuk Akademisi</a></h3>
                             <p class="article-excerpt">Koleksi eksklusif Leather Clutch, TWS, dan Powerbank untuk momen
                                 pengukuhan Guru Besar.</p>
-                            <a href="souvenir-promosi-doktor-guru-besar.html" class="article-read-more">Baca
+                            <a href="souvenir-promosi-doktor-guru-besar" class="article-read-more">Baca
                                 Selengkapnya <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -105,11 +105,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #EFF6FF; color: #1E3A8A;">EVENT
                                 ORGANIZATION</span>
-                            <h3 class="article-title"><a href="paket-seminar-nasional-internasional.html">Paket Seminar
+                            <h3 class="article-title"><a href="paket-seminar-nasional-internasional">Paket Seminar
                                     Kit Akademik: Murah, Cepat, Berbobot</a></h3>
                             <p class="article-excerpt">Panduan hemat untuk panitia acara: Tas Kanvas, Blocknote Spiral,
                                 dan Pulpen Stylus dalam satu paket.</p>
-                            <a href="paket-seminar-nasional-internasional.html" class="article-read-more">Baca
+                            <a href="paket-seminar-nasional-internasional" class="article-read-more">Baca
                                 Selengkapnya <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -123,11 +123,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFF1F2; color: #BE123C;">MASS
                                 PRODUCTION</span>
-                            <h3 class="article-title"><a href="merchandise-mahasiswa-baru.html">Merchandise Mahasiswa
+                            <h3 class="article-title"><a href="merchandise-mahasiswa-baru">Merchandise Mahasiswa
                                     Baru: Pengadaan 1.000+ Pcs Siap Kirim</a></h3>
                             <p class="article-excerpt">Solusi konveksi kaos, topi, dan lanyard Ospek untuk panitia
                                 PKKMB. Kualitas seragam, deadline aman.</p>
-                            <a href="merchandise-mahasiswa-baru.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="merchandise-mahasiswa-baru" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -139,11 +139,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #F0FDF4; color: #15803D;">NOSTALGIA</span>
-                            <h3 class="article-title"><a href="souvenir-reuni-alumni.html">Souvenir Reuni Akbar:
+                            <h3 class="article-title"><a href="souvenir-reuni-alumni">Souvenir Reuni Akbar:
                                     Kenangan Tak Terlupakan</a></h3>
                             <p class="article-excerpt">Inspirasi merchandise untuk acara temu kangen: Polo Shirt Bordir,
                                 Payung Golf, dan Mug Klasik.</p>
-                            <a href="souvenir-reuni-alumni.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-reuni-alumni" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -156,11 +156,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E0F2FE; color: #0369A1;">CAMPUS /
                                 ACADEMIC</span>
-                            <h3 class="article-title"><a href="souvenir-kampus-universitas.html">Pusat Souvenir Kampus,
+                            <h3 class="article-title"><a href="souvenir-kampus-universitas">Pusat Souvenir Kampus,
                                     Universitas & Promosi Doktor Terlengkap</a></h3>
                             <p class="article-excerpt">Katalog merchandise untuk Ospek Mahasiswa Baru, Seminar Kit,
                                 hingga Souvenir Wisuda Guru Besar.</p>
-                            <a href="souvenir-kampus-universitas.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="souvenir-kampus-universitas" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -173,11 +173,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FFEDD5; color: #9A3412;">AREA ISTIMEWA
                                 (DIY)</span>
-                            <h3 class="article-title"><a href="vendor-souvenir-kantor-jogja.html">Vendor Souvenir Kantor
+                            <h3 class="article-title"><a href="vendor-souvenir-kantor-jogja">Vendor Souvenir Kantor
                                     Jogja: Merchandise Unik & Berbudaya</a></h3>
                             <p class="article-excerpt">Temukan souvenir kantor dengan sentuhan etnik khas Jogja.
                                 Melayani kampus UGM, UNY, dan hotel di Yogyakarta.</p>
-                            <a href="vendor-souvenir-kantor-jogja.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="vendor-souvenir-kantor-jogja" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -190,11 +190,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #DCFCE7; color: #166534;">AREA MALANG
                                 RAYA</span>
-                            <h3 class="article-title"><a href="vendor-souvenir-kantor-malang.html">Vendor Souvenir
+                            <h3 class="article-title"><a href="vendor-souvenir-kantor-malang">Vendor Souvenir
                                     Kantor Malang: Solusi Merchandise Kreatif</a></h3>
                             <p class="article-excerpt">Pusat souvenir untuk seminar kampus dan hotel di Malang & Batu.
                                 Desain unik dengan harga bersahabat.</p>
-                            <a href="vendor-souvenir-kantor-malang.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="vendor-souvenir-kantor-malang" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -206,11 +206,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #CCFBF1; color: #0F766E;">JAWA TIMUR HUB</span>
-                            <h3 class="article-title"><a href="vendor-souvenir-kantor-surabaya.html">Vendor Souvenir
+                            <h3 class="article-title"><a href="vendor-souvenir-kantor-surabaya">Vendor Souvenir
                                     Kantor Surabaya: Pabrik Merchandise Terpercaya</a></h3>
                             <p class="article-excerpt">Pusat produksi souvenir seminar dan kantor di Surabaya. Hemat
                                 ongkir untuk pengiriman ke Indonesia Timur.</p>
-                            <a href="vendor-souvenir-kantor-surabaya.html" class="article-read-more">Baca Selengkapnya
+                            <a href="vendor-souvenir-kantor-surabaya" class="article-read-more">Baca Selengkapnya
                                 <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -223,11 +223,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E0E7FF; color: #1E40AF;">JAKARTA
                                 SERVICE</span>
-                            <h3 class="article-title"><a href="vendor-souvenir-kantor-jakarta.html">Vendor Souvenir
+                            <h3 class="article-title"><a href="vendor-souvenir-kantor-jakarta">Vendor Souvenir
                                     Kantor Jakarta: Layanan Cepat & Premium</a></h3>
                             <p class="article-excerpt">Melayani area SCBD, Kuningan, dan Sudirman. Solusi merchandise
                                 kilat untuk event mendadak di Ibu Kota.</p>
-                            <a href="vendor-souvenir-kantor-jakarta.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="vendor-souvenir-kantor-jakarta" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -240,25 +240,25 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E2E8F0; color: #1E293B;">CORPORATE
                                 INSIGHTS</span>
-                            <h3 class="article-title"><a href="vendor-souvenir-kantor-profesional.html">Vendor Souvenir
+                            <h3 class="article-title"><a href="vendor-souvenir-kantor-profesional">Vendor Souvenir
                                     Kantor Profesional: Kunci Sukses Branding Perusahaan Anda</a></h3>
                             <p class="article-excerpt">Jangan pertaruhkan citra perusahaan. Simak ciri-ciri vendor
                                 souvenir terpercaya dan bagaimana memilih mitra pengadaan yang tepat.</p>
-                            <a href="vendor-souvenir-kantor-profesional.html" class="article-read-more">Baca
+                            <a href="vendor-souvenir-kantor-profesional" class="article-read-more">Baca
                                 Selengkapnya <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog-4.html" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
-                        <a href="blog.html" class="page-link">1</a>
-                        <a href="blog-2.html" class="page-link">2</a>
-                        <a href="blog-3.html" class="page-link">3</a>
-                        <a href="blog-4.html" class="page-link">4</a>
-                        <a href="blog-5.html" class="page-link active">5</a>
-                        <a href="blog-6.html" class="page-link">6</a>
-                        <a href="blog-6.html" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        <a href="blog-4" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
+                        <a href="blog" class="page-link">1</a>
+                        <a href="blog-2" class="page-link">2</a>
+                        <a href="blog-3" class="page-link">3</a>
+                        <a href="blog-4" class="page-link">4</a>
+                        <a href="blog-5" class="page-link active">5</a>
+                        <a href="blog-6" class="page-link">6</a>
+                        <a href="blog-6" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
                     </div>
                 </div>
 
@@ -280,15 +280,15 @@
                     <div class="widget-card" style="margin-top: 2rem;">
                         <h3 class="widget-title">Kategori Populer</h3>
                         <ul class="cat-list">
-                            <li class="cat-item"><a href="category-drinkware.html"><i class="fa-solid fa-mug-hot"></i>
+                            <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
                                     Drinkware
                                     & Tumbler</a></li>
-                            <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-briefcase"></i>
+                            <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
                                     Seminar
                                     Kits</a></li>
-                            <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                            <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                     Premium Gifts</a></li>
-                            <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                            <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                     Eco-Friendly</a></li>
                         </ul>
                     </div>
@@ -322,22 +322,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
