--- a/blog-6.html
+++ b/blog-6.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog-6.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-6">
     <title>Blog & Wawasan Souvenir Kantor - Page 6 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -22,16 +22,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -61,7 +61,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog - Page 6</span>
@@ -87,11 +87,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #F1F5F9; color: #0F172A;">CORPORATE
                                 BRANDING</span>
-                            <h3 class="article-title"><a href="merchandise-perusahaan-bisnis.html">Jasa Pembuatan
+                            <h3 class="article-title"><a href="merchandise-perusahaan-bisnis">Jasa Pembuatan
                                     Merchandise Perusahaan & Bisnis Custom Logo</a></h3>
                             <p class="article-excerpt">Strategi meningkatkan brand awareness melalui barang promosi
                                 kantor yang elegan, fungsional, dan berkualitas premium.</p>
-                            <a href="merchandise-perusahaan-bisnis.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="merchandise-perusahaan-bisnis" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -104,11 +104,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #fce7f3; color: #db2777;">GIVEAWAY &
                                 EXPO</span>
-                            <h3 class="article-title"><a href="merchandise-promosi-branding.html">Merchandise Promosi &
+                            <h3 class="article-title"><a href="merchandise-promosi-branding">Merchandise Promosi &
                                     Branding: Strategi Giveaway Murah Meriah Tapi Berkelas</a></h3>
                             <p class="article-excerpt">Ide souvenir murah untuk event pameran: Kipas Tangan, Pulpen, dan
                                 Keychain. Solusi branding massal budget minim.</p>
-                            <a href="merchandise-promosi-branding.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="merchandise-promosi-branding" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -121,11 +121,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #fff7ed; color: #9a3412;">VIP &
                                 EXECUTIVE</span>
-                            <h3 class="article-title"><a href="merchandise-kantor-eksklusif.html">Merchandise Kantor
+                            <h3 class="article-title"><a href="merchandise-kantor-eksklusif">Merchandise Kantor
                                     Eksklusif: Simbol Prestise & Apresiasi Tertinggi</a></h3>
                             <p class="article-excerpt">Kurasikan gift set mewah untuk Klien VIP dan Onboarding Kit
                                 karyawan. Material kulit asli dan packaging hardbox eksklusif.</p>
-                            <a href="merchandise-kantor-eksklusif.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="merchandise-kantor-eksklusif" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -138,11 +138,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #eff6ff; color: #1e3a8a;">PRODUCTION &
                                 TECH</span>
-                            <h3 class="article-title"><a href="cetak-logo-custom-satuan-grosir.html">Jasa Cetak Logo
+                            <h3 class="article-title"><a href="cetak-logo-custom-satuan-grosir">Jasa Cetak Logo
                                     Custom Satuan & Grosir: Pilih Teknik yang Tepat</a></h3>
                             <p class="article-excerpt">Panduan teknis memilih metode branding: UV Print untuk satuan
                                 full color, Laser Grafir untuk metal abadi, atau Sablon untuk grosir murah.</p>
-                            <a href="cetak-logo-custom-satuan-grosir.html" class="article-read-more">Baca Selengkapnya
+                            <a href="cetak-logo-custom-satuan-grosir" class="article-read-more">Baca Selengkapnya
                                 <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -155,11 +155,11 @@
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #eef2ff; color: #3730a3;">ACADEMIC &
                                 UNIVERSITY</span>
-                            <h3 class="article-title"><a href="souvenir-promosi-doktor-guru-besar.html">7 Ide Souvenir
+                            <h3 class="article-title"><a href="souvenir-promosi-doktor-guru-besar">7 Ide Souvenir
                                     Promosi Doktor yang Berkesan untuk Dewan Penguji (Update 2026)</a></h3>
                             <p class="article-excerpt">Rekomendasi gift set premium untuk Promotor dan Penguji Sidang.
                                 Paket Powerbank + Pen Parker atau Tumbler Suhu Custom Grafir Nama.</p>
-                            <a href="souvenir-promosi-doktor-guru-besar.html" class="article-read-more">Baca
+                            <a href="souvenir-promosi-doktor-guru-besar" class="article-read-more">Baca
                                 Selengkapnya <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -171,24 +171,24 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #fff7ed; color: #9a3412;">TIPS & ETIKET</span>
-                            <h3 class="article-title"><a href="etika-memberi-cinderamata-sidang-disertasi.html">Etika
+                            <h3 class="article-title"><a href="etika-memberi-cinderamata-sidang-disertasi">Etika
                                     Memberi Cinderamata pada Sidang Terbuka / Tertutup Disertasi</a></h3>
                             <p class="article-excerpt">Panduan budget, packaging hardbox yang sopan, dan waktu pemberian
                                 yang tepat agar tidak dianggap gratifikasi. Hindari kesalahan fatal ini.</p>
-                            <a href="etika-memberi-cinderamata-sidang-disertasi.html" class="article-read-more">Baca
+                            <a href="etika-memberi-cinderamata-sidang-disertasi" class="article-read-more">Baca
                                 Selengkapnya <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog-5.html" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
-                        <a href="blog.html" class="page-link">1</a>
-                        <a href="blog-2.html" class="page-link">2</a>
-                        <a href="blog-3.html" class="page-link">3</a>
-                        <a href="blog-4.html" class="page-link">4</a>
-                        <a href="blog-5.html" class="page-link">5</a>
-                        <a href="blog-6.html" class="page-link active">6</a>
+                        <a href="blog-5" class="page-link"><i class="fa-solid fa-chevron-left"></i></a>
+                        <a href="blog" class="page-link">1</a>
+                        <a href="blog-2" class="page-link">2</a>
+                        <a href="blog-3" class="page-link">3</a>
+                        <a href="blog-4" class="page-link">4</a>
+                        <a href="blog-5" class="page-link">5</a>
+                        <a href="blog-6" class="page-link active">6</a>
                     </div>
                 </div>
 
@@ -210,15 +210,15 @@
                     <div class="widget-card" style="margin-top: 2rem;">
                         <h3 class="widget-title">Kategori Populer</h3>
                         <ul class="cat-list">
-                            <li class="cat-item"><a href="category-drinkware.html"><i class="fa-solid fa-mug-hot"></i>
+                            <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
                                     Drinkware
                                     & Tumbler</a></li>
-                            <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-briefcase"></i>
+                            <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
                                     Seminar
                                     Kits</a></li>
-                            <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                            <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                     Premium Gifts</a></li>
-                            <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                            <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                     Eco-Friendly</a></li>
                         </ul>
                     </div>
@@ -252,22 +252,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
