--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/blog.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog">
     <title>Blog & Wawasan Souvenir Kantor | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/blog.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/blog">
     <meta property="og:type" content="blog">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -71,7 +71,7 @@
     <div style="background: var(--muted); padding: 1rem 0; border-bottom: 1px solid var(--border);">
         <div class="container">
             <nav style="font-size: 0.9rem; color: var(--muted-foreground);">
-                <a href="index.html"
+                <a href="./"
                     style="text-decoration: none; color: var(--muted-foreground); transition: color 0.2s;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 600;">Blog</span>
@@ -97,11 +97,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #FEF9C3; color: #854D0E;">STRATEGI 2026</span>
-                            <h3 class="article-title"><a href="rekomendasi-souvenir-kantor-2026.html">Rekomendasi
+                            <h3 class="article-title"><a href="rekomendasi-souvenir-kantor-2026">Rekomendasi
                                     Souvenir Kantor 2026: Tren Eco & Tech Dominasi Pasar</a></h3>
                             <p class="article-excerpt">Prediksi lengkap tren merchandise tahun depan. Mengapa
                                 'Sustainable Gift' dan 'Smart Gadget' akan menjadi standar baru corporate gifting.</p>
-                            <a href="rekomendasi-souvenir-kantor-2026.html" class="article-read-more">Baca Selengkapnya
+                            <a href="rekomendasi-souvenir-kantor-2026" class="article-read-more">Baca Selengkapnya
                                 <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -113,11 +113,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #E0E7FF; color: #3730A3;">PILLAR PAGE</span>
-                            <h3 class="article-title"><a href="souvenir-tumbler-botol.html">Pusat Souvenir Tumbler &
+                            <h3 class="article-title"><a href="souvenir-tumbler-botol">Pusat Souvenir Tumbler &
                                     Botol Minum Custom Logo (Terlengkap)</a></h3>
                             <p class="article-excerpt">Panduan teknis memilih bahan tumbler (Stainless 304 vs Plastik),
                                 metode cetak logo (Laser vs UV), dan rekomendasi model sesuai budget.</p>
-                            <a href="souvenir-tumbler-botol.html" class="article-read-more">Baca Panduan Lengkap <i
+                            <a href="souvenir-tumbler-botol" class="article-read-more">Baca Panduan Lengkap <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -129,11 +129,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag" style="background: #DCFCE7; color: #166534;">EVENT TIPS</span>
-                            <h3 class="article-title"><a href="tips-memilih-paket-seminar.html">5 Tips Memilih Paket
+                            <h3 class="article-title"><a href="tips-memilih-paket-seminar">5 Tips Memilih Paket
                                     Seminar Kit yang Efektif & Hemat Budget</a></h3>
                             <p class="article-excerpt">Strategi alokasi dana untuk panitia event. Prioritaskan item
                                 fungsional seperti Totebag Canvas dan Tumbler daripada gimmick yang tidak berguna.</p>
-                            <a href="tips-memilih-paket-seminar.html" class="article-read-more">Pelajari Tipsnya <i
+                            <a href="tips-memilih-paket-seminar" class="article-read-more">Pelajari Tipsnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -145,11 +145,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">PRODUCT INSIGHT</span>
-                            <h3 class="article-title"><a href="tumbler-stainless-vacuum.html">Mengenal Teknologi Tumbler
+                            <h3 class="article-title"><a href="tumbler-stainless-vacuum">Mengenal Teknologi Tumbler
                                     Stainless Vacuum (Tahan Panas 12 Jam)</a></h3>
                             <p class="article-excerpt">Mengapa tumbler vacuum lebih mahal? Bedah tuntas mekanisme
                                 isolasi panas dan cara merawatnya agar awet.</p>
-                            <a href="tumbler-stainless-vacuum.html" class="article-read-more">Lihat Review <i
+                            <a href="tumbler-stainless-vacuum" class="article-read-more">Lihat Review <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -162,11 +162,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">INSPIRASI DESAIN</span>
-                            <h3 class="article-title"><a href="kelebihan-mug-keramik.html">Mug Keramik Custom: Souvenir
+                            <h3 class="article-title"><a href="kelebihan-mug-keramik">Mug Keramik Custom: Souvenir
                                     Klasik yang Tak Pernah Salah</a></h3>
                             <p class="article-excerpt">Mengapa mug keramik tetap menjadi pilihan favorit meski di era
                                 digital? Temukan kelebihan dan opsi brandingnya.</p>
-                            <a href="kelebihan-mug-keramik.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="kelebihan-mug-keramik" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -178,11 +178,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">OUTDOOR & LIFESTYLE</span>
-                            <h3 class="article-title"><a href="botol-sport-aluminium.html">Botol Aluminium Sport:
+                            <h3 class="article-title"><a href="botol-sport-aluminium">Botol Aluminium Sport:
                                     Pilihan Tepat untuk Event Outdoor</a></h3>
                             <p class="article-excerpt">Ringan, kuat, dan anti-pecah. Solusi merchandise untuk acara
                                 gathering, fun run, atau outbound perusahaan.</p>
-                            <a href="botol-sport-aluminium.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="botol-sport-aluminium" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -194,11 +194,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">BUDGET SOLUTION</span>
-                            <h3 class="article-title"><a href="tumbler-insert-paper.html">Tumbler Insert Paper: Solusi
+                            <h3 class="article-title"><a href="tumbler-insert-paper">Tumbler Insert Paper: Solusi
                                     Souvenir Murah & Ekspres</a></h3>
                             <p class="article-excerpt">Butuh souvenir cepat dengan full color printing? Tumbler insert
                                 paper adalah jawabannya. Pengerjaan bisa 1 hari!</p>
-                            <a href="tumbler-insert-paper.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="tumbler-insert-paper" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -210,11 +210,11 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">SEMINAR ESSENTIALS</span>
-                            <h3 class="article-title"><a href="tas-seminar-laptop-vs-ransel.html">Tas Seminar Laptop vs
+                            <h3 class="article-title"><a href="tas-seminar-laptop-vs-ransel">Tas Seminar Laptop vs
                                     Ransel: Mana yang Lebih Efektif?</a></h3>
                             <p class="article-excerpt">Perbandingan jenis tas untuk seminar kit. Sesuaikan dengan profil
                                 peserta dan durasi acara Anda.</p>
-                            <a href="tas-seminar-laptop-vs-ransel.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="tas-seminar-laptop-vs-ransel" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
@@ -226,24 +226,24 @@
                         </div>
                         <div class="article-card-content">
                             <span class="article-tag">OFFICE STATIONERY</span>
-                            <h3 class="article-title"><a href="buku-agenda-kerja.html">Pentingnya Buku Agenda Custom
+                            <h3 class="article-title"><a href="buku-agenda-kerja">Pentingnya Buku Agenda Custom
                                     untuk Produktivitas Karyawan</a></h3>
                             <p class="article-excerpt">Agenda fisik masih relevan untuk mencatat ide dan jadwal. Lihat
                                 opsi jilid spiral vs hard cover.</p>
-                            <a href="buku-agenda-kerja.html" class="article-read-more">Baca Selengkapnya <i
+                            <a href="buku-agenda-kerja" class="article-read-more">Baca Selengkapnya <i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </article>
 
                     <!-- Pagination -->
                     <div class="pagination">
-                        <a href="blog.html" class="page-link active">1</a>
-                        <a href="blog-2.html" class="page-link">2</a>
-                        <a href="blog-3.html" class="page-link">3</a>
-                        <a href="blog-4.html" class="page-link">4</a>
-                        <a href="blog-5.html" class="page-link">5</a>
-                        <a href="blog-6.html" class="page-link">6</a>
-                        <a href="blog-2.html" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
+                        <a href="blog" class="page-link active">1</a>
+                        <a href="blog-2" class="page-link">2</a>
+                        <a href="blog-3" class="page-link">3</a>
+                        <a href="blog-4" class="page-link">4</a>
+                        <a href="blog-5" class="page-link">5</a>
+                        <a href="blog-6" class="page-link">6</a>
+                        <a href="blog-2" class="page-link"><i class="fa-solid fa-chevron-right"></i></a>
                     </div>
                 </div>
 
@@ -266,13 +266,13 @@
                         <div class="widget-card" style="margin-top: 2rem;">
                             <h3 class="widget-title">Kategori Populer</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Drinkware & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Seminar Kits</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Premium Gifts</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Eco-Friendly</a></li>
                             </ul>
                         </div>
@@ -308,22 +308,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -363,3 +363,4 @@
 </body>
 
 </html>
+
