--- a/botol-minum-aluminium.html
+++ b/botol-minum-aluminium.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/botol-minum-aluminium.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/botol-minum-aluminium">
     <title>Botol Minum Aluminium Custom: Souvenir Sporty & Awet (Grosir) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cari souvenir yang tangguh untuk event outdoor? Botol Aluminium adalah jawabannya. Ringan, anti-karat, dan bisa dibranding dengan logo full color.">
     <meta property="og:image" content="assets/drinkware-sport.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/botol-minum-aluminium.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/botol-minum-aluminium">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -268,16 +268,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -292,9 +292,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Botol Aluminium</span>
             </nav>
@@ -368,13 +368,13 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Baca Juga:</h4>
                         <ul style="margin-bottom: 0; padding-left: 1.5rem;">
                             <li style="margin-bottom: 0.5rem;">
-                                <a href="souvenir-tumbler-botol.html"
+                                <a href="souvenir-tumbler-botol"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Panduan Lengkap Pusat Souvenir Tumbler & Botol Minum (Ultimate Guide)
                                 </a>
                             </li>
                             <li>
-                                <a href="tumbler-stainless-vacuum.html"
+                                <a href="tumbler-stainless-vacuum"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Tumbler Stainless Vacuum: Solusi Tahan Panas untuk VIP
                                 </a>
@@ -567,11 +567,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Cek%20Botol%20Aluminium%20Keren%20ini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium.html"
+                        <a href="https://wa.me/?text=Cek%20Botol%20Aluminium%20Keren%20ini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-minum-aluminium"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -612,9 +612,9 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-bottle-water"></i> Drinkware</a></li>
-                                <li class="cat-item"><a href="category-express.html"><i class="fa-solid fa-bolt"></i>
+                                <li class="cat-item"><a href="category-express"><i class="fa-solid fa-bolt"></i>
                                         Layanan Kilat</a></li>
                             </ul>
                         </div>
@@ -630,14 +630,14 @@
                                     alt="Tumbler Thermos">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-tumbler-botol.html"
+                                            href="souvenir-tumbler-botol"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ultimate
                                             Guide Souvenir Tumbler</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Panduan lengkap memilih
                                         jenis tumbler.</p>
-                                    <a href="souvenir-tumbler-botol.html"
+                                    <a href="souvenir-tumbler-botol"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -648,14 +648,14 @@
                                     alt="Tumbler Plastik">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-insert-paper.html"
+                                            href="tumbler-insert-paper"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Insert Paper Murah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Solusi souvenir massal
                                         paling hemat budget.</p>
-                                    <a href="tumbler-insert-paper.html"
+                                    <a href="tumbler-insert-paper"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -666,14 +666,14 @@
                                     alt="Gift Set">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-perusahaan-eksklusif.html"
+                                            href="souvenir-perusahaan-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ide
                                             Souvenir Kantor Eksklusif</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi gift set untuk
                                         klien premium.</p>
-                                    <a href="souvenir-perusahaan-eksklusif.html"
+                                    <a href="souvenir-perusahaan-eksklusif"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -707,21 +707,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -812,3 +812,5 @@
 </body>
 
 </html>
+
+
