--- a/botol-sport-aluminium.html
+++ b/botol-sport-aluminium.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/botol-sport-aluminium.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/botol-sport-aluminium">
     <title>Botol Aluminium Sport: Souvenir Event Outdoor & Fun Run Terbaik | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Solusi merchandise anti-pecah dan ringan untuk acara lapangan. Temukan kelebihan botol aluminium dibanding plastik.">
     <meta property="og:image" content="assets/drinkware-sport.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/botol-sport-aluminium.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/botol-sport-aluminium">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -261,16 +261,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -285,9 +285,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Botol Aluminium Sport</span>
             </nav>
@@ -399,7 +399,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Mengadakan event seminar indoor? Cek rekomendasi kami untuk <a
-                            href="paket-seminar-kit-basic.html"
+                            href="paket-seminar-kit-basic"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Paket Seminar Kit
                             Basic: Hemat & Elegan</a>.
                     </div>
@@ -483,7 +483,7 @@
                         <h4 style="margin-top: 0;">Do's & Don'ts:</h4>
                         <ul style="margin-bottom: 0;">
                             <li><strong>Jangan Diisi Air Panas Mendidih:</strong> Aluminium adalah konduktor panas yang
-                                sangat baik (single wall). Jika diisi air 100°C, kulit botol akan langsung 100°C dan
+                                sangat baik (single wall). Jika diisi air 100Â°C, kulit botol akan langsung 100Â°C dan
                                 membakar tangan Anda. Gunakan hanya untuk air dingin/hangat kuku.</li>
                             <li><strong>Jangan Masuk Freezer:</strong> Air yang membeku akan memuai dan bisa mendesak
                                 dinding aluminium hingga penyok atau pecah. Cukup masukkan es batu lewat mulut botol.
@@ -522,7 +522,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Mencari opsi premium untuk direksi? Baca ulasan kami: <a
-                            href="tumbler-stainless-vacuum.html"
+                            href="tumbler-stainless-vacuum"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Keunggulan Tumbler
                             Stainless Vacuum untuk Corporate Gift</a>.
                     </div>
@@ -591,12 +591,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Baca%20artikel%20Botol%20Sport%20Aluminium%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium.html"
+                        <a href="https://wa.me/?text=Baca%20artikel%20Botol%20Sport%20Aluminium%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbotol-sport-aluminium"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -638,11 +638,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Semua Drinkware</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-lifestyle.html"><i class="fa-solid fa-shirt"></i>
+                                <li class="cat-item"><a href="category-lifestyle"><i class="fa-solid fa-shirt"></i>
                                         Kaos & Apparel Event</a></li>
                             </ul>
                         </div>
@@ -658,7 +658,7 @@
                                     alt="Mug Keramik">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="kelebihan-mug-keramik.html"
+                                            href="kelebihan-mug-keramik"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Mug
                                             Keramik Custom: Souvenir Klasik</a></h4>
                                     <span
@@ -673,7 +673,7 @@
                                     alt="Tumbler Vacuum">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-stainless-vacuum.html"
+                                            href="tumbler-stainless-vacuum"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Teknologi
                                             Tumbler Stainless Vacuum</a></h4>
                                 </div>
@@ -686,7 +686,7 @@
                                     alt="Tren 2026">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir Kantor 2026</a></h4>
                                 </div>
@@ -724,22 +724,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -831,3 +831,5 @@
 </body>
 
 </html>
+
+
