--- a/buku-agenda-kerja.html
+++ b/buku-agenda-kerja.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/buku-agenda-kerja.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/buku-agenda-kerja">
     <title>Pentingnya Buku Agenda Custom untuk Produktivitas Karyawan | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Agenda fisik masih relevan untuk mencatat ide dan jadwal. Lihat opsi jilid spiral vs hard cover.">
     <meta property="og:image" content="assets/executive-leather.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-kerja.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-kerja">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -262,16 +262,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -286,9 +286,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Buku Agenda Custom</span>
             </nav>
@@ -405,7 +405,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Agenda kerja sangat cocok dikombinasikan dalam gift set. Lihat
-                        inspirasinya di <a href="rekomendasi-souvenir-kantor-2026.html"
+                        inspirasinya di <a href="rekomendasi-souvenir-kantor-2026"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Rekomendasi Souvenir
                             Kantor 2026</a>.
                     </div>
@@ -439,8 +439,8 @@
                         metode <em>Bullet Journal</em> simpel:
                     </p>
                     <ol>
-                        <li>Gunakan simbol kotak (☐) untuk tugas (To-do).</li>
-                        <li>Gunakan titik (•) untuk catatan/ide.</li>
+                        <li>Gunakan simbol kotak (â˜) untuk tugas (To-do).</li>
+                        <li>Gunakan titik (â€¢) untuk catatan/ide.</li>
                         <li>Gunakan lingkaran (O) untuk event/jadwal.</li>
                         <li>Coret tugas yang sudah selesai. Kepuasan mencoret secara fisik ini memberikan dopamin yang
                             memotivasi!</li>
@@ -501,7 +501,7 @@
 
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
-                        <strong>Baca Juga:</strong> Lengkapi meja kerja karyawan dengan <a href="category-gadget.html"
+                        <strong>Baca Juga:</strong> Lengkapi meja kerja karyawan dengan <a href="category-gadget"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Gadget & Aksesoris
                             Meja</a> pendukung lainnya.
                     </div>
@@ -569,12 +569,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Pentingnya%20buku%20agenda%20kerja%20fisik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja.html"
+                        <a href="https://wa.me/?text=Pentingnya%20buku%20agenda%20kerja%20fisik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-kerja"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -615,11 +615,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-book-journal-whills"></i> Agenda & Notebook</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-pen-nib"></i>
                                         Pulpen Metal Promosi</a></li>
                             </ul>
@@ -636,7 +636,7 @@
                                     alt="Pulpen Metal">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Gift Set Eksekutif 2026</a></h4>
                                     <span
@@ -651,7 +651,7 @@
                                     alt="Tas Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-seminar-laptop-vs-ransel.html"
+                                            href="tas-seminar-laptop-vs-ransel"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Laptop vs Ransel: Mana yang Lebih Efektif?</a></h4>
                                 </div>
@@ -664,7 +664,7 @@
                                     alt="Flashdisk">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Flashdisk
                                             Kartu untuk Souvenir Perusahaan</a></h4>
                                 </div>
@@ -699,21 +699,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -804,3 +804,5 @@
 </body>
 
 </html>
+
+
