--- a/buku-agenda-notebook.html
+++ b/buku-agenda-notebook.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/buku-agenda-notebook.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/buku-agenda-notebook">
     <title>Cetak Buku Agenda Custom: Pilihan Notebook Kulit & Hardcover 2026 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan jenis buku agenda yang tepat untuk perusahaan Anda. Dari kesan klasik Agenda Kulit hingga praktisnya Blocknote Spiral.">
     <meta property="og:image" content="assets/executive-leather.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-notebook.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-notebook">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -268,16 +268,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -292,9 +292,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Buku Agenda Custom</span>
             </nav>
@@ -332,7 +332,7 @@
                     <p>
                         Bagi perusahaan, <strong>Buku Agenda Custom</strong> bukan sekadar alat tulis. Ia adalah "Mobile
                         Billboard" yang dibawa oleh karyawan atau klien Anda ke berbagai pertemuan bisnis. Memilih
-                        spesifikasi yang tepat—mulai dari bahan cover hingga jenis kertas—adalah kunci agar notebook
+                        spesifikasi yang tepatâ€”mulai dari bahan cover hingga jenis kertasâ€”adalah kunci agar notebook
                         tersebut benar-benar dipakai dan dihargai.
                     </p>
 
@@ -386,13 +386,13 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Baca Juga:</h4>
                         <ul style="margin-bottom: 0; padding-left: 1.5rem;">
                             <li style="margin-bottom: 0.5rem;">
-                                <a href="paket-seminar-eksklusif.html"
+                                <a href="paket-seminar-eksklusif"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Paket Seminar Kit Eksklusif Hardbox dengan Agenda Kulit
                                 </a>
                             </li>
                             <li>
-                                <a href="panduan-lengkap-seminar-kit.html"
+                                <a href="panduan-lengkap-seminar-kit"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Panduan Lengkap Memilih Seminar Kit: Strategi & Budgeting
                                 </a>
@@ -539,11 +539,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Cetak%20Agenda%20Custom%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Cetak%20Agenda%20Custom%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-agenda-notebook"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -574,7 +574,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Perlu Paket Lengkap?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Agenda + Pulpen +
                                 Tumbler dalam satu paket hemat.</p>
-                            <a href="panduan-lengkap-seminar-kit.html" class="btn"
+                            <a href="panduan-lengkap-seminar-kit" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-box-open"></i> Lihat Paket Seminar
                             </a>
@@ -584,11 +584,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Blocknote Seminar</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Agenda Kulit VIP</a></li>
-                                <li class="cat-item"><a href="category-lifestyle.html"><i
+                                <li class="cat-item"><a href="category-lifestyle"><i
                                             class="fa-solid fa-pen-nib"></i> Pulpen Custom</a></li>
                             </ul>
                         </div>
@@ -604,14 +604,14 @@
                                     alt="Paket Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Seminar Kit Lengkap</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Item wajib pendamping
                                         blocknote seminar.</p>
-                                    <a href="panduan-lengkap-seminar-kit.html"
+                                    <a href="panduan-lengkap-seminar-kit"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -622,14 +622,14 @@
                                     alt="Souvenir Eksklusif">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-perusahaan-eksklusif.html"
+                                            href="souvenir-perusahaan-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Agendanya
                                             Para Bos & Direksi</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi souvenir kantor
                                         kelas atas.</p>
-                                    <a href="souvenir-perusahaan-eksklusif.html"
+                                    <a href="souvenir-perusahaan-eksklusif"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -640,14 +640,14 @@
                                     alt="Paket Seminar VIP">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-eksklusif.html"
+                                            href="paket-seminar-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Hardbox</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Isi lengkap dengan agenda &
                                         pen metal.</p>
-                                    <a href="paket-seminar-eksklusif.html"
+                                    <a href="paket-seminar-eksklusif"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -681,21 +681,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -786,3 +786,5 @@
 </body>
 
 </html>
+
+
