--- a/buku-daur-ulang.html
+++ b/buku-daur-ulang.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/buku-daur-ulang.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/buku-daur-ulang">
     <title>Buku Daur Ulang & Eco Pen: Souvenir Seminar Kit Ramah Lingkungan | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tinggalkan kertas putih pemutih. Beralihlah ke Notebook Daur Ulang yang estetik dan etis. Dilengkapi Pulpen Kertas biodegradable.">
     <meta property="og:image" content="assets/eco-notebook.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/buku-daur-ulang.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/buku-daur-ulang">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,9 +297,9 @@
     <div style="background: #FFFBEB; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #92400E;">
-                <a href="index.html" style="text-decoration: none; color: #92400E;">Home</a>
+                <a href="./" style="text-decoration: none; color: #92400E;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #92400E;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #92400E;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #B45309; font-weight: 700;">Buku Daur Ulang</span>
             </nav>
@@ -340,7 +340,7 @@
                     <p>
                         Dalam dunia seminar kit, Blocknote dan Pulpen adalah item wajib. Namun, memberikannya dalam
                         bentuk plastik murah sudah terlalu <em>mainstream</em>. Saatnya meningkatkan standar souvenir
-                        Anda dengan <a href="buku-daur-ulang.html"
+                        Anda dengan <a href="buku-daur-ulang"
                             style="text-decoration: underline; color: #B45309; font-weight: 700;">Recycled Notebook</a>
                         dan <strong>Eco Pen</strong>.
                     </p>
@@ -395,7 +395,7 @@
                         <h4 style="margin-top: 0; color: #166534; margin-bottom: 1rem;">Lihat Koleksi Lengkap:</h4>
                         <p style="margin-bottom: 0;">
                             Tertarik dengan item ramah lingkungan lainnya? Cek artikel pillar kami tentang <a
-                                href="souvenir-ramah-lingkungan.html"
+                                href="souvenir-ramah-lingkungan"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Koleksi Souvenir
                                 Sustainable</a> untuk inspirasi Tumbler Bambu dan lainnya.
                         </p>
@@ -444,7 +444,7 @@
                         <li><strong>Tali Rami (Jute Rope):</strong> Ikat buku dan pulpen dengan tali goni untuk kesan
                             rustik maksimal.</li>
                         <li><strong>Kertas Samson:</strong> Bungkus kado menggunakan kertas coklat.</li>
-                        <li><strong>Tas Spunbond/Blacu:</strong> Masukkan ke dalam <a href="tas-goodie-bag.html"
+                        <li><strong>Tas Spunbond/Blacu:</strong> Masukkan ke dalam <a href="tas-goodie-bag"
                                 style="text-decoration: underline; color: #B45309; font-weight: 700;">Goodie Bag
                                 Reuseable</a> sebagai satu paket seminar kit yang utuh.</li>
                     </ul>
@@ -537,11 +537,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Souvenir%20Unik%20Buku%20Daur%20Ulang%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang.html"
+                        <a href="https://wa.me/?text=Souvenir%20Unik%20Buku%20Daur%20Ulang%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fbuku-daur-ulang"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -582,11 +582,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-book"></i>
                                         Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Eco
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-briefcase"></i> Office Supply</a></li>
                             </ul>
                         </div>
@@ -602,14 +602,14 @@
                                     alt="Sustainable Gifts">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Sustainable Gifts</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi souvenir hijau.
                                     </p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: #B45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -620,13 +620,13 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Murah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Opsi budget friendly.</p>
-                                    <a href="paket-seminar-kit-basic.html"
+                                    <a href="paket-seminar-kit-basic"
                                         style="font-size: 0.8rem; color: #B45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -637,13 +637,13 @@
                                     alt="Meja Kerja">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="desk-accessories-custom.html"
+                                            href="desk-accessories-custom"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Aksesoris
                                             Meja Kerja</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pelengkap notebook Anda.</p>
-                                    <a href="desk-accessories-custom.html"
+                                    <a href="desk-accessories-custom"
                                         style="font-size: 0.8rem; color: #B45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -677,21 +677,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -782,3 +782,5 @@
 </body>
 
 </html>
+
+
