--- a/category-gadget.html
+++ b/category-gadget.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/category-gadget.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-gadget">
     <title>Souvenir Gadget & Teknologi Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan citra perusahaan dengan souvenir teknologi premium. Powerbank, Flashdisk, Speaker. Garansi kualitas.">
     <meta property="og:image" content="assets/cat-tech.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/category-gadget.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-gadget">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html" class="text-accent" style="font-weight: 700;">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products" class="text-accent" style="font-weight: 700;">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -57,8 +57,8 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <ul class="breadcrumb" style="justify-content: start; margin-bottom: 2rem;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="products.html">Katalog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="products">Katalog</a></li>
                     <li>Gadget & Tech</li>
                 </ul>
                 <span class="badge badge-pink" style="margin-bottom: 1rem;">Trends 2026</span>
@@ -213,7 +213,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Souvenir Gadget & Teknologi",
       "description": "Koleksi souvenir gadget custom logo untuk perusahaan. Powerbank, Flashdisk, Speaker Bluetooth, dan Aksesoris Meja Kerja.",
-      "url": "https://hampersmalang.web.id/category-gadget.html",
+      "url": "https://hampersmalang.web.id/category-gadget",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -332,7 +332,7 @@
 
             <div class="grid grid-cols-1 md-grid-cols-3 gap-6">
                 <!-- Related 1: Seminar Kit -->
-                <a href="category-seminar.html" class="card hover-zoom"
+                <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/seminar-kit.png" alt="Seminar Kit"
@@ -346,7 +346,7 @@
                 </a>
 
                 <!-- Related 2: Drinkware -->
-                <a href="category-drinkware.html" class="card hover-zoom"
+                <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
@@ -360,7 +360,7 @@
                 </a>
 
                 <!-- Related 3: Executive -->
-                <a href="category-executive.html" class="card hover-zoom"
+                <a href="category-executive" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-executive.png" alt="Executive Gift Set"
@@ -414,22 +414,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -469,3 +469,5 @@
 </body>
 
 </html>
+
+
