--- a/category-seminar.html
+++ b/category-seminar.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/category-seminar.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-seminar">
     <title>Paket Seminar Kit Kantor & Onboarding Welcome Kit | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Solusi Paket Hemat untuk HRD & Event Organizer. Seminar Kit Basic hingga Onboarding Kit Premium. Pengerjaan Cepat.">
     <meta property="og:image" content="assets/cat-seminar.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/category-seminar.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-seminar">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html" class="text-accent" style="font-weight: 700;">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products" class="text-accent" style="font-weight: 700;">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -57,8 +57,8 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <ul class="breadcrumb" style="justify-content: start; margin-bottom: 2rem;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="products.html">Katalog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="products">Katalog</a></li>
                     <li>Seminar & Training Kit</li>
                 </ul>
                 <span class="badge badge-yellow" style="margin-bottom: 1rem;">Paket Hemat</span>
@@ -109,7 +109,7 @@
                     </p>
                     <ul
                         style="margin-bottom: 2rem; list-style: circle; padding-left: 1.5rem; color: var(--foreground);">
-                        <li><b><a href="tas-goodie-bag.html" style="color: inherit; text-decoration: none;">Tas Goodie
+                        <li><b><a href="tas-goodie-bag" style="color: inherit; text-decoration: none;">Tas Goodie
                                     Bag Spunbond</a></b> (Sablon 1 Warna)</li>
                         <li><b>Blocknote A5 / A6</b> (Jilid Spiral, Cover Full Color)</li>
                         <li><b>Pulpen Plastik</b> (Insert Paper / Sablon)</li>
@@ -139,7 +139,7 @@
                     </p>
                     <ul
                         style="margin-bottom: 2rem; list-style: circle; padding-left: 1.5rem; color: var(--foreground);">
-                        <li><b><a href="tas-goodie-bag.html" style="color: inherit; text-decoration: none;">Tas Canvas /
+                        <li><b><a href="tas-goodie-bag" style="color: inherit; text-decoration: none;">Tas Canvas /
                                     Blacu</a></b> (Lebih Tebal & Premium)</li>
                         <li><b>Tumbler Plastik Insert Paper / Technoplast</b></li>
                         <li><b>Notebook Hardcover A5</b></li>
@@ -177,9 +177,9 @@
                     </ul>
                     <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Premium" class="btn btn-secondary">Order
                         Paket Premium</a>
-                    <a href="paket-seminar-eksklusif.html"
+                    <a href="paket-seminar-eksklusif"
                         style="display: block; margin-top: 1rem; color: var(--accent); font-weight: 600; text-decoration: underline;">Lihat
-                        Detail Isi Paket VIP »</a>
+                        Detail Isi Paket VIP Â»</a>
                 </div>
             </div>
 
@@ -204,7 +204,7 @@
                     <ul
                         style="margin-bottom: 2rem; list-style: circle; padding-left: 1.5rem; color: var(--foreground);">
                         <li><b>Corrugated Box Custom</b> (Sablon Logo)</li>
-                        <li><b><a href="konveksi-seragam-kaos.html"
+                        <li><b><a href="konveksi-seragam-kaos"
                                     style="color: inherit; text-decoration: none;">Apparel:</a></b> Hoodie / T-Shirt /
                             Polo Shirt</li>
                         <li><b>Office Essentials:</b> Tumbler + Laptop Sleeve</li>
@@ -224,7 +224,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Paket Seminar Kit Kantor",
       "description": "Paket seminar kit murah, training kit kantor, dan onboarding kit karyawan baru.",
-      "url": "https://hampersmalang.web.id/category-seminar.html",
+      "url": "https://hampersmalang.web.id/category-seminar",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -343,7 +343,7 @@
 
             <div class="grid grid-cols-1 md-grid-cols-3 gap-6">
                 <!-- Related 1: Drinkware -->
-                <a href="category-drinkware.html" class="card hover-zoom"
+                <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
@@ -357,7 +357,7 @@
                 </a>
 
                 <!-- Related 2: Gadget -->
-                <a href="category-gadget.html" class="card hover-zoom"
+                <a href="category-gadget" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-tech.png" alt="Gadget Powerbank"
@@ -371,7 +371,7 @@
                 </a>
 
                 <!-- Related 3: Lifestyle -->
-                <a href="category-lifestyle.html" class="card hover-zoom"
+                <a href="category-lifestyle" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
                         <img src="assets/cat-lifestyle.png" alt="Lifestyle Tas"
@@ -425,22 +425,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html" style="color: #FBBF24;">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar" style="color: #FBBF24;">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -480,3 +480,4 @@
 </body>
 
 </html>
+
