--- a/cetak-logo-custom-satuan-grosir.html
+++ b/cetak-logo-custom-satuan-grosir.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir">
     <title>Jasa Cetak Logo Custom Satuan & Grosir Merchandise | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Pahami perbedaan UV Print, Laser Grafir, dan Sablon Manual untuk hasil maksimal.">
     <meta property="og:image" content="assets/cetak-logo-custom-satuan-grosir.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,11 +298,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis.html"
+                <a href="merchandise-perusahaan-bisnis"
                     style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #2563eb; font-weight: 700;">Teknik Cetak</span>
@@ -338,7 +338,7 @@
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Sebagus apapun merchandise yang Anda pilih, jika logo perusahaan Anda tercetak miring, pecah,
                         atau mudah luntur, citra brand Anda yang dipertaruhkan. Memilih <a
-                            href="cetak-logo-custom-satuan-grosir.html"
+                            href="cetak-logo-custom-satuan-grosir"
                             style="text-decoration: underline; color: #2563eb; font-weight: 700;">Jasa Cetak Logo
                             Custom</a> yang tepat adalah kunci akhir dari souvenir yang sempurna.
                     </p>
@@ -378,7 +378,7 @@
                         </li>
                         <li><strong>Kekurangan:</strong> Hanya satu warna (mengikuti warna dasar bahan di balik lapisan
                             cat). Tidak bisa logo full color.</li>
-                        <li><strong>Cocok untuk:</strong> <a href="merchandise-kantor-eksklusif.html"
+                        <li><strong>Cocok untuk:</strong> <a href="merchandise-kantor-eksklusif"
                                 style="color: #2563eb;">Tumbler Stainless, Pulpen Metal, Gantungan Kunci Kulit</a>.</li>
                     </ul>
 
@@ -413,7 +413,7 @@
                         <li><strong>Kelebihan:</strong> Biaya SANGAT MURAH untuk jumlah banyak (>100 pcs).</li>
                         <li><strong>Kekurangan:</strong> Tidak bisa satuan (karena ada biaya bikin film/screen). Warna
                             terbatas (biasanya 1-3 warna solid).</li>
-                        <li><strong>Cocok untuk:</strong> <a href="merchandise-promosi-branding.html"
+                        <li><strong>Cocok untuk:</strong> <a href="merchandise-promosi-branding"
                                 style="color: #2563eb;">Pulpen Plastik 1000 pcs, Tas Spunbond, Payung, Kaos Partai</a>.
                         </li>
                     </ul>
@@ -574,11 +574,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Panduan%20Cetak%20Logo%20Merchandise%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir.html"
+                        <a href="https://wa.me/?text=Panduan%20Cetak%20Logo%20Merchandise%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fcetak-logo-custom-satuan-grosir"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -620,13 +620,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Branding</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-wine-bottle"></i> Laser di Tumbler</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom.html"><i
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
                                             class="fa-solid fa-pen"></i> Pad Print Pulpen</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook.html"><i
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i
                                             class="fa-solid fa-book"></i> Emboss di Kulit</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-shirt"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-shirt"></i>
                                         Sablon Kain</a></li>
                             </ul>
                         </div>
@@ -642,14 +642,14 @@
                                     alt="Merchandise Bisnis">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-perusahaan-bisnis.html"
+                                            href="merchandise-perusahaan-bisnis"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Strategi
                                             Corporate</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Level up branding bisnis.
                                     </p>
-                                    <a href="merchandise-perusahaan-bisnis.html"
+                                    <a href="merchandise-perusahaan-bisnis"
                                         style="font-size: 0.8rem; color: #2563eb; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -660,13 +660,13 @@
                                     alt="Souvenir Murah">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-promosi-branding.html"
+                                            href="merchandise-promosi-branding"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Murah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Strategi kuantitas.</p>
-                                    <a href="merchandise-promosi-branding.html"
+                                    <a href="merchandise-promosi-branding"
                                         style="font-size: 0.8rem; color: #2563eb; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -677,13 +677,13 @@
                                     alt="Souvenir Premium">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-kantor-eksklusif.html"
+                                            href="merchandise-kantor-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Premium</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk klien VIP.</p>
-                                    <a href="merchandise-kantor-eksklusif.html"
+                                    <a href="merchandise-kantor-eksklusif"
                                         style="font-size: 0.8rem; color: #2563eb; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -717,21 +717,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -822,3 +822,5 @@
 </body>
 
 </html>
+
+
