--- a/desk-accessories-custom.html
+++ b/desk-accessories-custom.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/desk-accessories-custom.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/desk-accessories-custom">
     <title>Desk Accessories Custom: Mousepad, Phone Holder & Humidifier | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Meja kerja adalah 'real estate' branding paling mahal. Rebut area tersebut dengan Mousepad Gaming, Holder HP, dan Humidifier berlogo perusahaan Anda.">
     <meta property="og:image" content="assets/gadget-desk.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/desk-accessories-custom.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/desk-accessories-custom">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Desk Accessories Custom</span>
             </nav>
@@ -371,7 +371,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Lengkapi Setup Gadget:</h4>
                         <p style="margin-bottom: 0;">
                             Mousepad yang keren butuh gadget yang keren juga. Lihat koleksi gadget elektronik kami di <a
-                                href="souvenir-gadget-elektronik.html"
+                                href="souvenir-gadget-elektronik"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Pusat Souvenir
                                 Gadget Kantor & Elektronik</a>.
                         </p>
@@ -417,7 +417,7 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #EEF2FF; border-left: 4px solid #4F46E5; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #312E81; margin-bottom: 1rem;">Gadget Ambience Lainnya:</h4>
                         <p style="margin-bottom: 0;">
-                            Suka dengan ide lampu LED RGB? Cek juga <a href="speaker-bluetooth-custom-logo.html"
+                            Suka dengan ide lampu LED RGB? Cek juga <a href="speaker-bluetooth-custom-logo"
                                 style="text-decoration: underline; color: #4338CA; font-weight: 700;">Speaker Bluetooth
                                 dengan Fitur Light Up Logo</a> yang serupa.
                         </p>
@@ -440,7 +440,7 @@
                     <p>
                         Tidak heran jika desk accessories diprediksi akan terus naik daun. Simak bagaimana item
                         produktivitas ini masuk dalam daftar pantauan kami di artikel <a
-                            href="rekomendasi-souvenir-kantor-2026.html"
+                            href="rekomendasi-souvenir-kantor-2026"
                             style="color: var(--accent); font-weight: 700; text-decoration: underline;">Rekomendasi
                             Souvenir Kantor 2026: Tren Eco & Tech</a>.
                     </p>
@@ -533,11 +533,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Meja%20Kerja%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom.html"
+                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Meja%20Kerja%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fdesk-accessories-custom"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -568,7 +568,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Gadget Lain?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Lengkapi setup meja
                                 dengan Speaker atau Powerbank.</p>
-                            <a href="souvenir-gadget-elektronik.html" class="btn"
+                            <a href="souvenir-gadget-elektronik" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-microchip"></i> Lihat Katalog Gadget
                             </a>
@@ -578,11 +578,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="souvenir-gadget-elektronik.html"><i
+                                <li class="cat-item"><a href="souvenir-gadget-elektronik"><i
                                             class="fa-solid fa-mobile-screen"></i> Gadget & Elektronik</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-user-tie"></i> Executive Gifts</a></li>
-                                <li class="cat-item"><a href="product-tumbler.html"><i class="fa-solid fa-mug-hot"></i>
+                                <li class="cat-item"><a href="product-tumbler"><i class="fa-solid fa-mug-hot"></i>
                                         Tumbler Meja</a></li>
                             </ul>
                         </div>
@@ -598,14 +598,14 @@
                                     alt="Gadget Pillar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-gadget-elektronik.html"
+                                            href="souvenir-gadget-elektronik"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Gadget</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Panduan lengkap gadget
                                         kantor.</p>
-                                    <a href="souvenir-gadget-elektronik.html"
+                                    <a href="souvenir-gadget-elektronik"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -616,14 +616,14 @@
                                     alt="Speaker Bluetooth">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="speaker-bluetooth-custom-logo.html"
+                                            href="speaker-bluetooth-custom-logo"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Speaker
                                             Bluetooth Custom</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hiasan meja yang bersuara.
                                     </p>
-                                    <a href="speaker-bluetooth-custom-logo.html"
+                                    <a href="speaker-bluetooth-custom-logo"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -634,14 +634,14 @@
                                     alt="Tren 2026">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir 2026</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Produktivitas & Wellness.
                                     </p>
-                                    <a href="rekomendasi-souvenir-kantor-2026.html"
+                                    <a href="rekomendasi-souvenir-kantor-2026"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -675,21 +675,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -780,3 +780,5 @@
 </body>
 
 </html>
+
+
