--- a/flashdisk-kartu-promosi.html
+++ b/flashdisk-kartu-promosi.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/flashdisk-kartu-promosi.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/flashdisk-kartu-promosi">
     <title>Flashdisk Kartu: Kartu Nama Digital yang Multifungsi & Elegan | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Ubah kartu nama kertas biasa menjadi USB Card canggih. Area branding luas untuk desain full color yang memukau klien Anda.">
     <meta property="og:image" content="assets/gadget-flashdisk.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/flashdisk-kartu-promosi.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/flashdisk-kartu-promosi">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -263,16 +263,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -287,9 +287,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Flashdisk Kartu</span>
             </nav>
@@ -388,7 +388,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Padukan teknologi dan tradisi tulis menulis dengan <a
-                            href="buku-agenda-kerja.html"
+                            href="buku-agenda-kerja"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Buku Agenda Kerja
                             Custom</a> yang elegan.
                     </div>
@@ -447,7 +447,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Lebih suka souvenir yang bisa diminum? Lihat koleksi <a
-                            href="botol-sport-aluminium.html"
+                            href="botol-sport-aluminium"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Botol Sport
                             Aluminium</a> kami.
                     </div>
@@ -556,12 +556,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inovasi%20kartu%20nama%20digital%20flashdisk%20kartu%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi.html"
+                        <a href="https://wa.me/?text=Inovasi%20kartu%20nama%20digital%20flashdisk%20kartu%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fflashdisk-kartu-promosi"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -592,7 +592,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Souvenir Unik?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Jangan memberikan
                                 souvenir yang membosankan. Temukan ide segar di katalog kami.</p>
-                            <a href="products.html" class="btn"
+                            <a href="products" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-list-check"></i> Lihat Semua Produk
                             </a>
@@ -602,11 +602,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-microchip"></i> USB & Gadget</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-user-tie"></i> Gift Set Premium</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-chalkboard-user"></i>
                                         Seminar Kit</a></li>
                             </ul>
@@ -623,7 +623,7 @@
                                     alt="Powerbank Aman">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="powerbank-custom-souvenir.html"
+                                            href="powerbank-custom-souvenir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tips
                                             Memilih Powerbank Custom Aman</a></h4>
                                     <span style="font-size: 0.75rem; color: var(--accent); font-weight: 600;">Safety
@@ -638,7 +638,7 @@
                                     alt="Tumbler Insert">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-insert-paper.html"
+                                            href="tumbler-insert-paper"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Insert Paper: Solusi Kilat</a></h4>
                                 </div>
@@ -651,7 +651,7 @@
                                     alt="Paket Hemat">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ide
                                             Paket Seminar Kit Low Budget</a></h4>
                                 </div>
@@ -686,21 +686,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -791,3 +791,5 @@
 </body>
 
 </html>
+
+
