--- a/hampers-lebaran-perusahaan.html
+++ b/hampers-lebaran-perusahaan.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/hampers-lebaran-perusahaan.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/hampers-lebaran-perusahaan">
     <title>Hampers Lebaran Perusahaan Eksklusif: Kirim Kehangatan & Jalin Silaturahmi | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan inspirasi hampers Idul Fitri yang elegan untuk mempererat hubungan bisnis dan kekeluargaan di momen spesial.">
     <meta property="og:image" content="assets/hampers-lebaran-kantor.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/hampers-lebaran-perusahaan.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/hampers-lebaran-perusahaan">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,11 +297,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="katalog-souvenir-event-perusahaan.html" style="text-decoration: none; color: #64748B;">Event
+                <a href="katalog-souvenir-event-perusahaan" style="text-decoration: none; color: #64748B;">Event
                     Guide</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #059669; font-weight: 700;">Hampers Lebaran</span>
@@ -346,7 +346,7 @@
                     </p>
 
                     <p>
-                        Artikel ini adalah bagian dari seri <a href="katalog-souvenir-event-perusahaan.html"
+                        Artikel ini adalah bagian dari seri <a href="katalog-souvenir-event-perusahaan"
                             style="text-decoration: underline; color: #059669; font-weight: 700;">Panduan Event
                             Perusahaan</a>, yang akan membantu Anda menyusun paket lebaran yang elegan, bermakna, dan
                         tak terlupakan.
@@ -459,11 +459,11 @@
                         <h4 style="margin-top: 0; color: #064e3b; margin-bottom: 1rem;">Rencanakan Juga Souvenir Lainnya
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="onboarding-kit-karyawan.html"
+                            <li><a href="onboarding-kit-karyawan"
                                     style="color: #059669; font-weight: 600;">Onboarding Kit Karyawan Baru</a></li>
-                            <li><a href="souvenir-akhir-tahun-kalender.html"
+                            <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #059669; font-weight: 600;">Souvenir Kalender Akhir Tahun</a></li>
-                            <li><a href="souvenir-rups-saham.html" style="color: #059669; font-weight: 600;">Souvenir
+                            <li><a href="souvenir-rups-saham" style="color: #059669; font-weight: 600;">Souvenir
                                     RUPS Perusahaan</a></li>
                         </ul>
                     </div>
@@ -566,11 +566,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Hampers%20Lebaran%20Kantor%20Mewah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Hampers%20Lebaran%20Kantor%20Mewah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fhampers-lebaran-perusahaan"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -612,11 +612,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Isi Hampers</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Set Cangkir & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-box-open"></i> Premium Hardbox</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Hampers Eco-Friendly</a></li>
                             </ul>
                         </div>
@@ -632,13 +632,13 @@
                                     alt="Event Guide">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="katalog-souvenir-event-perusahaan.html"
+                                            href="katalog-souvenir-event-perusahaan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Katalog
                                             Event</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Panduan Lengkap.</p>
-                                    <a href="katalog-souvenir-event-perusahaan.html"
+                                    <a href="katalog-souvenir-event-perusahaan"
                                         style="font-size: 0.8rem; color: #047857; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -650,13 +650,13 @@
                                     alt="Kalender">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-akhir-tahun-kalender.html"
+                                            href="souvenir-akhir-tahun-kalender"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Akhir Tahun</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Agenda & Kalender.</p>
-                                    <a href="souvenir-akhir-tahun-kalender.html"
+                                    <a href="souvenir-akhir-tahun-kalender"
                                         style="font-size: 0.8rem; color: #047857; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -667,13 +667,13 @@
                                     alt="Onboarding">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="onboarding-kit-karyawan.html"
+                                            href="onboarding-kit-karyawan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Onboarding
                                             Kit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Karyawan Baru.</p>
-                                    <a href="onboarding-kit-karyawan.html"
+                                    <a href="onboarding-kit-karyawan"
                                         style="font-size: 0.8rem; color: #047857; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -707,21 +707,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -812,3 +812,5 @@
 </body>
 
 </html>
+
+
