--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -117,16 +117,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
                 <a href="#home">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -151,7 +151,7 @@
                     pengiriman cepat ke seluruh <b>Malang Raya</b>.</p>
 
                 <div class="flex gap-4" style="margin-top: 2rem; flex-wrap: wrap;">
-                    <a href="products.html" class="btn btn-primary">
+                    <a href="products" class="btn btn-primary">
                         Lihat Katalog Hampers <i class="fa-solid fa-arrow-right"></i>
                     </a>
                     <a href="https://wa.me/62895639068080" class="btn btn-secondary">
@@ -262,7 +262,7 @@
             <div class="grid md-grid-cols-3 gap-8">
 
                 <!-- Item 1: corporate Gift -->
-                <a href="products.html#executive" class="card gallery-item"
+                <a href="products#executive" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/corporate-gift.png" alt="Corporate Gift Eksklusif"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -274,7 +274,7 @@
                 </a>
 
                 <!-- Item 2: Seminar Kit -->
-                <a href="category-seminar.html" class="card gallery-item"
+                <a href="category-seminar" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/seminar-kit.png" alt="Paket Seminar Kit Lengkap"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -286,7 +286,7 @@
                 </a>
 
                 <!-- Item 3: Gadget & Tech (NEW PAGE) -->
-                <a href="category-gadget.html" class="card gallery-item"
+                <a href="category-gadget" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/cat-tech.png" alt="Souvenir Gadget Teknologi"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -298,7 +298,7 @@
                 </a>
 
                 <!-- Item 4: Lifestyle & Apparel (NEW PAGE) -->
-                <a href="category-lifestyle.html" class="card gallery-item"
+                <a href="category-lifestyle" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/cat-lifestyle.png" alt="Souvenir Lifestyle Apparel"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -310,7 +310,7 @@
                 </a>
 
                 <!-- Item 5: Eco-Green -->
-                <a href="category-eco.html" class="card gallery-item"
+                <a href="category-eco" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/cat-eco.png" alt="Souvenir Ramah Lingkungan"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -322,7 +322,7 @@
                 </a>
 
                 <!-- Item 6: Drinkware & Tumbler (NEW PAGE) -->
-                <a href="category-drinkware.html" class="card gallery-item"
+                <a href="category-drinkware" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
                     <img src="assets/cat-drinkware.png" alt="Souvenir Tumbler Drinkware"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
@@ -336,7 +336,7 @@
             </div>
 
             <div class="text-center" style="margin-top: 3rem;">
-                <a href="products.html" class="btn btn-primary">Lihat Semua Produk <i
+                <a href="products" class="btn btn-primary">Lihat Semua Produk <i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
@@ -394,7 +394,7 @@
                     <span class="badge badge-green">Katalog 2026</span>
                     <h2>Produk <span class="text-accent">Best Seller</span></h2>
                 </div>
-                <a href="packages.html" class="btn btn-secondary">Lihat Semua Produk <i
+                <a href="packages" class="btn btn-secondary">Lihat Semua Produk <i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
 
@@ -517,7 +517,7 @@
             </div>
 
             <div class="grid md-grid-cols-3 gap-8">
-                <a href="rekomendasi-souvenir-kantor-2026.html" class="card"
+                <a href="rekomendasi-souvenir-kantor-2026" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
@@ -531,7 +531,7 @@
                     <span class="text-accent" style="font-weight: 700;">Baca Selengkapnya <i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
-                <a href="beda-bahan-tumbler-stainless.html" class="card"
+                <a href="beda-bahan-tumbler-stainless" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
@@ -545,7 +545,7 @@
                     <span class="text-accent" style="font-weight: 700;">Baca Selengkapnya <i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
-                <a href="tips-memilih-paket-seminar.html" class="card"
+                <a href="tips-memilih-paket-seminar" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
@@ -633,21 +633,21 @@
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
                     <li><a href="#home">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
