--- a/kaos-polo-bordir.html
+++ b/kaos-polo-bordir.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/kaos-polo-bordir.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/kaos-polo-bordir">
     <title>Polo Shirt Custom Bordir: Seragam Gathering & Kantor Premium | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tampil kompak dan profesional saat gathering dengan Polo Shirt Bordir. Simak panduan memilih bahan Lacoste yang nyaman disini.">
     <meta property="og:image" content="assets/kaos-polo-bordir.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/kaos-polo-bordir.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/kaos-polo-bordir">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Polo Shirt Custom</span>
             </nav>
@@ -371,7 +371,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Ingin Tahu Lebih Luas?</h4>
                         <p style="margin-bottom: 0;">
                             Polo shirt adalah bagian dari ekosistem pakaian kantor. Pelajari juga jenis seragam lainnya
-                            di artikel pillar kami: <a href="konveksi-seragam-kaos.html"
+                            di artikel pillar kami: <a href="konveksi-seragam-kaos"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Panduan Lengkap
                                 Konveksi Seragam</a>.
                         </p>
@@ -456,7 +456,7 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #F0FDF4; border-left: 4px solid #16A34A; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Packaging Matters:</h4>
                         <p style="margin-bottom: 0;">
-                            Serahkan seragam ini dalam kemasan yang layak. Gunakan <a href="tas-goodie-bag.html"
+                            Serahkan seragam ini dalam kemasan yang layak. Gunakan <a href="tas-goodie-bag"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Goodie Bag
                                 Spunbond atau Blacu</a> agar pembagian seragam saat gathering lebih terorganisir.
                         </p>
@@ -551,11 +551,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Polo%20Shirt%20Bagus%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Polo%20Shirt%20Bagus%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkaos-polo-bordir"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -596,11 +596,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Seragam</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="konveksi-seragam-kaos.html"><i
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
                                             class="fa-solid fa-layer-group"></i> Semua Jenis Seragam</a></li>
-                                <li class="cat-item"><a href="jaket-hoodie-kantor.html"><i
+                                <li class="cat-item"><a href="jaket-hoodie-kantor"><i
                                             class="fa-solid fa-vest-patches"></i> Jaket & Hoodie</a></li>
-                                <li class="cat-item"><a href="topi-promosi-custom.html"><i
+                                <li class="cat-item"><a href="topi-promosi-custom"><i
                                             class="fa-solid fa-hat-cowboy"></i> Topi Merchandise</a></li>
                             </ul>
                         </div>
@@ -616,13 +616,13 @@
                                     alt="Konveksi Seragam">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="konveksi-seragam-kaos.html"
+                                            href="konveksi-seragam-kaos"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Lengkap Konveksi</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Bahan, Size, & Branding.</p>
-                                    <a href="konveksi-seragam-kaos.html"
+                                    <a href="konveksi-seragam-kaos"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -633,13 +633,13 @@
                                     alt="Goodie Bag">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-goodie-bag.html"
+                                            href="tas-goodie-bag"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Packaging
                                             Seragam Gathering</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tas Spunbond & Blacu.</p>
-                                    <a href="tas-goodie-bag.html"
+                                    <a href="tas-goodie-bag"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -650,14 +650,14 @@
                                     alt="Souvenir Kantor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir Kantor 2026</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Selain seragam, apa lagi?
                                     </p>
-                                    <a href="rekomendasi-souvenir-kantor-2026.html"
+                                    <a href="rekomendasi-souvenir-kantor-2026"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -691,21 +691,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -796,3 +796,5 @@
 </body>
 
 </html>
+
+
