--- a/katalog-souvenir-event-perusahaan.html
+++ b/katalog-souvenir-event-perusahaan.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan">
     <title>Solusi Souvenir untuk Setiap Momen Perusahaan Anda | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Bingung memilih merchandise yang tepat untuk acara kantor? Simak katalog lengkap berdasarkan jenis event di sini.">
     <meta property="og:image" content="assets/katalog-event-perusahaan.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/katalog-souvenir-event-perusahaan">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -310,16 +310,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -334,9 +334,9 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #3b82f6; font-weight: 700;">Event Perusahaan</span>
             </nav>
@@ -375,7 +375,7 @@
                     </p>
 
                     <p>
-                        Dalam dunia bisnis yang kompetitif, <a href="vendor-souvenir-kantor-profesional.html"
+                        Dalam dunia bisnis yang kompetitif, <a href="vendor-souvenir-kantor-profesional"
                             style="text-decoration: underline; color: #3b82f6; font-weight: 700;">souvenir kantor</a>
                         bukan sekadar "oleh-oleh", melainkan alat komunikasi strategis. Salah memilih souvenir bisa
                         membuat acara perusahaan terasa hambar, atau bahkan menurunkan citra profesionalisme yang sudah
@@ -411,7 +411,7 @@
                             Paket wajib berisi notebook, pulpen, ID card holder, dan tumbler. Tujuannya adalah
                             menanamkan rasa bangga (pride) dan mempersiapkan alat tempur mereka sejak hari pertama.
                         </p>
-                        <a href="onboarding-kit-karyawan.html" class="event-link">Lihat Paket Onboarding <i
+                        <a href="onboarding-kit-karyawan" class="event-link">Lihat Paket Onboarding <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <figure style="margin: 2rem 0;">
@@ -434,7 +434,7 @@
                             Momen Idul Fitri adalah saatnya mempererat silaturahmi. Pilihlah hampers yang elegan, berisi
                             kue kering premium atau set cangkir, dengan kartu ucapan personal dari manajemen.
                         </p>
-                        <a href="hampers-lebaran-perusahaan.html" class="event-link">Katalog Hampers Lebaran <i
+                        <a href="hampers-lebaran-perusahaan" class="event-link">Katalog Hampers Lebaran <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
@@ -453,7 +453,7 @@
                             Pastikan brand Anda ada di meja klien sepanjang tahun depan. Kalender dinding, kalender
                             meja, dan buku agenda eksklusif adalah media promosi jangka panjang yang paling efektif.
                         </p>
-                        <a href="souvenir-akhir-tahun-kalender.html" class="event-link">Paket Kalender & Agenda 2026 <i
+                        <a href="souvenir-akhir-tahun-kalender" class="event-link">Paket Kalender & Agenda 2026 <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
@@ -483,7 +483,7 @@
                             mencerminkan stabilitas dan bonafiditas perusahaan. Gift set Powerbank, Pen Metal, atau
                             Leather Goods adalah pilihan tepat.
                         </p>
-                        <a href="souvenir-rups-saham.html" class="event-link">Ide Souvenir RUPS Premium <i
+                        <a href="souvenir-rups-saham" class="event-link">Ide Souvenir RUPS Premium <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
@@ -495,7 +495,7 @@
                             Plakat kristal, set alat tulis premium, atau buku memoir custom menjadi tanda terima kasih
                             yang bermakna bagi para penguji dan tamu undangan.
                         </p>
-                        <a href="souvenir-promosi-doktor-guru-besar.html" class="event-link">Koleksi Souvenir Akademik
+                        <a href="souvenir-promosi-doktor-guru-besar" class="event-link">Koleksi Souvenir Akademik
                             <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
@@ -626,11 +626,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Panduan%20Lengkap%20Souvenir%20Event%20Perusahaan%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan.html"
+                        <a href="https://wa.me/?text=Panduan%20Lengkap%20Souvenir%20Event%20Perusahaan%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkatalog-souvenir-event-perusahaan"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -672,13 +672,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Event</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="onboarding-kit-karyawan.html"><i
+                                <li class="cat-item"><a href="onboarding-kit-karyawan"><i
                                             class="fa-solid fa-user-check"></i> Onboarding Kit</a></li>
-                                <li class="cat-item"><a href="hampers-lebaran-perusahaan.html"><i
+                                <li class="cat-item"><a href="hampers-lebaran-perusahaan"><i
                                             class="fa-solid fa-star-and-crescent"></i> Hampers Lebaran</a></li>
-                                <li class="cat-item"><a href="souvenir-akhir-tahun-kalender.html"><i
+                                <li class="cat-item"><a href="souvenir-akhir-tahun-kalender"><i
                                             class="fa-solid fa-calendar"></i> Akhir Tahun</a></li>
-                                <li class="cat-item"><a href="souvenir-rups-saham.html"><i
+                                <li class="cat-item"><a href="souvenir-rups-saham"><i
                                             class="fa-solid fa-handshake"></i> RUPS & Investor</a></li>
                             </ul>
                         </div>
@@ -694,12 +694,12 @@
                                     alt="Executive Gift">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="category-executive.html"
+                                            href="category-executive"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Executive
                                             Gift Set</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Mewah & Elegan.</p>
-                                    <a href="category-executive.html"
-                                        style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Lihat Koleksi »</a>
+                                    <a href="category-executive"
+                                        style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Lihat Koleksi Â»</a>
                                 </div>
                             </div>
 
@@ -710,13 +710,13 @@
                                     alt="Vendor Jakarta">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="vendor-souvenir-kantor-jakarta.html"
+                                            href="vendor-souvenir-kantor-jakarta"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Vendor
                                             Souvenir Jakarta</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Layanan Ibu Kota.</p>
-                                    <a href="vendor-souvenir-kantor-jakarta.html"
+                                    <a href="vendor-souvenir-kantor-jakarta"
                                         style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -727,13 +727,13 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="category-seminar.html"
+                                            href="category-seminar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Kantor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hemat & Cepat.</p>
-                                    <a href="category-seminar.html"
+                                    <a href="category-seminar"
                                         style="font-size: 0.8rem; color: #3b82f6; font-weight: 600;">Lihat Isi Paket
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -767,21 +767,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -872,3 +872,5 @@
 </body>
 
 </html>
+
+
