--- a/konveksi-seragam-kaos.html
+++ b/konveksi-seragam-kaos.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/konveksi-seragam-kaos.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/konveksi-seragam-kaos">
     <title>Vendor Kaos Promosi, Polo Shirt & Seragam Kantor Terpercaya | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Seragam bukan sekadar baju, tapi identitas tim. Temukan panduan lengkap produksi seragam kantor, kaos gathering, dan jaket almamater di sini.">
     <meta property="og:image" content="assets/konveksi-seragam-kaos.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/konveksi-seragam-kaos.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/konveksi-seragam-kaos">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Konveksi Seragam (Pillar Page)</span>
             </nav>
@@ -383,7 +383,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Deep Dive Polo Shirt:</h4>
                         <p style="margin-bottom: 0;">
                             Bingung memilih bahan Lacoste Cotton atau Polyester? Baca perbandingannya di artikel <a
-                                href="kaos-polo-bordir.html"
+                                href="kaos-polo-bordir"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Panduan Memilih
                                 Bahan Kaos Polo Bordir</a>.
                         </p>
@@ -439,7 +439,7 @@
                         <h4 style="margin-top: 0; color: #312E81; margin-bottom: 1rem;">Lengkapi Dengan Topi:</h4>
                         <p style="margin-bottom: 0;">
                             Topi adalah media promosi luar ruang yang efektif. Pelajari jenis topi (Baseball vs
-                            Snapback) di <a href="topi-promosi-custom.html"
+                            Snapback) di <a href="topi-promosi-custom"
                                 style="text-decoration: underline; color: #4338CA; font-weight: 700;">Topi Promosi
                                 Custom & Bordir 3D</a>.
                         </p>
@@ -462,7 +462,7 @@
                         <h4 style="margin-top: 0; color: #14532D; margin-bottom: 1rem;">Gaya Casual Kantor:</h4>
                         <p style="margin-bottom: 0;">
                             Lihat inspirasi model jaket kantor yang <em>stylish</em> di artikel: <a
-                                href="jaket-hoodie-kantor.html"
+                                href="jaket-hoodie-kantor"
                                 style="text-decoration: underline; color: #15803D; font-weight: 700;">Jaket Bomber &
                                 Hoodie Kantor Kekinian</a>.
                         </p>
@@ -490,9 +490,9 @@
                     </figure>
 
                     <p>
-                        Anda bisa membaca perbandingan mendalam antara <a href="tas-seminar-laptop-vs-ransel.html"
+                        Anda bisa membaca perbandingan mendalam antara <a href="tas-seminar-laptop-vs-ransel"
                             style="color: var(--accent); font-weight: 700;">Tas Laptop vs Ransel</a> untuk mengetahui
-                        mana yang paling pas untuk audiens Anda. Atau cek <a href="tas-goodie-bag.html"
+                        mana yang paling pas untuk audiens Anda. Atau cek <a href="tas-goodie-bag"
                             style="color: var(--accent); font-weight: 700;">Katalog Goodie Bag</a> untuk opsi budget
                         rendah.
                     </p>
@@ -586,11 +586,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Vendor%20Konveksi%20Seragam%20Berkualitas%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos.html"
+                        <a href="https://wa.me/?text=Vendor%20Konveksi%20Seragam%20Berkualitas%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fkonveksi-seragam-kaos"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -631,11 +631,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Apparel</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="kaos-polo-bordir.html"><i class="fa-solid fa-shirt"></i>
+                                <li class="cat-item"><a href="kaos-polo-bordir"><i class="fa-solid fa-shirt"></i>
                                         Polo Shirt</a></li>
-                                <li class="cat-item"><a href="jaket-hoodie-kantor.html"><i class="fa-solid fa-vest"></i>
+                                <li class="cat-item"><a href="jaket-hoodie-kantor"><i class="fa-solid fa-vest"></i>
                                         Jaket & Hoodie</a></li>
-                                <li class="cat-item"><a href="topi-promosi-custom.html"><i
+                                <li class="cat-item"><a href="topi-promosi-custom"><i
                                             class="fa-solid fa-hat-cowboy"></i> Topi Custom</a></li>
                             </ul>
                         </div>
@@ -651,13 +651,13 @@
                                     alt="Polo Shirt">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="kaos-polo-bordir.html"
+                                            href="kaos-polo-bordir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Bahan Polo Shirt</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Lacoste CVC vs Pique.</p>
-                                    <a href="kaos-polo-bordir.html"
+                                    <a href="kaos-polo-bordir"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -668,13 +668,13 @@
                                     alt="Tas Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-seminar-laptop-vs-ransel.html"
+                                            href="tas-seminar-laptop-vs-ransel"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Laptop vs Ransel</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Mana yang lebih efektif?</p>
-                                    <a href="tas-seminar-laptop-vs-ransel.html"
+                                    <a href="tas-seminar-laptop-vs-ransel"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -685,13 +685,13 @@
                                     alt="Goodie Bag">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-goodie-bag.html"
+                                            href="tas-goodie-bag"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Macam-Macam
                                             Goodie Bag</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Spunbond, Kanvas, Blacu.</p>
-                                    <a href="tas-goodie-bag.html"
+                                    <a href="tas-goodie-bag"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -725,21 +725,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -830,3 +830,5 @@
 </body>
 
 </html>
+
+
