--- a/merchandise-kantor-eksklusif.html
+++ b/merchandise-kantor-eksklusif.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-kantor-eksklusif.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-kantor-eksklusif">
     <title>Merchandise Kantor Eksklusif & Souvenir Perusahaan Premium | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan nilai brand dengan souvenir premium. Pilihan tepat untuk klien VIP dan apresiasi karyawan.">
     <meta property="og:image" content="assets/merchandise-kantor-eksklusif.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-kantor-eksklusif.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-kantor-eksklusif">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -275,16 +275,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -299,11 +299,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis.html"
+                <a href="merchandise-perusahaan-bisnis"
                     style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #b45309; font-weight: 700;">Premium Luxury</span>
@@ -339,7 +339,7 @@
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Ada momen di mana pulpen plastik tidak cukup. Ketika Anda berhadapan dengan Investor, Klien VIP,
                         atau memberikan penghargaan masa kerja (Service Award) kepada karyawan setia, Anda membutuhkan
-                        <a href="merchandise-kantor-eksklusif.html"
+                        <a href="merchandise-kantor-eksklusif"
                             style="text-decoration: underline; color: #b45309; font-weight: 700;">Merchandise Kantor
                             Eksklusif</a> yang berbicara bahasa "kualitas".
                     </p>
@@ -436,7 +436,7 @@
                     </p>
                     <p>
                         Pastikan logo Anda tercetak sempurna dengan teknologi <a
-                            href="cetak-logo-custom-satuan-grosir.html" style="color: #b45309; font-weight: 600;">Laser
+                            href="cetak-logo-custom-satuan-grosir" style="color: #b45309; font-weight: 600;">Laser
                             Grafir Presisi</a> kami yang menjamin hasil permanen dan elegan.
                     </p>
 
@@ -444,13 +444,13 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #fff7ed; border-left: 4px solid #b45309; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #451a03; margin-bottom: 1rem;">Navigasi Cepat:</h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="merchandise-perusahaan-bisnis.html"
+                            <li><a href="merchandise-perusahaan-bisnis"
                                     style="color: #9a3412; font-weight: 600;">Strategi Utama Merchandise Perusahaan</a>
                             </li>
-                            <li><a href="merchandise-promosi-branding.html"
+                            <li><a href="merchandise-promosi-branding"
                                     style="color: #9a3412; font-weight: 600;">Lihat Opsi Merchandise Massal / Murah</a>
                             </li>
-                            <li><a href="cetak-logo-custom-satuan-grosir.html"
+                            <li><a href="cetak-logo-custom-satuan-grosir"
                                     style="color: #9a3412; font-weight: 600;">Opsi Cetak Logo untuk Barang Premium</a>
                             </li>
                         </ul>
@@ -556,11 +556,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%20Mewah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%20Mewah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-kantor-eksklusif"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -601,13 +601,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Premium</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i
+                                <li class="cat-item"><a href="category-executive"><i
                                             class="fa-solid fa-briefcase"></i> Executive Gift Sets</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook.html"><i
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i
                                             class="fa-solid fa-book"></i> Leather Notebook</a></li>
-                                <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar.html"><i
+                                <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar"><i
                                             class="fa-solid fa-graduation-cap"></i> Academic Gifts</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-wine-bottle"></i> Premium Tumbler</a></li>
                             </ul>
                         </div>
@@ -623,14 +623,14 @@
                                     alt="Merchandise Bisnis">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-perusahaan-bisnis.html"
+                                            href="merchandise-perusahaan-bisnis"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Strategi
                                             Corporate</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Level up branding bisnis.
                                     </p>
-                                    <a href="merchandise-perusahaan-bisnis.html"
+                                    <a href="merchandise-perusahaan-bisnis"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -642,14 +642,14 @@
                                     alt="Gift Set VIP">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hadiah prestasi akademik.
                                     </p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -661,13 +661,13 @@
                                     alt="Agenda Kulit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-agenda-notebook.html"
+                                            href="buku-agenda-notebook"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Agenda
                                             Kulit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Elegan & Profesional.</p>
-                                    <a href="buku-agenda-notebook.html"
+                                    <a href="buku-agenda-notebook"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -701,21 +701,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -806,3 +806,5 @@
 </body>
 
 </html>
+
+
