--- a/merchandise-mahasiswa-baru.html
+++ b/merchandise-mahasiswa-baru.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-mahasiswa-baru.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-mahasiswa-baru">
     <title>Souvenir Ospek & Merchandise Mahasiswa Baru (PKKMB) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Layanan pembuatan kit ospek skala besar (1.000+ pcs). Murah, seragam, dan on-time delivery untuk panitia PKKMB.">
     <meta property="og:image" content="assets/souvenir-ospek-mahasiswa-baru.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-mahasiswa-baru.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-mahasiswa-baru">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,11 +298,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-kampus-universitas.html" style="text-decoration: none; color: #64748B;">Kampus</a>
+                <a href="souvenir-kampus-universitas" style="text-decoration: none; color: #64748B;">Kampus</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #be123c; font-weight: 700;">Maba & Ospek</span>
             </nav>
@@ -335,7 +335,7 @@
 
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Pekerjaan paling berat dalam panitia PKKMB bukanlah menyusun acara, melainkan memastikan ribuan
-                        <a href="merchandise-mahasiswa-baru.html"
+                        <a href="merchandise-mahasiswa-baru"
                             style="text-decoration: underline; color: #e11d48; font-weight: 700;">Souvenir Ospek dan
                             Atribut Maba</a> tersedia lengkap tepat pada hari H.
                     </p>
@@ -438,12 +438,12 @@
                         <h4 style="margin-top: 0; color: #881337; margin-bottom: 1rem;">Lihat Juga Kebutuhan Kampus
                             Lain:</h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-kampus-universitas.html"
+                            <li><a href="souvenir-kampus-universitas"
                                     style="color: #e11d48; font-weight: 600;">Main Page: Pusat Souvenir Kampus</a></li>
-                            <li><a href="paket-seminar-nasional-internasional.html"
+                            <li><a href="paket-seminar-nasional-internasional"
                                     style="color: #e11d48; font-weight: 600;">Paket Seminar Kit (Untuk Acara
                                     Akademik)</a></li>
-                            <li><a href="souvenir-reuni-alumni.html"
+                            <li><a href="souvenir-reuni-alumni"
                                     style="color: #e11d48; font-weight: 600;">Merchandise Reuni Alumni</a></li>
                         </ul>
                     </div>
@@ -548,11 +548,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Vendor%20Merchandise%20Ospek%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru.html"
+                        <a href="https://wa.me/?text=Vendor%20Merchandise%20Ospek%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-mahasiswa-baru"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -593,13 +593,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Atribut Kampus</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-tote-bag.html"><i class="fa-solid fa-shirt"></i>
+                                <li class="cat-item"><a href="category-tote-bag"><i class="fa-solid fa-shirt"></i>
                                         Konveksi Kaos</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-bottle-water"></i> Tumbler Plastik</a></li>
-                                <li class="cat-item"><a href="category-idcard.html"><i class="fa-solid fa-id-badge"></i>
+                                <li class="cat-item"><a href="category-idcard"><i class="fa-solid fa-id-badge"></i>
                                         Lanyard & ID Card</a></li>
-                                <li class="cat-item"><a href="souvenir-tumbler-botol.html"><i
+                                <li class="cat-item"><a href="souvenir-tumbler-botol"><i
                                             class="fa-solid fa-hat-cowboy"></i> Topi Custom</a></li>
                             </ul>
                         </div>
@@ -615,13 +615,13 @@
                                     alt="Souvenir Kampus">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-kampus-universitas.html"
+                                            href="souvenir-kampus-universitas"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Kampus</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Induk Artikel Akademik.</p>
-                                    <a href="souvenir-kampus-universitas.html"
+                                    <a href="souvenir-kampus-universitas"
                                         style="font-size: 0.8rem; color: #be123c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -633,13 +633,13 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-nasional-internasional.html"
+                                            href="paket-seminar-nasional-internasional"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Seminar
                                             Kit Guide</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Panitia Acara.</p>
-                                    <a href="paket-seminar-nasional-internasional.html"
+                                    <a href="paket-seminar-nasional-internasional"
                                         style="font-size: 0.8rem; color: #be123c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -651,13 +651,13 @@
                                     alt="Doktor Premium">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hadiah Level VIP.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #be123c; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -691,21 +691,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -796,3 +796,5 @@
 </body>
 
 </html>
+
+
