--- a/merchandise-promosi-branding.html
+++ b/merchandise-promosi-branding.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-promosi-branding.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-promosi-branding">
     <title>Barang Promosi Murah & Merchandise Branding Expo | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cara efektif meningkatkan brand awareness dengan budget minim. Temukan ide souvenir pameran di bawah Rp 10.000.">
     <meta property="og:image" content="assets/merchandise-promosi-branding.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-promosi-branding.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-promosi-branding">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,11 +297,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis.html"
+                <a href="merchandise-perusahaan-bisnis"
                     style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #db2777; font-weight: 700;">Promosi Branding</span>
@@ -335,7 +335,7 @@
 
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Tidak semua branding harus mahal. Untuk meraih pasar massal atau menarik perhatian ribuan
-                        pengunjung pameran, Anda membutuhkan <a href="merchandise-promosi-branding.html"
+                        pengunjung pameran, Anda membutuhkan <a href="merchandise-promosi-branding"
                             style="text-decoration: underline; color: #db2777; font-weight: 700;">Barang Promosi
                             Murah</a> yang siap disebar tanpa membuat dompet perusahaan jebol.
                     </p>
@@ -363,7 +363,7 @@
 
                     <h2>1. Mengapa Perlu "Merchandise Murah"?</h2>
                     <p>
-                        Jika <a href="merchandise-kantor-eksklusif.html"
+                        Jika <a href="merchandise-kantor-eksklusif"
                             style="color: #be185d; font-weight: 600;">Merchandise Kantor Eksklusif</a> ditujukan untuk
                         Klien VIP, maka merchandise promosi ini ditujukan untuk:
                     </p>
@@ -449,7 +449,7 @@
                     <p>
                         Maroon Souvenir memiliki kapasitas produksi besar dan jaringan importir langsung untuk item
                         promosi, sehingga kami bisa menawarkan harga grosir terbaik. Informasi lebih lanjut tentang
-                        layanan cetak kami bisa dilihat di halaman <a href="cetak-logo-custom-satuan-grosir.html"
+                        layanan cetak kami bisa dilihat di halaman <a href="cetak-logo-custom-satuan-grosir"
                             style="color: #be185d; font-weight: 600;">Jasa Cetak Logo Custom</a>.
                     </p>
 
@@ -458,13 +458,13 @@
                         <h4 style="margin-top: 0; color: #831843; margin-bottom: 1rem;">Lengkapi Strategi Branding Anda:
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="merchandise-perusahaan-bisnis.html"
+                            <li><a href="merchandise-perusahaan-bisnis"
                                     style="color: #9d174d; font-weight: 600;">Kembali ke Strategi Merchandise
                                     Perusahaan</a></li>
-                            <li><a href="merchandise-kantor-eksklusif.html"
+                            <li><a href="merchandise-kantor-eksklusif"
                                     style="color: #9d174d; font-weight: 600;">Lihat Opsi Merchandise Premium / VIP</a>
                             </li>
-                            <li><a href="cetak-logo-custom-satuan-grosir.html"
+                            <li><a href="cetak-logo-custom-satuan-grosir"
                                     style="color: #9d174d; font-weight: 600;">Detail Teknis Sablon & Cetak Logo</a></li>
                         </ul>
                     </div>
@@ -569,11 +569,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20Souvenir%20Promosi%20Murah%20Meriah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding.html"
+                        <a href="https://wa.me/?text=Ide%20Souvenir%20Promosi%20Murah%20Meriah%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-promosi-branding"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -614,13 +614,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Murah</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-tote-bag.html"><i
+                                <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Tote Bag Spunbond</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom.html"><i
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
                                             class="fa-solid fa-pen"></i> Pulpen Plastik</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i class="fa-solid fa-key"></i>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-key"></i>
                                         Keychain & Pin</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Kipas
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Kipas
                                         Tangan</a></li>
                             </ul>
                         </div>
@@ -636,14 +636,14 @@
                                     alt="Merchandise Bisnis">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-perusahaan-bisnis.html"
+                                            href="merchandise-perusahaan-bisnis"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Strategi
                                             Corporate</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Level up branding bisnis.
                                     </p>
-                                    <a href="merchandise-perusahaan-bisnis.html"
+                                    <a href="merchandise-perusahaan-bisnis"
                                         style="font-size: 0.8rem; color: #db2777; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -655,13 +655,13 @@
                                     alt="Pulpen Custom">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="pulpen-promosi-custom.html"
+                                            href="pulpen-promosi-custom"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pulpen
                                             Promosi</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Detail jenis & harga.</p>
-                                    <a href="pulpen-promosi-custom.html"
+                                    <a href="pulpen-promosi-custom"
                                         style="font-size: 0.8rem; color: #db2777; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -672,13 +672,13 @@
                                     alt="Agenda Murah">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-agenda-kerja.html"
+                                            href="buku-agenda-kerja"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Agenda
                                             Kerja</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Opsi Blocknote Spiral.</p>
-                                    <a href="buku-agenda-kerja.html"
+                                    <a href="buku-agenda-kerja"
                                         style="font-size: 0.8rem; color: #db2777; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -712,21 +712,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -817,3 +817,5 @@
 </body>
 
 </html>
+
+
