--- a/package-hampers-exclusive.html
+++ b/package-hampers-exclusive.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/package-hampers-exclusive.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-hampers-exclusive">
     <title>Paket Hampers Eksklusif - Souvenir Lebaran & Natal Kantor | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Solusi kiriman hampers Hari Raya atau ucapan terima kasih tahunan. Isian bisa dicustom mix produk + cookies.">
     <meta property="og:image" content="assets/executive-hardbox.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/package-hampers-exclusive.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-hampers-exclusive">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -32,16 +32,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html" class="text-accent" style="font-weight: 700;">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages" class="text-accent" style="font-weight: 700;">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -57,8 +57,8 @@
         <div class="container">
             <!-- Breadcrumb -->
             <ul class="breadcrumb" style="margin-bottom: 2rem;">
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="packages.html">Paket Bundling</a></li>
+                <li><a href="./">Beranda</a></li>
+                <li><a href="packages">Paket Bundling</a></li>
                 <li>Hampers Eksklusif</li>
             </ul>
 
@@ -204,7 +204,7 @@
             <h2 style="margin-bottom: 2rem;">Lihat Paket Lainnya</h2>
             <div class="grid grid-cols-1 md-grid-cols-3 gap-6">
                 <!-- Related 1 -->
-                <a href="package-gift-set-premium.html" class="card hover-zoom"
+                <a href="package-gift-set-premium" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FEF2F2; position: relative;">
                         <img src="assets/executive-leather.png" alt="Premium Gift Set"
@@ -216,7 +216,7 @@
                     </div>
                 </a>
                 <!-- Related 2 -->
-                <a href="package-deal-closer.html" class="card hover-zoom"
+                <a href="package-deal-closer" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #EEF2FF; position: relative;">
                         <img src="assets/cat-executive.png" alt="VIP Kit"
@@ -228,7 +228,7 @@
                     </div>
                 </a>
                 <!-- Related 3 -->
-                <a href="package-conference-pro.html" class="card hover-zoom"
+                <a href="package-conference-pro" class="card hover-zoom"
                     style="text-decoration: none; display: block; overflow: hidden;">
                     <div style="height: 200px; background: #FFF7ED; position: relative;">
                         <img src="assets/seminar-kit.png" alt="Seminar Kit"
@@ -267,22 +267,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html" style="color: #FBBF24;">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html" style="color: #A5B4FC;">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar" style="color: #FBBF24;">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive" style="color: #A5B4FC;">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -333,7 +333,7 @@
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://hampersmalang.web.id/package-hampers-exclusive.html",
+        "url": "https://hampersmalang.web.id/package-hampers-exclusive",
         "priceCurrency": "IDR",
         "price": "150000",
         "availability": "https://schema.org/InStock",
@@ -344,3 +344,5 @@
 </body>
 
 </html>
+
+
