--- a/packages.html
+++ b/packages.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/packages.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/packages">
     <title>Pusat Paket Seminar Kit & Corporate Gift Set Terlengkap 2026 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan pusing pilih souvenir satu per satu. Pilih paket terima beres kami. Sudah termasuk box, custom logo, dan pengiriman aman. Solusi HRD anti ribet.">
     <meta property="og:image" content="assets/hero-packages.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/packages.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/packages">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -87,16 +87,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html" class="text-accent" style="font-weight: 700;">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages" class="text-accent" style="font-weight: 700;">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -112,7 +112,7 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <ul class="breadcrumb" style="justify-content: start; margin-bottom: 2rem;">
-                    <li><a href="index.html">Beranda</a></li>
+                    <li><a href="./">Beranda</a></li>
                     <li>Paket Bundling</li>
                 </ul>
                 <span class="badge badge-yellow" style="margin-bottom: 1rem; color: var(--foreground);">Terima Beres
@@ -206,7 +206,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Onboarding"
                             class="btn btn-primary">Minta Penawaran</a>
-                        <a href="package-employee-kit.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-employee-kit" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Seminar"
                             class="btn btn-primary">Minta Penawaran</a>
-                        <a href="package-conference-pro.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-conference-pro" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20VIP" class="btn btn-primary">Minta
                             Penawaran</a>
-                        <a href="package-deal-closer.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-deal-closer" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -325,7 +325,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Eco" class="btn btn-primary">Minta
                             Penawaran</a>
-                        <a href="package-earth-saver.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-earth-saver" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Premium"
                             class="btn btn-primary">Minta Penawaran</a>
-                        <a href="package-gift-set-premium.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-gift-set-premium" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -403,7 +403,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Paket%20Hampers"
                             class="btn btn-primary">Minta Penawaran</a>
-                        <a href="package-hampers-exclusive.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-hampers-exclusive" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -442,7 +442,7 @@
                     <div class="flex gap-4">
                         <a href="https://wa.me/62895639068080?text=Tanya%20Merchandise%20Eksklusif"
                             class="btn btn-primary">Minta Penawaran</a>
-                        <a href="package-merchandise-exclusive.html" class="btn btn-secondary">Lihat Detail</a>
+                        <a href="package-merchandise-exclusive" class="btn btn-secondary">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -495,7 +495,7 @@
                     style="background: white; color: var(--accent); border: none;">
                     Konsultasi Custom Gratis <i class="fa-brands fa-whatsapp"></i>
                 </a>
-                <a href="products.html" class="btn btn-secondary" style="border-color: white; color: white;">
+                <a href="products" class="btn btn-secondary" style="border-color: white; color: white;">
                     Lihat Item Satuan
                 </a>
             </div>
@@ -593,22 +593,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html" style="color: #FBBF24;">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html" style="color: #A5B4FC;">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar" style="color: #FBBF24;">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive" style="color: #A5B4FC;">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -650,3 +650,4 @@
 </body>
 
 </html>
+
