--- a/paket-seminar-eksklusif.html
+++ b/paket-seminar-eksklusif.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-eksklusif.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-eksklusif">
     <title>Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan prestise acara Anda dengan seminar kit kelas atas. Paket hardbox dengan isi premium untuk pembicara dan tamu VVIP.">
     <meta property="og:image" content="assets/seminar-premium.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-eksklusif.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-eksklusif">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Seminar Kit VIP</span>
             </nav>
@@ -388,13 +388,13 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Baca Juga:</h4>
                         <ul style="margin-bottom: 0; padding-left: 1.5rem;">
                             <li style="margin-bottom: 0.5rem;">
-                                <a href="panduan-lengkap-seminar-kit.html"
+                                <a href="panduan-lengkap-seminar-kit"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Panduan Lengkap Memilih Paket Seminar untuk Berbagai Budget
                                 </a>
                             </li>
                             <li>
-                                <a href="souvenir-perusahaan-eksklusif.html"
+                                <a href="souvenir-perusahaan-eksklusif"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Inspirasi Souvenir Perusahaan Eksklusif untuk Klien VVIP
                                 </a>
@@ -445,7 +445,7 @@
 
                     <div style="background: #E0E7FF; padding: 1.5rem; border-left: 4px solid #3730A3; margin: 2rem 0;">
                         <strong>Detail Produk:</strong> Pahami perbedaan teknik cetak <a
-                            href="pulpen-promosi-custom.html"
+                            href="pulpen-promosi-custom"
                             style="color: #312E81; font-weight: 700; text-decoration: underline;">Pulpen Metal Grafir vs
                             Sablon</a> agar tidak salah pilih vendor.
                     </div>
@@ -578,11 +578,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Paket%20Seminar%20VIP%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Paket%20Seminar%20VIP%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -613,7 +613,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Pilihan Hemat?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Untuk acara mahasiswa
                                 atau massal, cek Paket Basic (Tas Spunbond + Blocknote).</p>
-                            <a href="paket-seminar-kit-basic.html" class="btn"
+                            <a href="paket-seminar-kit-basic" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-bag-shopping"></i> Cek Paket Hemat
                             </a>
@@ -623,11 +623,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Semua Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         VIP Gifts</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-mobile-screen"></i> Powerbank & USB</a></li>
                             </ul>
                         </div>
@@ -643,14 +643,14 @@
                                     alt="Tips Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Lengkap Memilih Seminar Kit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tips budgeting dan pemilihan
                                         item seminar.</p>
-                                    <a href="panduan-lengkap-seminar-kit.html"
+                                    <a href="panduan-lengkap-seminar-kit"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -661,14 +661,14 @@
                                     alt="Souvenir Eksklusif">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-perusahaan-eksklusif.html"
+                                            href="souvenir-perusahaan-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ide
                                             Souvenir Perusahaan Eksklusif</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Katalog hadiah premium untuk
                                         klien VVIP.</p>
-                                    <a href="souvenir-perusahaan-eksklusif.html"
+                                    <a href="souvenir-perusahaan-eksklusif"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -679,14 +679,14 @@
                                     alt="Tumbler Stainless">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-stainless-vacuum.html"
+                                            href="tumbler-stainless-vacuum"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Stainless Vacuum Flask</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pasangan sempurna untuk isi
                                         seminar kit.</p>
-                                    <a href="tumbler-stainless-vacuum.html"
+                                    <a href="tumbler-stainless-vacuum"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -720,21 +720,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -825,3 +825,5 @@
 </body>
 
 </html>
+
+
