--- a/paket-seminar-kit-basic.html
+++ b/paket-seminar-kit-basic.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-kit-basic.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-kit-basic">
     <title>Ide Paket Seminar Kit Basic di Bawah 50 Ribu: Hemat Tapi Berkelas | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Strategi memilih kombinasi tas, pulpen, dan blocknote agar pas di kantong mahasiswa atau event massal.">
     <meta property="og:image" content="assets/seminar-basic.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-kit-basic.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-kit-basic">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -338,16 +338,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -362,9 +362,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Paket Seminar Hemat</span>
             </nav>
@@ -474,7 +474,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Ingin tahu spesifikasi detail tas seminar lainnya? Cek perbandingan
-                        lengkap di <a href="tas-seminar-laptop-vs-ransel.html"
+                        lengkap di <a href="tas-seminar-laptop-vs-ransel"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Tas Seminar Laptop vs
                             Ransel</a>.
                     </div>
@@ -598,7 +598,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Butuh souvenir yang lebih unik dan personal? Cek opsi <a
-                            href="tumbler-insert-paper.html"
+                            href="tumbler-insert-paper"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Tumbler Insert
                             Paper</a> yang juga ramah kantong.
                     </div>
@@ -666,12 +666,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20paket%20seminar%20kit%20hemat%20dibawah%2050ribu%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic.html"
+                        <a href="https://wa.me/?text=Ide%20paket%20seminar%20kit%20hemat%20dibawah%2050ribu%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-kit-basic"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -712,11 +712,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Souvenir Tumbler</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-pen"></i>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-pen"></i>
                                         Alat Tulis & Notes</a></li>
                             </ul>
                         </div>
@@ -732,7 +732,7 @@
                                     alt="Agenda Kerja">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-agenda-kerja.html"
+                                            href="buku-agenda-kerja"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pentingnya
                                             Buku Agenda Custom</a></h4>
                                     <span
@@ -747,7 +747,7 @@
                                     alt="Tumbler Murah">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-insert-paper.html"
+                                            href="tumbler-insert-paper"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Insert Paper: Souvenir Murah & Ekspres</a></h4>
                                 </div>
@@ -760,7 +760,7 @@
                                     alt="Flashdisk">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Flashdisk
                                             Kartu Digital Multifungsi</a></h4>
                                 </div>
@@ -795,21 +795,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -900,3 +900,5 @@
 </body>
 
 </html>
+
+
