--- a/paket-seminar-nasional-internasional.html
+++ b/paket-seminar-nasional-internasional.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-nasional-internasional.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-nasional-internasional">
     <title>Paket Seminar Kit Kampus & Tas Seminar Nasional Murah | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Rekomendasi paket seminar kit (Tas, Blocknote, Pulpen) yang efisien untuk Seminar Nasional & Internasional. Harga mahasiswa, kualitas universitas.">
     <meta property="og:image" content="assets/paket-seminar-nasional-internasional.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-nasional-internasional.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-nasional-internasional">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,11 +298,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-kampus-universitas.html" style="text-decoration: none; color: #64748B;">Kampus</a>
+                <a href="souvenir-kampus-universitas" style="text-decoration: none; color: #64748B;">Kampus</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #1e3a8a; font-weight: 700;">Seminar Kit</span>
             </nav>
@@ -336,7 +336,7 @@
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Menjadi panitia seminar, baik skala Nasional maupun Internasional, adalah tantangan manajemen
                         waktu dan anggaran. Salah satu pos pengeluaran terbesar yang sering memusingkan adalah pengadaan
-                        <a href="paket-seminar-nasional-internasional.html"
+                        <a href="paket-seminar-nasional-internasional"
                             style="text-decoration: underline; color: #1e40af; font-weight: 700;">Paket Seminar Kit
                             Kampus</a>.
                     </p>
@@ -387,7 +387,7 @@
                     <h3>B. Blocknote Spiral & Pulpen (The Tools)</h3>
                     <p>
                         Meskipun zaman digital, mencatat poin penting pembicara di kertas masih menjadi kebiasaan banyak
-                        akademisi. Gunakan <a href="paket-seminar-nasional-internasional.html"
+                        akademisi. Gunakan <a href="paket-seminar-nasional-internasional"
                             style="color: #1e40af; font-weight: 600;">Blocknote Seminar Murah</a> jilid spiral agar
                         mudah dibalik, dipadukan dengan pulpen stylus yang multifungsi untuk layar HP/Tablet.
                     </p>
@@ -417,7 +417,7 @@
 
                     <blockquote>
                         "Smart Tip: Sisihkan budget untuk souvenir Pembicara (Keynote Speaker). Jangan samakan dengan
-                        peserta umum. Cek <a href='souvenir-promosi-doktor-guru-besar.html'>Souvenir Eksklusif Guru
+                        peserta umum. Cek <a href='souvenir-promosi-doktor-guru-besar'>Souvenir Eksklusif Guru
                             Besar</a> untuk referensi."
                     </blockquote>
 
@@ -437,12 +437,12 @@
                         <h4 style="margin-top: 0; color: #0c4a6e; margin-bottom: 1rem;">Lengkapkan Kebutuhan Kampus
                             Lainnya:</h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-kampus-universitas.html"
-                                    style="color: #0284c7; font-weight: 600;">Katalog Lengkap Souvenir Kampus</a></li>
-                            <li><a href="merchandise-mahasiswa-baru.html"
+                            <li><a href="souvenir-kampus-universitas" style="color: #0284c7; font-weight: 600;">Katalog
+                                    Lengkap Souvenir Kampus</a></li>
+                            <li><a href="merchandise-mahasiswa-baru"
                                     style="color: #0284c7; font-weight: 600;">Merchandise Mahasiswa Baru (PKKMB)</a>
                             </li>
-                            <li><a href="souvenir-reuni-alumni.html" style="color: #0284c7; font-weight: 600;">Souvenir
+                            <li><a href="souvenir-reuni-alumni" style="color: #0284c7; font-weight: 600;">Souvenir
                                     Reuni Alumni</a></li>
                         </ul>
                     </div>
@@ -551,11 +551,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Paket%20Seminar%20Kit%20Murah%20Berkualitas%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional.html"
+                        <a href="https://wa.me/?text=Paket%20Seminar%20Kit%20Murah%20Berkualitas%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-nasional-internasional"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -597,13 +597,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Item Seminar</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-tote-bag.html"><i
+                                <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Tas Kanvas/Blacu</a></li>
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Blocknote Custom</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i
-                                            class="fa-solid fa-pen-fancy"></i> Pulpen Promosi</a></li>
-                                <li class="cat-item"><a href="category-idcard.html"><i class="fa-solid fa-id-card"></i>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-pen-fancy"></i>
+                                        Pulpen Promosi</a></li>
+                                <li class="cat-item"><a href="category-idcard"><i class="fa-solid fa-id-card"></i>
                                         Tali Lanyard</a></li>
                             </ul>
                         </div>
@@ -619,13 +619,13 @@
                                     alt="Souvenir Kampus">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-kampus-universitas.html"
+                                            href="souvenir-kampus-universitas"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Kampus</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Induk Artikel Akademik.</p>
-                                    <a href="souvenir-kampus-universitas.html"
+                                    <a href="souvenir-kampus-universitas"
                                         style="font-size: 0.8rem; color: #1e3a8a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -637,13 +637,13 @@
                                     alt="Promosi Doktor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Pembicara VIP.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #1e3a8a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -655,13 +655,13 @@
                                     alt="Mahasiswa Baru">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-mahasiswa-baru.html"
+                                            href="merchandise-mahasiswa-baru"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Merchandise
                                             Maba</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Paket Ospek Massal.</p>
-                                    <a href="merchandise-mahasiswa-baru.html"
+                                    <a href="merchandise-mahasiswa-baru"
                                         style="font-size: 0.8rem; color: #1e3a8a; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -695,21 +695,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
