--- a/panduan-lengkap-seminar-kit.html
+++ b/panduan-lengkap-seminar-kit.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/panduan-lengkap-seminar-kit.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/panduan-lengkap-seminar-kit">
     <title>Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan salah pilih! Simak panduan komprehensif ini untuk memastikan seminar kit Anda tepat sasaran, hemat budget, dan memberikan kesan mendalam bagi peserta.">
     <meta property="og:image" content="assets/hero-packages.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/panduan-lengkap-seminar-kit.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/panduan-lengkap-seminar-kit">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -264,16 +264,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -288,9 +288,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Panduan Seminar Kit</span>
             </nav>
@@ -335,8 +335,8 @@
                     </p>
 
                     <p>
-                        Artikel pilar ini disusun khusus untuk Anda—para Event Organizer, HRD, Markom, dan Panitia
-                        Kampus—agar tidak salah langkah. Kami akan mengupas tuntas mulai dari pemetaan audiens, alokasi
+                        Artikel pilar ini disusun khusus untuk Andaâ€”para Event Organizer, HRD, Markom, dan Panitia
+                        Kampusâ€”agar tidak salah langkah. Kami akan mengupas tuntas mulai dari pemetaan audiens, alokasi
                         budget yang cerdas, hingga tren item terbaru di tahun 2026.
                     </p>
 
@@ -394,7 +394,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Bingung memilih paket untuk karyawan? Lihat rekomendasi <a
-                            href="rekomendasi-souvenir-kantor-2026.html"
+                            href="rekomendasi-souvenir-kantor-2026"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Tren Souvenir Kantor
                             Premium 2026</a>.
                     </div>
@@ -450,25 +450,25 @@
 
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
-                        <strong>Baca Juga:</strong> Cek detail <a href="paket-seminar-kit-basic.html"
+                        <strong>Baca Juga:</strong> Cek detail <a href="paket-seminar-kit-basic"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Paket Seminar Kit
                             Basic</a> untuk estimasi harga paket hemat.
                     </div>
 
                     <div style="background: #EFF6FF; padding: 1.5rem; border-left: 4px solid #3B82F6; margin: 2rem 0;">
-                        <strong>Rekomendasi Custom:</strong> Pelajari jenis-jenis <a href="buku-agenda-notebook.html"
+                        <strong>Rekomendasi Custom:</strong> Pelajari jenis-jenis <a href="buku-agenda-notebook"
                             style="color: #2563EB; font-weight: 700; text-decoration: underline;">Buku Agenda &
                             Blocknote Custom</a> (Spiral, Lem Panas, Kulit) untuk seminar Anda.
                     </div>
 
                     <div style="background: #FEF3C7; padding: 1.5rem; border-left: 4px solid #D97706; margin: 2rem 0;">
-                        <strong>Info Stationery:</strong> Simak panduan memilih <a href="pulpen-promosi-custom.html"
+                        <strong>Info Stationery:</strong> Simak panduan memilih <a href="pulpen-promosi-custom"
                             style="color: #9A3412; font-weight: 700; text-decoration: underline;">Pulpen Promosi
                             Custom</a> (Plastik vs Metal) untuk merchandise massal.
                     </div>
 
                     <div style="background: #F5F3FF; padding: 1.5rem; border-left: 4px solid #7C3AED; margin: 2rem 0;">
-                        <strong>Rekomendasi VIP:</strong> Lihat inspirasi <a href="paket-seminar-eksklusif.html"
+                        <strong>Rekomendasi VIP:</strong> Lihat inspirasi <a href="paket-seminar-eksklusif"
                             style="color: #6D28D9; font-weight: 700; text-decoration: underline;">Paket Seminar Kit
                             Eksklusif Hardbox</a> untuk tamu penting & pejabat negara.
                     </div>
@@ -504,9 +504,9 @@
                             (tissue)
                             yang lembut jika acara berlangsung seharian agar tidak gatal di leher.
                             <div style="margin-top: 0.5rem; font-size: 0.9rem;">
-                                <a href="id-card-lanyard.html"
+                                <a href="id-card-lanyard"
                                     style="color: var(--accent); font-weight: 600; text-decoration: underline;">
-                                    » Baca: Panduan Memilih Bahan Lanyard & ID Card Holder
+                                    Â» Baca: Panduan Memilih Bahan Lanyard & ID Card Holder
                                 </a>
                             </div>
                         </li>
@@ -669,12 +669,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Panduan%20Lengkap%20Memilih%20Seminar%20Kit%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit.html"
+                        <a href="https://wa.me/?text=Panduan%20Lengkap%20Memilih%20Seminar%20Kit%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpanduan-lengkap-seminar-kit"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -705,7 +705,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Download Katalog PDF?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Dapatkan daftar harga
                                 lengkap semua item seminar kit terbaru tahun ini.</p>
-                            <a href="packages.html" class="btn"
+                            <a href="packages" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-file-pdf"></i> Lihat Paket Lengkap
                             </a>
@@ -715,11 +715,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar</a></li>
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-mobile-screen"></i> Gadget Souvenir</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-bottle-water"></i>
                                         Tumbler & Botol</a></li>
                             </ul>
@@ -736,7 +736,7 @@
                                     alt="Paket Basic">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Kit di Bawah 50 Ribu</a></h4>
                                     <span style="font-size: 0.75rem; color: var(--accent); font-weight: 600;">Best
@@ -751,7 +751,7 @@
                                     alt="Flashdisk">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Inovasi
                                             Flashdisk Kartu untuk Souvenir</a></h4>
                                 </div>
@@ -764,7 +764,7 @@
                                     alt="Tumbler Bambu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-bambu-grafir.html"
+                                            href="tumbler-bambu-grafir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Bambu Estetik & Eco-Friendly</a></h4>
                                 </div>
@@ -799,21 +799,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -904,3 +904,5 @@
 </body>
 
 </html>
+
+
