--- a/products.html
+++ b/products.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/products.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/products">
     <title>Katalog Hampers & Gift Set Premium Malang | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan ide hampers terbaik untuk momen spesial Anda. Custom branding, harga terjangkau, kualitas premium.">
     <meta property="og:image" content="assets/products-hero.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/products.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/products">
     <meta property="og:type" content="website">
 
     <!-- Schema Markup -->
@@ -36,7 +36,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Katalog Produk",
-        "item": "https://hampersmalang.web.id/products.html"
+        "item": "https://hampersmalang.web.id/products"
       }]
     }
     </script>
@@ -51,16 +51,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html" class="text-accent" style="font-weight: 700;">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products" class="text-accent" style="font-weight: 700;">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -76,7 +76,7 @@
         style="padding-top: 80px; padding-bottom: 4rem; background: var(--muted); position: relative; overflow: hidden;">
         <div class="container text-center" style="position: relative; z-index: 2;">
             <ul class="breadcrumb">
-                <li><a href="index.html">Beranda</a></li>
+                <li><a href="./">Beranda</a></li>
                 <li>Katalog Produk</li>
             </ul>
             <span class="badge badge-yellow">Katalog 2026</span>
@@ -154,12 +154,12 @@
                             </li>
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
                                 <i class="fa-solid fa-computer-mouse text-accent"></i> <b><a
-                                        href="desk-accessories-custom.html"
+                                        href="desk-accessories-custom"
                                         style="color: inherit; text-decoration: none;">Desk Accessories</a></b><br>Mouse
                                 Pad & Holder
                             </li>
                         </ul>
-                        <a href="category-gadget.html" class="btn btn-primary">Lihat Katalog Gadget <i
+                        <a href="category-gadget" class="btn btn-primary">Lihat Katalog Gadget <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
@@ -188,7 +188,7 @@
                         <ul class="grid md-grid-cols-2 gap-4"
                             style="margin-bottom: 1.5rem; list-style: none; padding: 0;">
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
-                                <i class="fa-solid fa-bag-shopping text-secondary"></i> <b><a href="tas-goodie-bag.html"
+                                <i class="fa-solid fa-bag-shopping text-secondary"></i> <b><a href="tas-goodie-bag"
                                         style="color: inherit; text-decoration: none;">Bags & Totebag</a></b><br>Canvas
                                 / Spunbond
                             </li>
@@ -196,9 +196,9 @@
                                 <i class="fa-solid fa-umbrella text-secondary"></i> <b>Umbrellas</b><br>Golf / Lipat
                             </li>
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
-                                <i class="fa-solid fa-shirt text-secondary"></i> <b><a href="konveksi-seragam-kaos.html"
+                                <i class="fa-solid fa-shirt text-secondary"></i> <b><a href="konveksi-seragam-kaos"
                                         style="color: inherit; text-decoration: none;">Apparel</a></b><br>Polo / Jaket /
-                                <a href="topi-promosi-custom.html"
+                                <a href="topi-promosi-custom"
                                     style="color: inherit; text-decoration: none;">Topi</a>
                             </li>
                             <li class="card" style="padding: 1rem; font-size: 0.9rem;">
@@ -206,7 +206,7 @@
                                 Travel
                             </li>
                         </ul>
-                        <a href="category-lifestyle.html" class="btn btn-primary">Lihat Katalog Lifestyle <i
+                        <a href="category-lifestyle" class="btn btn-primary">Lihat Katalog Lifestyle <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                                 <b>Corkcicle-Style</b><br>Trendy & Viral
                             </li>
                         </ul>
-                        <a href="category-drinkware.html" class="btn btn-primary">Lihat Katalog Drinkware <i
+                        <a href="category-drinkware" class="btn btn-primary">Lihat Katalog Drinkware <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
@@ -286,7 +286,7 @@
                                     Set</b><br>Desk Organizer Kayu
                             </li>
                         </ul>
-                        <a href="category-eco.html" class="btn btn-primary"
+                        <a href="category-eco" class="btn btn-primary"
                             style="background: #166534; border-color: #166534;">Lihat Katalog Eco <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
@@ -320,7 +320,7 @@
                                 <i class="fa-solid fa-id-card text-tertiary"></i> <b>Onboarding Kit</b><br>Karyawan Baru
                             </li>
                         </ul>
-                        <a href="category-seminar.html" class="btn btn-primary">Lihat
+                        <a href="category-seminar" class="btn btn-primary">Lihat
                             Detail Paket <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div style="order: 1;">
@@ -365,7 +365,7 @@
                                 Parker
                             </li>
                         </ul>
-                        <a href="category-executive.html" class="btn btn-primary"
+                        <a href="category-executive" class="btn btn-primary"
                             style="background: black; color: #FFD700; border-color: #FFD700;">Lihat Katalog VIP <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
@@ -395,7 +395,7 @@
                             </li>
                         </ul>
                         <div class="flex gap-4" style="flex-wrap: wrap;">
-                            <a href="category-express.html" class="btn btn-secondary"
+                            <a href="category-express" class="btn btn-secondary"
                                 style="color: red; border-color: red;">
                                 Lihat Detail <i class="fa-solid fa-arrow-right"></i>
                             </a>
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                     <div style="order: 1;">
-                        <a href="category-express.html">
+                        <a href="category-express">
                             <img src="assets/cat-express.png" alt="Layanan Cetak Kilat Souvenir"
                                 style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                                 loading="lazy">
@@ -459,22 +459,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -514,3 +514,4 @@
 </body>
 
 </html>
+
