--- a/pulpen-promosi-custom.html
+++ b/pulpen-promosi-custom.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/pulpen-promosi-custom.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/pulpen-promosi-custom">
     <title>Cetak Pulpen Promosi Custom Logo | Grosir Pen Plastik & Metal Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Souvenir kecil dengan dampak besar. Temukan beragam jenis pulpen promosi mulai dari Rp 2.000-an untuk kebutuhan branding massal Anda.">
     <meta property="og:image" content="assets/seminar-basic.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/pulpen-promosi-custom.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/pulpen-promosi-custom">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -269,16 +269,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -293,9 +293,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Pulpen Promosi Custom</span>
             </nav>
@@ -375,7 +375,7 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Rekomendasi Paket Hemat:</h4>
                         <p style="margin-bottom: 0;">
                             Cari paket seminar murah yang sudah termasuk pulpen? Cek <a
-                                href="panduan-lengkap-seminar-kit.html"
+                                href="panduan-lengkap-seminar-kit"
                                 style="text-decoration: underline; color: #D97706; font-weight: 700;">Panduan Lengkap
                                 Memilih Seminar Kit Hemat</a>.
                         </p>
@@ -443,7 +443,7 @@
                         <h4 style="margin-top: 0; color: #4C1D95; margin-bottom: 1rem;">Lihat Opsi Premium:</h4>
                         <p style="margin-bottom: 0;">
                             Ingin melihat pulpen metal dalam satu set hadiah mewah? Intip isinya di <a
-                                href="paket-seminar-eksklusif.html"
+                                href="paket-seminar-eksklusif"
                                 style="text-decoration: underline; color: #6D28D9; font-weight: 700;">Paket Seminar Kit
                                 Eksklusif Hardbox</a>.
                         </p>
@@ -453,7 +453,7 @@
                     <p>
                         Pulpen promosi adalah strategi branding "kecil-kecil cabe rawit". Dengan budget yang sangat
                         terjangkau, Anda bisa menyebarkan brand awareness secara masif. Kuncinya adalah memilih kualitas
-                        tinta yang baik—karena pulpen yang macet hanya akan membuat kesal dan membuang peluang promosi
+                        tinta yang baikâ€”karena pulpen yang macet hanya akan membuat kesal dan membuang peluang promosi
                         Anda.
                     </p>
                     <p>
@@ -538,11 +538,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Cetak%20Pulpen%20Promosi%20Murah%20di%20Surabaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom.html"
+                        <a href="https://wa.me/?text=Cetak%20Pulpen%20Promosi%20Murah%20di%20Surabaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpulpen-promosi-custom"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -573,7 +573,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Souvenir Lain?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Lengkapi pulpen Anda
                                 dengan Blocknote atau Tumbler.</p>
-                            <a href="products.html" class="btn"
+                            <a href="products" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-bag-shopping"></i> Lihat Katalog Lengkap
                             </a>
@@ -583,11 +583,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook.html"><i
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i
                                             class="fa-solid fa-book"></i> Agenda Notebook</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set Eksklusif</a></li>
                             </ul>
                         </div>
@@ -603,14 +603,14 @@
                                     alt="Agenda Kulit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-agenda-notebook.html"
+                                            href="buku-agenda-notebook"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Cetak
                                             Agenda Custom Kulit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pasangan sempurna untuk
                                         pulpen metal.</p>
-                                    <a href="buku-agenda-notebook.html"
+                                    <a href="buku-agenda-notebook"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -621,14 +621,14 @@
                                     alt="Paket Seminar Hemat">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Seminar Kit Hemat</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Strategi budgeting untuk
                                         event massal.</p>
-                                    <a href="panduan-lengkap-seminar-kit.html"
+                                    <a href="panduan-lengkap-seminar-kit"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -639,14 +639,14 @@
                                     alt="VIP Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-eksklusif.html"
+                                            href="paket-seminar-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar VIP Hardbox</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Isi lengkap souvenir kelas
                                         atas.</p>
-                                    <a href="paket-seminar-eksklusif.html"
+                                    <a href="paket-seminar-eksklusif"
                                         style="font-size: 0.8rem; color: var(--accent); font-weight: 600;">Baca
-                                        Selengkapnya »</a>
+                                        Selengkapnya Â»</a>
                                 </div>
                             </div>
 
@@ -680,21 +680,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -785,3 +785,5 @@
 </body>
 
 </html>
+
+
