--- a/souvenir-kampus-universitas.html
+++ b/souvenir-kampus-universitas.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-kampus-universitas.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-kampus-universitas">
     <title>Pusat Souvenir Kampus, Merchandise Universitas & Paket Promosi Doktor | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan katalog lengkap merchandise universitas untuk berbagai level acara. Kualitas premium untuk institusi pendidikan modern.">
     <meta property="og:image" content="assets/souvenir-kampus-universitas.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-kampus-universitas.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-kampus-universitas">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,11 +298,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-kampus-universitas.html" style="text-decoration: none; color: #64748B;">Kampus</a>
+                <a href="souvenir-kampus-universitas" style="text-decoration: none; color: #64748B;">Kampus</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #0369a1; font-weight: 700;">Merchandise Universitas</span>
             </nav>
@@ -335,7 +335,7 @@
 
                     <p class="lead" style="font-size: 1.25rem; font-weight: 500; color: #475569;">
                         Perguruan tinggi bukan sekadar tempat belajar, melainkan sebuah brand besar yang menaungi ribuan
-                        civitas akademika. Kebutuhan akan <a href="souvenir-kampus-universitas.html"
+                        civitas akademika. Kebutuhan akan <a href="souvenir-kampus-universitas"
                             style="text-decoration: underline; color: #0369a1; font-weight: 700;">Souvenir Kampus dan
                             Merchandise Universitas</a> kini semakin krusial, baik untuk branding institusi, kebanggaan
                         mahasiswa, hingga penghormatan tradisi akademik.
@@ -343,8 +343,8 @@
 
                     <p>
                         Maroon Souvenir hadir sebagai mitra strategis pengadaan souvenir perguruan tinggi terlengkap di
-                        Indonesia. Kami memahami bahwa setiap level di kampus—mulai dari Mahasiswa Baru (Maba) hingga
-                        Guru Besar—memiliki kebutuhan spesifikasi merchandise yang sangat berbeda.
+                        Indonesia. Kami memahami bahwa setiap level di kampusâ€”mulai dari Mahasiswa Baru (Maba) hingga
+                        Guru Besarâ€”memiliki kebutuhan spesifikasi merchandise yang sangat berbeda.
                     </p>
 
                     <p>
@@ -370,7 +370,7 @@
 
                     <h3>Rekomendasi Paket Merchandise Mahasiswa Baru:</h3>
                     <ul>
-                        <li><a href="merchandise-mahasiswa-baru.html" style="color: #0369a1; font-weight: 600;">Tas
+                        <li><a href="merchandise-mahasiswa-baru" style="color: #0369a1; font-weight: 600;">Tas
                                 Kuliah (Tote/Backpack):</a> Wajib kuat untuk bawa laptop dan buku tebal. Bahan kanvas
                             atau D300 sangat disarankan.</li>
                         <li><strong>Tumbler Minum:</strong> Mendukung kampanye 'Green Campus' tanpa botol plastik sekali
@@ -395,7 +395,7 @@
                     <h2>2. Level: Akademik & Konferensi (Seminar Kit)</h2>
                     <p>
                         Kampus adalah pusat diskusi ilmiah. Seminar Nasional, Simposium Internasional, dan Workshop
-                        Dosen adalah agenda rutin yang membutuhkan <a href="paket-seminar-nasional-internasional.html"
+                        Dosen adalah agenda rutin yang membutuhkan <a href="paket-seminar-nasional-internasional"
                             style="text-decoration: underline; color: #0369a1; font-weight: 700;">Paket Seminar Kit</a>
                         yang profesional.
                     </p>
@@ -421,7 +421,7 @@
                         berfungsi sebagai tiket kenangan.
                     </p>
                     <p>
-                        Untuk segmen ini, lihat koleksi lengkapnya di halaman <a href="souvenir-reuni-alumni.html"
+                        Untuk segmen ini, lihat koleksi lengkapnya di halaman <a href="souvenir-reuni-alumni"
                             style="text-decoration: underline; color: #ea580c; font-weight: 700;">Souvenir Reuni &
                             Alumni</a>. Produk apparel seperti Polo Shirt Bordir Logo Angkatan atau Jaket Varsity Kampus
                         adalah favorit sepanjang masa.
@@ -448,7 +448,7 @@
                                 souvenir.</li>
                         </ul>
                         <p style="margin-top: 1rem; margin-bottom: 0;">Selengkapnya lihat di: <a
-                                href="souvenir-promosi-doktor-guru-besar.html"
+                                href="souvenir-promosi-doktor-guru-besar"
                                 style="color: #c2410c; font-weight: 700;">Katalog Souvenir Promosi Doktor</a></p>
                     </div>
 
@@ -563,11 +563,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Katalog%20Lengkap%20Souvenir%20Kampus%20dan%20Wisuda%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas.html"
+                        <a href="https://wa.me/?text=Katalog%20Lengkap%20Souvenir%20Kampus%20dan%20Wisuda%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-kampus-universitas"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -609,13 +609,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Akademik</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-chalkboard-user"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-tote-bag.html"><i
+                                <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Totebag Kampus</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-medal"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-medal"></i>
                                         Souvenir Wisuda</a></li>
-                                <li class="cat-item"><a href="buku-agenda-kerja.html"><i class="fa-solid fa-book"></i>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book"></i>
                                         Agenda Dosen</a></li>
                             </ul>
                         </div>
@@ -632,13 +632,13 @@
                                     alt="Promosi Doktor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Promosi
                                             Doktor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Hadiah C-Level Akademik.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #0369a1; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -649,13 +649,13 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-nasional-internasional.html"
+                                            href="paket-seminar-nasional-internasional"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Seminar
                                             Kit Guide</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Untuk Panitia Acara.</p>
-                                    <a href="paket-seminar-nasional-internasional.html"
+                                    <a href="paket-seminar-nasional-internasional"
                                         style="font-size: 0.8rem; color: #0369a1; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -666,13 +666,13 @@
                                     alt="Mahasiswa Baru">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-mahasiswa-baru.html"
+                                            href="merchandise-mahasiswa-baru"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Merchandise
                                             Maba</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Ide Starter Kit.</p>
-                                    <a href="merchandise-mahasiswa-baru.html"
+                                    <a href="merchandise-mahasiswa-baru"
                                         style="font-size: 0.8rem; color: #0369a1; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -706,21 +706,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -811,3 +811,5 @@
 </body>
 
 </html>
+
+
