--- a/souvenir-promosi-doktor-guru-besar.html
+++ b/souvenir-promosi-doktor-guru-besar.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar">
     <title>7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji (Update 2026)</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk momen sakral akademik Anda. Temukan inspirasi gift set premium di sini.">
     <meta property="og:image" content="assets/souvenir-promosi-doktor-cover.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -267,16 +267,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -291,11 +291,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="category-executive.html" style="text-decoration: none; color: #64748B;">Academic Gifts</a>
+                <a href="category-executive" style="text-decoration: none; color: #64748B;">Academic Gifts</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #4338ca; font-weight: 700;">Promosi Doktor</span>
             </nav>
@@ -382,7 +382,7 @@
                     <p>
                         Tumbler ini memiliki sensor suhu di tutupnya. Sangat populer karena terlihat futuristik namun
                         harganya sangat masuk akal. Nilai tambahnya ada pada <a
-                            href="cetak-logo-custom-satuan-grosir.html" style="color: #4338ca; font-weight: 600;">Grafir
+                            href="cetak-logo-custom-satuan-grosir" style="color: #4338ca; font-weight: 600;">Grafir
                             Laser Nama</a> masing-masing penguji.
                     </p>
                     <p>
@@ -413,7 +413,7 @@
                         Pilihlah kulit sintetis premium (PU Leather) atau kulit asli jika budget mencukupi. Emboss logo
                         universitas di sampul depan secara samar (deboss) agar tidak terlalu mencolok.
                     </p>
-                    <p>Lihat koleksi lengkapnya di halaman <a href="buku-agenda-notebook.html"
+                    <p>Lihat koleksi lengkapnya di halaman <a href="buku-agenda-notebook"
                             style="text-decoration: underline;">Buku Agenda & Notebook</a>.</p>
 
                     <h2>5. E-Money / Flazz Custom Edisi Khusus</h2>
@@ -526,11 +526,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20Souvenir%20Promosi%20Doktor%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar.html"
+                        <a href="https://wa.me/?text=Ide%20Souvenir%20Promosi%20Doktor%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-promosi-doktor-guru-besar"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -571,13 +571,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Akademik</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-gift"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Gift Set Premium</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook.html"><i
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i
                                             class="fa-solid fa-book-open"></i> Agenda Kulit</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i class="fa-solid fa-flask"></i>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-flask"></i>
                                         Tumbler Grafir</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom.html"><i
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
                                             class="fa-solid fa-pen-nib"></i> Pulpen Metal</a></li>
                             </ul>
                         </div>
@@ -593,13 +593,13 @@
                                     alt="Merchandise Eksklusif">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-kantor-eksklusif.html"
+                                            href="merchandise-kantor-eksklusif"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Hadiah
                                             VIP</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Inspirasi hadiah mewah.</p>
-                                    <a href="merchandise-kantor-eksklusif.html"
+                                    <a href="merchandise-kantor-eksklusif"
                                         style="font-size: 0.8rem; color: #4338ca; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -611,13 +611,13 @@
                                     alt="Notebook Kulit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-agenda-notebook.html"
+                                            href="buku-agenda-notebook"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Agenda
                                             Kulit</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Wajib untuk dosen.</p>
-                                    <a href="buku-agenda-notebook.html"
+                                    <a href="buku-agenda-notebook"
                                         style="font-size: 0.8rem; color: #4338ca; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -628,14 +628,14 @@
                                     alt="Teknik Grafir">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="cetak-logo-custom-satuan-grosir.html"
+                                            href="cetak-logo-custom-satuan-grosir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Info
                                             Grafir Nama</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Teknik cetak nama satuan.
                                     </p>
-                                    <a href="cetak-logo-custom-satuan-grosir.html"
+                                    <a href="cetak-logo-custom-satuan-grosir"
                                         style="font-size: 0.8rem; color: #4338ca; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -669,21 +669,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -774,3 +774,5 @@
 </body>
 
 </html>
+
+
