--- a/souvenir-ramah-lingkungan.html
+++ b/souvenir-ramah-lingkungan.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-ramah-lingkungan.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-ramah-lingkungan">
     <title>Koleksi Souvenir Kantor Ramah Lingkungan (Sustainable Gifts) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Saatnya beralih ke souvenir yang berdampak positif. Kurangi plastik, pilih Bambu & Daur Ulang. Tingkatkan citra perusahaan hijau Anda.">
     <meta property="og:image" content="assets/souvenir-ramah-lingkungan.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-ramah-lingkungan.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-ramah-lingkungan">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article, FAQ, Breadcrumb) -->
@@ -272,16 +272,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -296,9 +296,9 @@
     <div style="background: #F0FDF4; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #166534;">
-                <a href="index.html" style="text-decoration: none; color: #166534;">Home</a>
+                <a href="./" style="text-decoration: none; color: #166534;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #166534;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #166534;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #15803D; font-weight: 700;">Souvenir Ramah Lingkungan</span>
             </nav>
@@ -388,7 +388,7 @@
 
                     <h3>Tumbler Bambu Grafir</h3>
                     <p>
-                        <a href="tumbler-bambu-grafir.html"
+                        <a href="tumbler-bambu-grafir"
                             style="text-decoration: underline; color: #15803D; font-weight: 700;">Tumbler Bambu</a>
                         adalah primadona di kategori ini. Menggabungkan teknologi isolasi vakum stainless steel di dalam
                         (tahan panas/dingin hingga 8 jam) dengan *casing* bambu asli di luar. Setiap tumbler memiliki
@@ -414,7 +414,7 @@
 
                     <h3>Notebook Kertas Daur Ulang</h3>
                     <p>
-                        <a href="buku-daur-ulang.html"
+                        <a href="buku-daur-ulang"
                             style="text-decoration: underline; color: #15803D; font-weight: 700;">Recycled Notebook</a>
                         menggunakan kertas berwarna kecoklatan (unbleached) yang bebas klorin pemutih. Cover-nya
                         biasanya terbuat dari kerdus tebal daur ulang atau *cork* (gabus) yang *renewable*.
@@ -432,7 +432,7 @@
                         style="margin: 2rem 0; padding: 1.5rem; background: #FFFBEB; border-left: 4px solid #D97706; border-radius: 4px;">
                         <h4 style="margin-top: 0; color: #92400E; margin-bottom: 1rem;">Pasangan Sempurna:</h4>
                         <p style="margin-bottom: 0;">
-                            Gabungkan Notebook Daur Ulang dengan <a href="desk-accessories-custom.html"
+                            Gabungkan Notebook Daur Ulang dengan <a href="desk-accessories-custom"
                                 style="text-decoration: underline; color: #B45309; font-weight: 700;">Desk Accessories
                                 Kayu</a> seperti Phone Holder untuk set meja kerja yang bernuansa "Zen Workforce".
                         </p>
@@ -440,7 +440,7 @@
 
                     <h2>4. Kategori Zero Waste Kit: Alat Makan & Straw</h2>
                     <p>
-                        Gerakan *Bring Your Own (BYO)* semakin marak. Souvenir <a href="alat-makan-kayu.html"
+                        Gerakan *Bring Your Own (BYO)* semakin marak. Souvenir <a href="alat-makan-kayu"
                             style="text-decoration: underline; color: #15803D; font-weight: 700;">Set Alat Makan
                             Kayu/Bambu</a> (Sendok, Garpu, Sumpit, Sedotan) dalam pouch kanvas adalah hadiah yang sangat
                         fungsional.
@@ -459,14 +459,14 @@
                     <p>
                         Terbuat dari kapas (cotton). Blacu adalah versi mentah (unbleached) yang berwarna krem alami
                         dengan bintik-bintik serat kapas, sangat *arsty* dan *vintage*.
-                        <a href="tas-belacu-goni.html"
+                        <a href="tas-belacu-goni"
                             style="text-decoration: underline; color: #15803D; font-weight: 700;">Tas Belacu & Goni</a>
                         adalah pilihan biodegradable sejati. Jika dibuang ke tanah, ia akan terurai.
                     </p>
 
                     <h3>B. Tas Spunbond (Polypropylene)</h3>
                     <p>
-                        Meskipun terbuat dari plastik, <a href="tas-goodie-bag.html"
+                        Meskipun terbuat dari plastik, <a href="tas-goodie-bag"
                             style="text-decoration: underline; color: #15803D; font-weight: 700;">Goodie Bag
                             Spunbond</a> masuk kategori ramah lingkungan karena sifatnya yang <strong>Reusable</strong>
                         (bisa dipakai berulang kali) menggantikan ribuan kantong kresek sekali pakai.
@@ -558,11 +558,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Ramah%20Lingkungan%20(Eco-Green)%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Ramah%20Lingkungan%20(Eco-Green)%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -603,11 +603,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i>
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Katalog Eco-Green</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Drinkware</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag.html"><i
+                                <li class="cat-item"><a href="tas-goodie-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Goodie Bag Kanvas</a></li>
                             </ul>
                         </div>
@@ -623,14 +623,14 @@
                                     alt="Tas Kanvas">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-goodie-bag.html"
+                                            href="tas-goodie-bag"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Eco: Kanvas vs Spunbond</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pilih tas belanja yang awet.
                                     </p>
-                                    <a href="tas-goodie-bag.html"
+                                    <a href="tas-goodie-bag"
                                         style="font-size: 0.8rem; color: #15803D; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -641,13 +641,13 @@
                                     alt="Notebook Daur Ulang">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="buku-daur-ulang.html"
+                                            href="buku-daur-ulang"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Buku
                                             Agenda Daur Ulang</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Kertas alami yang unik.</p>
-                                    <a href="buku-daur-ulang.html"
+                                    <a href="buku-daur-ulang"
                                         style="font-size: 0.8rem; color: #15803D; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -658,13 +658,13 @@
                                     alt="Kaos Katun">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="konveksi-seragam-kaos.html"
+                                            href="konveksi-seragam-kaos"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Kaos
                                             Katun 100%</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Bahan alami yang nyaman.</p>
-                                    <a href="konveksi-seragam-kaos.html"
+                                    <a href="konveksi-seragam-kaos"
                                         style="font-size: 0.8rem; color: #15803D; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -675,14 +675,14 @@
                                     alt="Jaket Kantor">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="jaket-hoodie-kantor.html"
+                                            href="jaket-hoodie-kantor"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Jaket
                                             Awet Tim Kantor</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Investasi seragam jangka
                                         panjang.</p>
-                                    <a href="jaket-hoodie-kantor.html"
+                                    <a href="jaket-hoodie-kantor"
                                         style="font-size: 0.8rem; color: #15803D; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -693,13 +693,13 @@
                                     alt="Tas Karung Goni">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-belacu-goni.html"
+                                            href="tas-belacu-goni"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Belacu & Goni</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Packaging rustic & unik.</p>
-                                    <a href="tas-belacu-goni.html"
+                                    <a href="tas-belacu-goni"
                                         style="font-size: 0.8rem; color: #15803D; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -733,21 +733,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -838,3 +838,5 @@
 </body>
 
 </html>
+
+
