--- a/souvenir-reuni-alumni.html
+++ b/souvenir-reuni-alumni.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-reuni-alumni.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-reuni-alumni">
     <title>Souvenir Reuni Akbar & Merchandise Alumni (Polo, Payung, Mug) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Ide merchandise reuni yang memorable: Polo Shirt seragam angkatan, Payung Golf eksklusif, dan Mug nostalgia.">
     <meta property="og:image" content="assets/souvenir-reuni-alumni.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-reuni-alumni.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-reuni-alumni">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,11 +298,11 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-kampus-universitas.html" style="text-decoration: none; color: #64748B;">Kampus</a>
+                <a href="souvenir-kampus-universitas" style="text-decoration: none; color: #64748B;">Kampus</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #15803d; font-weight: 700;">Reuni Alumni</span>
             </nav>
@@ -339,7 +339,7 @@
 
                     <p>
                         Selain susunan acara yang hangat dan makanan yang lezat, ada satu hal yang akan membuat momen
-                        ini abadi: <a href="souvenir-reuni-alumni.html"
+                        ini abadi: <a href="souvenir-reuni-alumni"
                             style="text-decoration: underline; color: #15803d; font-weight: 700;">Souvenir Reuni /
                             Merchandise Alumni</a> yang dibawa pulang.
                     </p>
@@ -362,7 +362,7 @@
                     <h2>1. Polo Shirt Bordir: Seragam Kebanggaan</h2>
                     <p>
                         Berbeda dengan kaos oblong biasa, <strong>Polo Shirt (Kaos Kerah)</strong> memberikan kesan yang
-                        lebih rapi, dewasa, dan mapan—sangat cocok untuk alumni yang rata-rata sudah bekerja atau
+                        lebih rapi, dewasa, dan mapanâ€”sangat cocok untuk alumni yang rata-rata sudah bekerja atau
                         berkeluarga.
                     </p>
                     <p>
@@ -380,7 +380,7 @@
 
                     <h2>2. Payung Golf: Perlindungan & Simbol Naungan</h2>
                     <p>
-                        Filosofi payung adalah "melindungi". Memberikan <a href="category-gift-set.html"
+                        Filosofi payung adalah "melindungi". Memberikan <a href="category-gift-set"
                             style="color: #166534; font-weight: 600;">Payung Golf Premium</a> sebagai souvenir reuni
                         menyimbolkan harapan agar sesama alumni saling melindungi dan menaungi dalam kehidupan.
                     </p>
@@ -429,12 +429,12 @@
                         <h4 style="margin-top: 0; color: #14532d; margin-bottom: 1rem;">Lengkapkan Ekosistem Kampus:
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-kampus-universitas.html"
+                            <li><a href="souvenir-kampus-universitas"
                                     style="color: #15803d; font-weight: 600;">Kembali ke Halaman Utama Kampus</a></li>
-                            <li><a href="souvenir-promosi-doktor-guru-besar.html"
+                            <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #15803d; font-weight: 600;">Hadiah Untuk Dosen/Guru Besar Favorit</a>
                             </li>
-                            <li><a href="merchandise-mahasiswa-baru.html"
+                            <li><a href="merchandise-mahasiswa-baru"
                                     style="color: #15803d; font-weight: 600;">Lihat Merchandise Generasi Baru</a></li>
                         </ul>
                     </div>
@@ -541,11 +541,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20Souvenir%20Reuni%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni.html"
+                        <a href="https://wa.me/?text=Ide%20Souvenir%20Reuni%20Keren%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-reuni-alumni"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -586,13 +586,13 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Reuni</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-tote-bag.html"><i
+                                <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Goodie Bag</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Mug & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-umbrella.html"><i
+                                <li class="cat-item"><a href="category-umbrella"><i
                                             class="fa-solid fa-umbrella"></i> Payung Promosi</a></li>
-                                <li class="cat-item"><a href="category-gift-set.html"><i class="fa-solid fa-gift"></i>
+                                <li class="cat-item"><a href="category-gift-set"><i class="fa-solid fa-gift"></i>
                                         Gift Set Premium</a></li>
                             </ul>
                         </div>
@@ -608,13 +608,13 @@
                                     alt="Souvenir Kampus">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-kampus-universitas.html"
+                                            href="souvenir-kampus-universitas"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Kampus</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Induk Artikel Akademik.</p>
-                                    <a href="souvenir-kampus-universitas.html"
+                                    <a href="souvenir-kampus-universitas"
                                         style="font-size: 0.8rem; color: #15803d; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -626,13 +626,13 @@
                                     alt="Doktor Premium">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-promosi-doktor-guru-besar.html"
+                                            href="souvenir-promosi-doktor-guru-besar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Hadiah
                                             Dosen VIP</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tanda mata kehormatan.</p>
-                                    <a href="souvenir-promosi-doktor-guru-besar.html"
+                                    <a href="souvenir-promosi-doktor-guru-besar"
                                         style="font-size: 0.8rem; color: #15803d; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -644,13 +644,13 @@
                                     alt="Mahasiswa Baru">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="merchandise-mahasiswa-baru.html"
+                                            href="merchandise-mahasiswa-baru"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Merchandise
                                             Maba</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Info untuk junior.</p>
-                                    <a href="merchandise-mahasiswa-baru.html"
+                                    <a href="merchandise-mahasiswa-baru"
                                         style="font-size: 0.8rem; color: #15803d; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -684,21 +684,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -789,3 +789,5 @@
 </body>
 
 </html>
+
+
