--- a/souvenir-tumbler-botol.html
+++ b/souvenir-tumbler-botol.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-tumbler-botol.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-tumbler-botol">
     <title>Pusat Souvenir Tumbler & Botol Minum Custom Logo Terlengkap (Grosir) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cari vendor souvenir tumbler custom terbaik? Temukan perbandingan lengkap bahan plastik, stainless, hingga aluminium. Harga grosir, cetak logo presisi, dan varian terlengkap ada di sini.">
     <meta property="og:image" content="assets/drinkware-thermos.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-tumbler-botol.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-tumbler-botol">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -310,16 +310,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -334,9 +334,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Pusat Drinkware</span>
             </nav>
@@ -486,7 +486,7 @@
                     <p>Kami membagi koleksi kami ke dalam beberapa kategori utama (Silo) untuk memudahkan Anda menemukan
                         spesifikasi yang tepat.</p>
 
-                    <h3><a href="tumbler-stainless-vacuum.html" style="text-decoration: none; color: inherit;">1.
+                    <h3><a href="tumbler-stainless-vacuum" style="text-decoration: none; color: inherit;">1.
                             Tumbler Stainless & Vacuum Flask (Tahan Panas)</a></h3>
                     <p>
                         Ini adalah kategori best-seller untuk souvenir perusahaan (B2B). Menggunakan teknologi Double
@@ -506,7 +506,7 @@
                     <p>
                         Mencari kuantitas tinggi dengan harga bersahabat? Kategori ini jawabannya. Tumbler plastik kami
                         menggunakan bahan Food Grade (BPA Free) yang aman. Salah satu varian terunik adalah <a
-                            href="tumbler-insert-paper.html" style="color: var(--accent); font-weight: 600;">Tumbler
+                            href="tumbler-insert-paper" style="color: var(--accent); font-weight: 600;">Tumbler
                             Insert Paper</a>,
                         di mana Anda bisa mencetak desain full color pada kertas yang disisipkan di antara dinding
                         tumbler.
@@ -529,7 +529,7 @@
 
                     <h3>3. Mug Keramik & Enamel Retro</h3>
                     <p>
-                        Klasik tidak pernah salah. <a href="kelebihan-mug-keramik.html"
+                        Klasik tidak pernah salah. <a href="kelebihan-mug-keramik"
                             style="color: var(--accent); font-weight: 600;">Mug keramik</a> dan cangkir enamel
                         menawarkan sentuhan personal yang
                         hangat. Sangat cocok untuk menemani waktu ngopi atau ngeteh di meja kerja maupun di rumah.
@@ -545,7 +545,7 @@
 
                     <h3>4. Botol Minum Aluminium (Sporty Style)</h3>
                     <p>
-                        Dirancang untuk jiwa petualang dan gaya hidup aktif. <a href="botol-minum-aluminium.html"
+                        Dirancang untuk jiwa petualang dan gaya hidup aktif. <a href="botol-minum-aluminium"
                             style="color: var(--accent); font-weight: 600;">Botol aluminium</a> memiliki karakteristik
                         sangat ringan namun kokoh. Dilengkapi dengan carabiner (pengait), botol ini mudah digantungkan
                         di tas ransel.
@@ -564,7 +564,7 @@
                     <p>
                         Ingin brand Anda diasosiasikan dengan gaya hidup trendy dan kekinian? Kami menyediakan varian
                         tumbler premium dengan desain yang terinspirasi dari brand global seperti <a
-                            href="corkcicle-style-tumbler.html"
+                            href="corkcicle-style-tumbler"
                             style="color: var(--accent); font-weight: 600;">Corkcicle</a> atau Starbucks namun dengan
                         harga yang bisa dicustom untuk korporat.
                     </p>
@@ -605,13 +605,13 @@
                         <h4 style="margin-top: 0; color: #9A3412; margin-bottom: 1rem;">Baca Juga:</h4>
                         <ul style="margin-bottom: 0; padding-left: 1.5rem;">
                             <li style="margin-bottom: 0.5rem;">
-                                <a href="tumbler-bambu-grafir.html"
+                                <a href="tumbler-bambu-grafir"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Tumbler Bambu Grafir: Pilihan Souvenir Eco-Friendly Paling Eksklusif
                                 </a>
                             </li>
                             <li>
-                                <a href="panduan-lengkap-seminar-kit.html"
+                                <a href="panduan-lengkap-seminar-kit"
                                     style="text-decoration: none; color: #EA580C; font-weight: 600;">
                                     Panduan Lengkap Memilih Seminar Kit: Tips Hemat Budget & Efektif
                                 </a>
@@ -725,11 +725,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Pusat%20Souvenir%20Tumbler%20Terlengkap%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol.html"
+                        <a href="https://wa.me/?text=Pusat%20Souvenir%20Tumbler%20Terlengkap%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-tumbler-botol"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -760,7 +760,7 @@
                             <h3 style="color: white; margin-bottom: 1rem; font-size: 1.5rem;">Cari Tumbler Murah?</h3>
                             <p style="margin-bottom: 1.5rem; opacity: 0.9; font-size: 0.95rem;">Cek koleksi Tumbler
                                 Insert Paper kami, mulai Rp 15.000-an.</p>
-                            <a href="tumbler-insert-paper.html" class="btn"
+                            <a href="tumbler-insert-paper" class="btn"
                                 style="background: white; color: #0f172a; width: 100%; justify-content: center; font-weight: 700;">
                                 <i class="fa-solid fa-mug-hot"></i> Lihat Detail
                             </a>
@@ -770,11 +770,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-bottle-water"></i> Katalog Drinkware</a></li>
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Eco
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Souvenir</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar</a></li>
                             </ul>
                         </div>
@@ -790,7 +790,7 @@
                                     alt="Tumbler Bambu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-bambu-grafir.html"
+                                            href="tumbler-bambu-grafir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Bambu Estetik & Unik</a></h4>
                                 </div>
@@ -803,7 +803,7 @@
                                     alt="Botol Sport">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="botol-sport-aluminium.html"
+                                            href="botol-sport-aluminium"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Botol
                                             Sport Aluminium untuk Outdoor</a></h4>
                                 </div>
@@ -839,21 +839,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -944,3 +944,5 @@
 </body>
 
 </html>
+
+
