--- a/speaker-bluetooth-custom-logo.html
+++ b/speaker-bluetooth-custom-logo.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/speaker-bluetooth-custom-logo.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/speaker-bluetooth-custom-logo">
     <title>Speaker Bluetooth Mini: Souvenir Unik untuk Klien Milenial | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Hadiah yang menyenangkan dan pasti dipakai. Suara jernih dengan logo perusahaan Anda yang menyala (Light up logo).">
     <meta property="og:image" content="assets/gadget-speaker.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/speaker-bluetooth-custom-logo.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/speaker-bluetooth-custom-logo">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -263,16 +263,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -287,9 +287,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Speaker Bluetooth</span>
             </nav>
@@ -386,7 +386,7 @@
 
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Perfect Pairing:</strong> Kombinasikan speaker dengan <a
-                            href="desk-accessories-custom.html"
+                            href="desk-accessories-custom"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Mousepad Custom &
                             Phone Holder</a> untuk menciptakan paket "Ultimate Desk Setup" bagi klien Anda.
                     </div>
@@ -394,7 +394,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Lengkapi gadget klien Anda dengan <a
-                            href="powerbank-custom-souvenir.html"
+                            href="powerbank-custom-souvenir"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Powerbank Real
                             Capacity</a> agar musik tidak berhenti.
                     </div>
@@ -445,7 +445,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Ingin souvenir yang lebih ramah lingkungan? Cek koleksi <a
-                            href="category-eco.html"
+                            href="category-eco"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Souvenir Eco-Green</a>
                         berbahan bambu dan jerami.
                     </div>
@@ -547,12 +547,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Ide%20souvenir%20unik%20speaker%20bluetooth%20logo%20menyala%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo.html"
+                        <a href="https://wa.me/?text=Ide%20souvenir%20unik%20speaker%20bluetooth%20logo%20menyala%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fspeaker-bluetooth-custom-logo"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -593,11 +593,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-gadget.html"><i
+                                <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-headphones"></i> Speaker & Audio</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-gift"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Premium Gifts</a></li>
-                                <li class="cat-item"><a href="category-lifestyle.html"><i
+                                <li class="cat-item"><a href="category-lifestyle"><i
                                             class="fa-solid fa-umbrella-beach"></i>
                                         Lifestyle Souvenir</a></li>
                             </ul>
@@ -614,7 +614,7 @@
                                     alt="Flashdisk Kartu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="flashdisk-kartu-promosi.html"
+                                            href="flashdisk-kartu-promosi"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Flashdisk
                                             Kartu Digital Multifungsi</a></h4>
                                     <span
@@ -629,7 +629,7 @@
                                     alt="Powerbank">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="powerbank-custom-souvenir.html"
+                                            href="powerbank-custom-souvenir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tips
                                             Memilih Powerbank Custom Aman</a></h4>
                                 </div>
@@ -642,7 +642,7 @@
                                     alt="Eco Bamboo">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tumbler-bambu-grafir.html"
+                                            href="tumbler-bambu-grafir"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tumbler
                                             Bambu Estetik & Unik</a></h4>
                                 </div>
@@ -677,21 +677,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -782,3 +782,5 @@
 </body>
 
 </html>
+
+
