--- a/tas-belacu-goni.html
+++ b/tas-belacu-goni.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tas-belacu-goni.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tas-belacu-goni">
     <title>Tas Belacu & Karung Goni Custom: Souvenir Etnik yang Artsy | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Kembali ke alam dengan Tas Belacu krem yang klasik atau Tas Goni yang bertekstur kuat. Solusi packaging yang bisa dipakai berulang kali.">
     <meta property="og:image" content="assets/tas-belacu-goni.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tas-belacu-goni.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tas-belacu-goni">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -276,16 +276,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -300,9 +300,9 @@
     <div style="background: #FDF5E6; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #8B4513;">
-                <a href="index.html" style="text-decoration: none; color: #8B4513;">Home</a>
+                <a href="./" style="text-decoration: none; color: #8B4513;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #8B4513;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #8B4513;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #A0522D; font-weight: 700;">Tas Belacu & Goni</span>
             </nav>
@@ -390,9 +390,9 @@
                         <h4 style="margin-top: 0; color: #5D4037; margin-bottom: 1rem;">Isi dengan Sustainable Items:
                         </h4>
                         <p style="margin-bottom: 0;">
-                            Tas Goni sangat cocok diisi dengan <a href="tumbler-bambu-grafir.html"
+                            Tas Goni sangat cocok diisi dengan <a href="tumbler-bambu-grafir"
                                 style="text-decoration: underline; color: #8B4513; font-weight: 700;">Tumbler Bambu</a>
-                            atau <a href="alat-makan-kayu.html"
+                            atau <a href="alat-makan-kayu"
                                 style="text-decoration: underline; color: #8B4513; font-weight: 700;">Set Alat Makan
                                 Kayu</a>. Kombinasi yang sempurna untuk gift set bertema alam.
                         </p>
@@ -532,11 +532,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inspirasi%20Packaging%20Unik%20Belacu%20Goni%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni.html"
+                        <a href="https://wa.me/?text=Inspirasi%20Packaging%20Unik%20Belacu%20Goni%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-belacu-goni"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -577,11 +577,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-eco.html"><i class="fa-solid fa-leaf"></i> Eco
+                                <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag.html"><i
+                                <li class="cat-item"><a href="tas-goodie-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Goodie Bag</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i class="fa-solid fa-box"></i>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-box"></i>
                                         Seminar Kit</a></li>
                             </ul>
                         </div>
@@ -597,13 +597,13 @@
                                     alt="Sustainable">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Ramah Lingkungan</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Koleksi lengkap ESG.</p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: #8B4513; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -614,13 +614,13 @@
                                     alt="Goodie Bag">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-goodie-bag.html"
+                                            href="tas-goodie-bag"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Macam-Macam
                                             Bahan Tas</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Panduan bahan tas.</p>
-                                    <a href="tas-goodie-bag.html"
+                                    <a href="tas-goodie-bag"
                                         style="font-size: 0.8rem; color: #8B4513; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -631,13 +631,13 @@
                                     alt="Alat Makan Kayu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="alat-makan-kayu.html"
+                                            href="alat-makan-kayu"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Set
                                             Alat Makan Kayu</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Isian tas yang pas.</p>
-                                    <a href="alat-makan-kayu.html"
+                                    <a href="alat-makan-kayu"
                                         style="font-size: 0.8rem; color: #8B4513; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -671,21 +671,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -776,3 +776,5 @@
 </body>
 
 </html>
+
+
