--- a/tas-seminar-laptop-vs-ransel.html
+++ b/tas-seminar-laptop-vs-ransel.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tas-seminar-laptop-vs-ransel.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tas-seminar-laptop-vs-ransel">
     <title>Tas Laptop vs Ransel: Mana Tas Seminar Paling Efektif? | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Panduan memilih jenis tas seminar yang tepat. Apakah peserta Anda lebih butuh formalitas tas jinjing atau mobilitas ransel?">
     <meta property="og:image" content="assets/lifestyle-bags.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tas-seminar-laptop-vs-ransel.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tas-seminar-laptop-vs-ransel">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -263,16 +263,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -287,9 +287,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Tas Laptop vs Ransel</span>
             </nav>
@@ -386,7 +386,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Ingin melengkapi tas dengan isi yang bermanfaat? Simak <a
-                            href="panduan-lengkap-seminar-kit.html"
+                            href="panduan-lengkap-seminar-kit"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Panduan Lengkap
                             Memilih
                             Seminar Kit</a>.
@@ -516,7 +516,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Jangan lupa isian tas juga penting! Cek <a
-                            href="paket-seminar-kit-basic.html"
+                            href="paket-seminar-kit-basic"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Ide Paket Seminar Kit
                             Basic di Bawah 50 Ribu</a>.
                     </div>
@@ -583,12 +583,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Baca%20artikel%20perbandingan%20tas%20seminar%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel.html"
+                        <a href="https://wa.me/?text=Baca%20artikel%20perbandingan%20tas%20seminar%20disini%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftas-seminar-laptop-vs-ransel"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -629,11 +629,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set Premium</a></li>
-                                <li class="cat-item"><a href="category-lifestyle.html"><i class="fa-solid fa-shirt"></i>
+                                <li class="cat-item"><a href="category-lifestyle"><i class="fa-solid fa-shirt"></i>
                                         Tas & Apparel</a></li>
                             </ul>
                         </div>
@@ -649,7 +649,7 @@
                                     alt="Paket Basic">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="paket-seminar-kit-basic.html"
+                                            href="paket-seminar-kit-basic"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Ide
                                             Paket Seminar Kit Hemat < 50 Ribu</a>
                                     </h4>
@@ -665,7 +665,7 @@
                                     alt="Panduan Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="panduan-lengkap-seminar-kit.html"
+                                            href="panduan-lengkap-seminar-kit"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Panduan
                                             Lengkap Memilih Seminar Kit</a></h4>
                                 </div>
@@ -678,7 +678,7 @@
                                     alt="Tren 2026">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir Kantor 2026</a></h4>
                                 </div>
@@ -713,21 +713,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -818,3 +818,5 @@
 </body>
 
 </html>
+
+
