--- a/tips-memilih-paket-seminar.html
+++ b/tips-memilih-paket-seminar.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tips-memilih-paket-seminar.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tips-memilih-paket-seminar">
     <title>Tips Memilih Paket Seminar Kit Efektif & Hemat Budget | Panduan 2026</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -17,7 +17,7 @@
     <meta property="og:description"
         content="Jangan sampai seminar kit Anda berakhir di tempat sampah! Simak strategi memilih item yang fungsional, elegan, dan tetap ramah di kantong.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tips-memilih-paket-seminar.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tips-memilih-paket-seminar">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -283,16 +283,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -307,9 +307,9 @@
     <div style="background: #F1F5F9; padding: 2rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B; margin-bottom: 0.5rem;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="category-seminar.html" style="text-decoration: none; color: #64748B;">Seminar Kit</a>
+                <a href="category-seminar" style="text-decoration: none; color: #64748B;">Seminar Kit</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Tips Memilih Paket</span>
             </nav>
@@ -409,7 +409,7 @@
                             <div
                                 style="background: #FFF7ED; padding: 1.5rem; border-left: 4px solid #F97316; margin: 2rem 0;">
                                 <strong>Ingin Upgrade ke Tumbler Premium?</strong> Baca ulasan kami tentang <a
-                                    href="tumbler-stainless-vacuum.html"
+                                    href="tumbler-stainless-vacuum"
                                     style="color: #F97316; font-weight: 700; text-decoration: underline;">Tumbler
                                     Stainless Vacuum</a> yang bisa menahan panas hingga 12 jam, cocok untuk tamu VIP.
                             </div>
@@ -465,7 +465,7 @@
                             <!-- Contextual Bridge Link 2 -->
                             <div
                                 style="background: #F0F9FF; padding: 1.5rem; border-left: 4px solid #0EA5E9; margin: 2rem 0;">
-                                <strong>Baca Juga:</strong> <a href="rekomendasi-souvenir-kantor-2026.html"
+                                <strong>Baca Juga:</strong> <a href="rekomendasi-souvenir-kantor-2026"
                                     style="color: #0EA5E9; font-weight: 700; text-decoration: underline;">Tren Souvenir
                                     Kantor 2026</a> untuk melihat apa yang sedang populer tahun depan.
                             </div>
@@ -530,16 +530,16 @@
 
                             <!-- Share Buttons -->
                             <div class="share-container">
-                                <a href="https://wa.me/?text=5%20Tips%20Memilih%20Paket%20Seminar%20Kit%20Efektif%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://wa.me/?text=5%20Tips%20Memilih%20Paket%20Seminar%20Kit%20Efektif%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar"
                                     class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share
                                     ke WhatsApp</a>
-                                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar"
                                     class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i>
                                     Facebook</a>
-                                <a href="https://twitter.com/intent/tweet?text=Tips%20Memilih%20Seminar%20Kit&url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://twitter.com/intent/tweet?text=Tips%20Memilih%20Seminar%20Kit&url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar"
                                     class="share-btn bg-tw" target="_blank"><i class="fa-brands fa-twitter"></i>
                                     Twitter</a>
-                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar"
                                     class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                                     LinkedIn</a>
                             </div>
@@ -589,13 +589,13 @@
                                 <img src="assets/cat-seminar.png" alt="Katalog Seminar" loading="lazy"
                                     style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; margin-bottom: 0.75rem;">
                                 <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem; line-height: 1.3;"><a
-                                        href="category-seminar.html"
+                                        href="category-seminar"
                                         style="text-decoration: none; color: var(--foreground);">Katalog Paket Seminar
                                         Kit Termurah</a></h4>
                                 <p
                                     style="font-size: 0.9rem; color: var(--muted-foreground); margin-bottom: 0.75rem; line-height: 1.5;">
                                     Lihat daftar harga paket seminar kit mulai dari Rp 15.000-an.</p>
-                                <a href="category-seminar.html"
+                                <a href="category-seminar"
                                     style="color: var(--accent); font-weight: 700; font-size: 0.9rem; text-decoration: none;">Lihat
                                     Katalog <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
@@ -605,13 +605,13 @@
                                 <img src="assets/drinkware-thermos.png" alt="Tumbler" loading="lazy"
                                     style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; margin-bottom: 0.75rem;">
                                 <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem; line-height: 1.3;"><a
-                                        href="tumbler-stainless-vacuum.html"
+                                        href="tumbler-stainless-vacuum"
                                         style="text-decoration: none; color: var(--foreground);">Review Tumbler
                                         Stainless Vacuum</a></h4>
                                 <p
                                     style="font-size: 0.9rem; color: var(--muted-foreground); margin-bottom: 0.75rem; line-height: 1.5;">
                                     Kenapa tumbler ini jadi favorit souvenir korporat premium.</p>
-                                <a href="tumbler-stainless-vacuum.html"
+                                <a href="tumbler-stainless-vacuum"
                                     style="color: var(--accent); font-weight: 700; font-size: 0.9rem; text-decoration: none;">Baca
                                     Review <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
@@ -621,13 +621,13 @@
                                 <img src="assets/executive-leather.png" alt="Gift Set" loading="lazy"
                                     style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; margin-bottom: 0.75rem;">
                                 <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem; line-height: 1.3;"><a
-                                        href="rekomendasi-souvenir-kantor-2026.html"
+                                        href="rekomendasi-souvenir-kantor-2026"
                                         style="text-decoration: none; color: var(--foreground);">Ide Souvenir Kantor
                                         2026</a></h4>
                                 <p
                                     style="font-size: 0.9rem; color: var(--muted-foreground); margin-bottom: 0.75rem; line-height: 1.5;">
                                     Intip tren merchandise terbaru yang akan hits tahun depan.</p>
-                                <a href="rekomendasi-souvenir-kantor-2026.html"
+                                <a href="rekomendasi-souvenir-kantor-2026"
                                     style="color: var(--accent); font-weight: 700; font-size: 0.9rem; text-decoration: none;">Cari
                                     Inspirasi <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
@@ -662,21 +662,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -766,3 +766,5 @@
 </body>
 
 </html>
+
+
