--- a/tumbler-insert-paper.html
+++ b/tumbler-insert-paper.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-insert-paper.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-insert-paper">
     <title>Tumbler Insert Paper: Low Budget & Pengerjaan Kilat 1 Hari | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Butuh souvenir cepat dengan full color printing? Tumbler insert paper adalah jawabannya. Pengerjaan bisa 1 hari!">
     <meta property="og:image" content="assets/express-tumbler.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-insert-paper.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-insert-paper">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -261,16 +261,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -285,9 +285,9 @@
     <div style="background: #F1F5F9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: var(--muted-foreground);">
-                <a href="index.html" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
+                <a href="./" style="text-decoration: none; color: var(--muted-foreground);">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
+                <a href="blog" style="text-decoration: none; color: var(--muted-foreground);">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Tumbler Insert Paper</span>
             </nav>
@@ -395,7 +395,7 @@
                     <!-- Contextual Link 1 -->
                     <div style="background: #FFFBEB; padding: 1.5rem; border-left: 4px solid #F59E0B; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Butuh souvenir ready stock lainnya tanpa cetak? Cek katalog <a
-                            href="category-express.html"
+                            href="category-express"
                             style="color: #D97706; font-weight: 700; text-decoration: underline;">Souvenir Express Siap
                             Kirim</a> kami.
                     </div>
@@ -535,7 +535,7 @@
                     <!-- Contextual Link 2 -->
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
                         <strong>Baca Juga:</strong> Jika budget Anda lebih longgar dan mengutamakan ketahanan suhu,
-                        pertimbangkan <a href="tumbler-stainless-vacuum.html"
+                        pertimbangkan <a href="tumbler-stainless-vacuum"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Tumbler Stainless
                             Vacuum Premium</a>.
                     </div>
@@ -593,7 +593,7 @@
                                     Apakah bisa untuk air panas? <i class="fa-solid fa-chevron-down"></i>
                                 </div>
                                 <div class="faq-body">
-                                    <p>Plastik PP5 tahan panas hingga ~100°C, jadi aman diisi air hangat/panas
+                                    <p>Plastik PP5 tahan panas hingga ~100Â°C, jadi aman diisi air hangat/panas
                                         dispenser. Tapi karena ini dinding plastik biasa (bukan termos vacuum), panas
                                         akan merambat ke luar. Hati-hati saat memegang.</p>
                                 </div>
@@ -603,12 +603,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Info%20cetak%20tumblr%20kilat%20insert%20paper%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper.html"
+                        <a href="https://wa.me/?text=Info%20cetak%20tumblr%20kilat%20insert%20paper%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-insert-paper"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -649,11 +649,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-express.html"><i class="fa-solid fa-bolt"></i>
+                                <li class="cat-item"><a href="category-express"><i class="fa-solid fa-bolt"></i>
                                         Souvenir Kilat / Ready Stock</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i>
                                         Aneka Botol & Mug</a></li>
                             </ul>
@@ -670,7 +670,7 @@
                                     alt="Botol Aluminium">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="botol-sport-aluminium.html"
+                                            href="botol-sport-aluminium"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Botol
                                             Sport Aluminium untuk Event Outdoor</a></h4>
                                     <span
@@ -685,7 +685,7 @@
                                     alt="Mug Keramik">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="kelebihan-mug-keramik.html"
+                                            href="kelebihan-mug-keramik"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Review
                                             Mug Keramik Custom</a></h4>
                                 </div>
@@ -698,7 +698,7 @@
                                     alt="Paket Seminar">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="blog/tips-memilih-paket-seminar.html"
+                                            href="blog/tips-memilih-paket-seminar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">5
                                             Tips Memilih Paket Seminar Kit</a></h4>
                                 </div>
@@ -733,21 +733,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -838,3 +838,5 @@
 </body>
 
 </html>
+
+
