--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-stainless-vacuum.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-stainless-vacuum">
     <title>Tumbler Stainless Steel Vacuum Custom - Souvenir Thermos Premium Tahan Panas</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cetak logo perusahaan di tumbler stainless premium (Thermos). Tahan panas 12 jam, anti bocor, dan elegan.">
     <meta property="og:image" content="assets/drinkware-thermos.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-stainless-vacuum.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-stainless-vacuum">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (FAQ & Product) -->
@@ -50,7 +50,7 @@
         "name": "Berapa lama tumbler vacuum ini menahan panas?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Dengan teknologi Double Wall Vacuum Insulation, tumbler kami dapat menahan suhu air panas (awal 95°C) menjadi hangat (40°C-50°C) selama kurang lebih 8 hingga 12 jam, tergantung frekuensi buka tutup."
+          "text": "Dengan teknologi Double Wall Vacuum Insulation, tumbler kami dapat menahan suhu air panas (awal 95Â°C) menjadi hangat (40Â°C-50Â°C) selama kurang lebih 8 hingga 12 jam, tergantung frekuensi buka tutup."
         }
       }, {
         "@type": "Question",
@@ -308,16 +308,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -332,9 +332,9 @@
     <div style="background: #F1F5F9; padding: 2rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B; margin-bottom: 0.5rem;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="souvenir-tumbler-botol.html" style="text-decoration: none; color: #64748B;">Drinkware</a>
+                <a href="souvenir-tumbler-botol" style="text-decoration: none; color: #64748B;">Drinkware</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: var(--accent); font-weight: 700;">Stainless Vacuum</span>
             </nav>
@@ -367,7 +367,7 @@
                         durabilitas tinggi (tahan banting), dan gengsi (kesan mewah) dalam satu paket.
                     </p>
 
-                    <p>Berbeda dengan botol plastik biasa, tumbler vacuum—atau sering disebut <em>Thermos</em>—memiliki
+                    <p>Berbeda dengan botol plastik biasa, tumbler vacuumâ€”atau sering disebut <em>Thermos</em>â€”memiliki
                         teknologi isolasi yang canggih. Bukan sekadar wadah air, ia adalah alat yang menjaga kenyamanan
                         klien Anda dengan memastikan kopi pagi mereka tetap panas hingga jam makan siang. Artikel ini
                         akan mengupas tuntas mengapa tumbler stainless vacuum adalah investasi terbaik untuk branding
@@ -441,7 +441,7 @@
                     <!-- Contextual Bridge Link 1 -->
                     <div style="background: #FFF7ED; padding: 1.5rem; border-left: 4px solid #F97316; margin: 2rem 0;">
                         <strong>Bandingkan dengan Plastik:</strong> Jika budget Anda terbatas dan untuk event massal
-                        seperti Fun Run, mungkin <a href="category-drinkware.html"
+                        seperti Fun Run, mungkin <a href="category-drinkware"
                             style="color: #F97316; font-weight: 700; text-decoration: underline;">Tumbler Plastik
                             Promosi</a> lebih cocok daripada Stainless Vacuum ini.
                     </div>
@@ -525,7 +525,7 @@
 
                     <!-- Contextual Bridge Link 2 -->
                     <div style="background: #F0F9FF; padding: 1.5rem; border-left: 4px solid #0EA5E9; margin: 2rem 0;">
-                        <strong>Baca Juga:</strong> <a href="rekomendasi-souvenir-kantor-2026.html"
+                        <strong>Baca Juga:</strong> <a href="rekomendasi-souvenir-kantor-2026"
                             style="color: #0EA5E9; font-weight: 700; text-decoration: underline;">Rekomendasi Souvenir
                             Kantor 2026: Tren & Ide Produk Paling Dicari</a> untuk inspirasi hadiah akhir tahun lainnya.
                     </div>
@@ -554,7 +554,7 @@
                                     Berapa lama tumbler ini menahan panas? <i class="fa-solid fa-chevron-down"></i>
                                 </div>
                                 <div class="faq-body">
-                                    <p>Tumbler vacuum kami efektif menahan panas (90°C -> 40°C) selama 8-12 jam dalam
+                                    <p>Tumbler vacuum kami efektif menahan panas (90Â°C -> 40Â°C) selama 8-12 jam dalam
                                         kondisi tertutup rapat. Untuk air dingin/es, bisa bertahan hingga 24 jam karena
                                         isolasi yang sangat baik.</p>
                                 </div>
@@ -593,14 +593,14 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Tumbler%20Stainless%20Vacuum%20Premium%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://wa.me/?text=Tumbler%20Stainless%20Vacuum%20Premium%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://twitter.com/intent/tweet?text=Tumbler%20Stainless%20Vacuum%20Premium&url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://twitter.com/intent/tweet?text=Tumbler%20Stainless%20Vacuum%20Premium&url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum"
                             class="share-btn bg-tw" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -646,11 +646,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Sering Dibeli Bersama</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware.html"><i
+                                <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-mug-hot"></i> Mug Keramik Custom</a></li>
-                                <li class="cat-item"><a href="category-seminar.html"><i
+                                <li class="cat-item"><a href="category-seminar"><i
                                             class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive.html"><i class="fa-solid fa-crown"></i>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set Premium</a></li>
                             </ul>
                         </div>
@@ -666,7 +666,7 @@
                                     alt="Tumbler Custom">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-tumbler-botol.html"
+                                            href="souvenir-tumbler-botol"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Pusat
                                             Souvenir Tumbler Custom Logo</a></h4>
                                     <span
@@ -681,7 +681,7 @@
                                     alt="Botol Sport">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="botol-sport-aluminium.html"
+                                            href="botol-sport-aluminium"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Botol
                                             Aluminium Sport untuk Outdoor</a></h4>
                                 </div>
@@ -694,7 +694,7 @@
                                     alt="Tren 2026">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="rekomendasi-souvenir-kantor-2026.html"
+                                            href="rekomendasi-souvenir-kantor-2026"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tren
                                             Souvenir Kantor 2026</a></h4>
                                 </div>
@@ -735,22 +735,22 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
 
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
 
@@ -841,3 +841,5 @@
 </body>
 
 </html>
+
+
