--- a/vendor-souvenir-kantor-jogja.html
+++ b/vendor-souvenir-kantor-jogja.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja">
     <title>Vendor Souvenir Kantor Jogja: Merchandise Unik & Berbudaya | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cari souvenir dengan sentuhan budaya Jogja? Temukan koleksi merchandise etnik dan seminar kit kreatif di sini.">
     <meta property="og:image" content="assets/vendor-souvenir-jogja.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -273,16 +273,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -297,9 +297,9 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #b45309; font-weight: 700;">Vendor Jogja</span>
             </nav>
@@ -382,7 +382,7 @@
                         Berikut adalah item yang paling banyak dicari oleh instansi dan wisatawan di Jogja:
                     </p>
                     <ul>
-                        <li><a href="tas-belacu-goni.html" style="font-weight:700; color:#b45309;">Tote Bag Blacu &
+                        <li><a href="tas-belacu-goni" style="font-weight:700; color:#b45309;">Tote Bag Blacu &
                                 Goni:</a> Kesan vintage dan natural sangat digemari di sini. Sering dijadikan tas
                             belanja atau goodie bag pameran seni.</li>
                         <li><strong>Tumbler Bambu:</strong> Perpaduan stainless steel dengan lapisan bambu asli. Sering
@@ -415,7 +415,7 @@
 
                     <h2>Kesimpulan</h2>
                     <p>
-                        Mencari <a href="vendor-souvenir-kantor-profesional.html"
+                        Mencari <a href="vendor-souvenir-kantor-profesional"
                             style="font-weight:700; color:#b45309;">Vendor Souvenir Kantor</a> di Jogja itu seperti
                         mencari gudeg yang pas; harus yang legit dan ngangenin. Maroon Souvenir siap memberikan
                         pengalaman pemesanan yang menyenangkan, profesional, dan penuh nilai budaya.
@@ -512,11 +512,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Jogja%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Jogja%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-jogja"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -557,11 +557,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Area</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta"><i
                                             class="fa-solid fa-building"></i> Vendor Jakarta</a></li>
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-surabaya.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-surabaya"><i
                                             class="fa-solid fa-city"></i> Vendor Surabaya</a></li>
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-malang.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-malang"><i
                                             class="fa-solid fa-mountain"></i> Vendor Malang</a></li>
                             </ul>
                         </div>
@@ -577,12 +577,12 @@
                                     alt="Tas Belacu">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="tas-belacu-goni.html"
+                                            href="tas-belacu-goni"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Tas
                                             Belacu & Goni</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tekstur Klasik.</p>
-                                    <a href="tas-belacu-goni.html"
-                                        style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Lihat Model »</a>
+                                    <a href="tas-belacu-goni"
+                                        style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Lihat Model Â»</a>
                                 </div>
                             </div>
 
@@ -593,13 +593,13 @@
                                     alt="Vendor Malang">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="vendor-souvenir-kantor-malang.html"
+                                            href="vendor-souvenir-kantor-malang"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Vendor
                                             Souvenir Malang</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Tetangga Jogja.</p>
-                                    <a href="vendor-souvenir-kantor-malang.html"
+                                    <a href="vendor-souvenir-kantor-malang"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -610,13 +610,13 @@
                                     alt="Eco">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-ramah-lingkungan.html"
+                                            href="souvenir-ramah-lingkungan"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Konsep
                                             Eco-Friendly</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Pilihan Berkelanjutan.</p>
-                                    <a href="souvenir-ramah-lingkungan.html"
+                                    <a href="souvenir-ramah-lingkungan"
                                         style="font-size: 0.8rem; color: #b45309; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -650,21 +650,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -755,3 +755,5 @@
 </body>
 
 </html>
+
+
