--- a/vendor-souvenir-kantor-surabaya.html
+++ b/vendor-souvenir-kantor-surabaya.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya">
     <title>Vendor Souvenir Kantor Surabaya: Pabrik Merchandise Terpercaya | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cari vendor souvenir di Surabaya? Maroon Souvenir hadir dengan workshop lokal untuk layanan lebih cepat dan efisien.">
     <meta property="og:image" content="assets/vendor-souvenir-surabaya.png">
-    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -274,16 +274,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
+            <a href="./" class="logo">
                 <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
-                <a href="index.html">Beranda</a>
-                <a href="about.html">Tentang</a>
-                <a href="products.html">Produk</a>
-                <a href="packages.html">Paket</a>
-                <a href="blog.html" class="text-accent" style="font-weight: 700;">Blog</a>
+                <a href="./">Beranda</a>
+                <a href="about">Tentang</a>
+                <a href="products">Produk</a>
+                <a href="packages">Paket</a>
+                <a href="blog" class="text-accent" style="font-weight: 700;">Blog</a>
                 <a href="https://wa.me/62895639068080" class="btn btn-primary">
                     Chat Admin <i class="fa-brands fa-whatsapp"></i>
                 </a>
@@ -298,9 +298,9 @@
     <div style="background: #f1f5f9; padding: 2.5rem 0 1.5rem; margin-top: 60px;">
         <div class="container">
             <nav style="font-size: 0.85rem; color: #64748B;">
-                <a href="index.html" style="text-decoration: none; color: #64748B;">Home</a>
+                <a href="./" style="text-decoration: none; color: #64748B;">Home</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="blog.html" style="text-decoration: none; color: #64748B;">Blog</a>
+                <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #0d9488; font-weight: 700;">Vendor Surabaya</span>
             </nav>
@@ -407,7 +407,7 @@
                         tercermin dari produk terlaris kami:
                     </p>
                     <ul>
-                        <li><a href="category-seminar.html" style="font-weight:700; color:#0d9488;">Seminar Kit
+                        <li><a href="category-seminar" style="font-weight:700; color:#0d9488;">Seminar Kit
                                 Hemat:</a> Tas Spunbond + Blocknote + Pulpen. Paket andalan untuk seminar, workshop, dan
                             pelatihan massal di hotel/universitas.</li>
                         <li><strong>Payung Promosi:</strong> Cuaca Surabaya yang panas terik atau hujan deras membuat
@@ -419,9 +419,9 @@
                     <h2>4. Hubungan dengan Jaringan Nasional</h2>
                     <p>
                         Maroon Souvenir bukan pemain lokal biasa. Kami terintegrasi dengan jaringan kami di <a
-                            href="vendor-souvenir-kantor-jakarta.html"
+                            href="vendor-souvenir-kantor-jakarta"
                             style="text-decoration: underline; color: #0d9488; font-weight: 700;">Jakarta</a> dan <a
-                            href="vendor-souvenir-kantor-malang.html"
+                            href="vendor-souvenir-kantor-malang"
                             style="text-decoration: underline; color: #0d9488; font-weight: 700;">Malang</a>.
                     </p>
                     <p>
@@ -432,7 +432,7 @@
 
                     <h2>Kesimpulan</h2>
                     <p>
-                        Untuk kebutuhan <a href="vendor-souvenir-kantor-profesional.html"
+                        Untuk kebutuhan <a href="vendor-souvenir-kantor-profesional"
                             style="font-weight:700; color:#0d9488;">Souvenir Kantor Profesional</a> di Surabaya, Maroon
                         Souvenir menawarkan kombinasi sempurna antara kualitas global dan kearifan lokal. Hemat biaya,
                         cepat sampai, dan terpercaya.
@@ -529,11 +529,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Kantor%20Surabaya%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Vendor%20Souvenir%20Kantor%20Surabaya%20Terpercaya%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fvendor-souvenir-kantor-surabaya"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -574,11 +574,11 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Jaringan Kami</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-jakarta"><i
                                             class="fa-solid fa-building"></i> Vendor Jakarta</a></li>
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-malang.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-malang"><i
                                             class="fa-solid fa-mountain"></i> Vendor Malang</a></li>
-                                <li class="cat-item"><a href="vendor-souvenir-kantor-profesional.html"><i
+                                <li class="cat-item"><a href="vendor-souvenir-kantor-profesional"><i
                                             class="fa-solid fa-star"></i> Tips Profesional</a></li>
                             </ul>
                         </div>
@@ -594,12 +594,12 @@
                                     alt="Seminar Kit">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="category-seminar.html"
+                                            href="category-seminar"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Paket
                                             Seminar Kit Murah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Best Seller Surabaya.</p>
-                                    <a href="category-seminar.html"
-                                        style="font-size: 0.8rem; color: #0d9488; font-weight: 600;">Lihat Paket »</a>
+                                    <a href="category-seminar"
+                                        style="font-size: 0.8rem; color: #0d9488; font-weight: 600;">Lihat Paket Â»</a>
                                 </div>
                             </div>
 
@@ -610,13 +610,13 @@
                                     alt="Vendor Jakarta">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="vendor-souvenir-kantor-jakarta.html"
+                                            href="vendor-souvenir-kantor-jakarta"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Vendor
                                             Souvenir Jakarta</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Layanan Ibu Kota.</p>
-                                    <a href="vendor-souvenir-kantor-jakarta.html"
+                                    <a href="vendor-souvenir-kantor-jakarta"
                                         style="font-size: 0.8rem; color: #0d9488; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -628,13 +628,13 @@
                                     alt="Gadget">
                                 <div>
                                     <h4 style="font-size: 0.95rem; line-height: 1.3; margin-bottom: 0.25rem;"><a
-                                            href="souvenir-gadget-elektronik.html"
+                                            href="souvenir-gadget-elektronik"
                                             style="text-decoration: none; color: var(--foreground); transition: color 0.2s;">Souvenir
                                             Gadget Mewah</a></h4>
                                     <p style="font-size: 0.8rem; color: #64748B; margin:0;">Teknologi Terbaru.</p>
-                                    <a href="souvenir-gadget-elektronik.html"
+                                    <a href="souvenir-gadget-elektronik"
                                         style="font-size: 0.8rem; color: #0d9488; font-weight: 600;">Baca Selengkapnya
-                                        »</a>
+                                        Â»</a>
                                 </div>
                             </div>
 
@@ -668,21 +668,21 @@
             <div>
                 <h4>Menu</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="index.html">Beranda</a></li>
-                    <li><a href="about.html">Tentang</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="packages.html">Paket</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="./">Beranda</a></li>
+                    <li><a href="about">Tentang</a></li>
+                    <li><a href="products">Produk</a></li>
+                    <li><a href="packages">Paket</a></li>
+                    <li><a href="blog">Blog</a></li>
                 </ul>
             </div>
             <div>
                 <h4>Produk Populer</h4>
                 <ul style="opacity: 0.8;">
-                    <li><a href="category-seminar.html">Seminar Kit Murah</a></li>
-                    <li><a href="category-executive.html">Executive Gift Set</a></li>
-                    <li><a href="category-express.html">Express / Ready Stock</a></li>
-                    <li><a href="category-drinkware.html">Tumbler Stainless</a></li>
-                    <li><a href="category-eco.html">Souvenir Eco-Green</a></li>
+                    <li><a href="category-seminar">Seminar Kit Murah</a></li>
+                    <li><a href="category-executive">Executive Gift Set</a></li>
+                    <li><a href="category-express">Express / Ready Stock</a></li>
+                    <li><a href="category-drinkware">Tumbler Stainless</a></li>
+                    <li><a href="category-eco">Souvenir Eco-Green</a></li>
                 </ul>
             </div>
             <div>
@@ -773,3 +773,5 @@
 </body>
 
 </html>
+
+
